--- a/poetry/古诗十九首.md
+++ b/poetry/古诗十九首.md
@@ -1,5 +1,5 @@
-# 行行重行行
-## 两汉：佚名
+## 《行行重行行》
+### 两汉：佚名
 ```
 行行重行行，与君生别离。
 相去万余里，各在天一涯。
@@ -10,9 +10,9 @@
 思君令人老，岁月忽已晚。
 弃捐勿复道，努力加餐饭。
 ```
-
-# 青青河畔草
-## 两汉：佚名
+---
+## 《青青河畔草》
+### 两汉：佚名
 ```
 青青河畔草，郁郁园中柳。
 盈盈楼上女，皎皎当窗牖。
