--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -1,16 +1,108 @@
-# 离思五首·其四
-## 唐代：元稹
+## 《离思五首·其四》
+### 唐代：元稹
 ```
 曾经沧海难为水，除却巫山不是云。
 取次花丛懒回顾，半缘修道半缘君。
 ```
-
-# 南歌子词二首 / 新添声杨柳枝词
-## 唐代：温庭筠
+---
+## 《南歌子词二首 / 新添声杨柳枝词》
+### 唐代：温庭筠
 ```
 一尺深红胜曲尘，天生旧物不如新。(胜曲尘 一作：蒙曲尘)
 合欢桃核终堪恨，里许元来别有人。
 
 井底点灯深烛伊，共郎长行莫围棋。
 玲珑骰子安红豆，入骨相思知不知。
+```
+---
+## 《春江花月夜》
+### 唐代：张若虚
+```
+春江潮水连海平，海上明月共潮生。
+滟滟随波千万里，何处春江无月明！
+江流宛转绕芳甸，月照花林皆似霰。
+空里流霜不觉飞，汀上白沙看不见。
+江天一色无纤尘，皎皎空中孤月轮。
+江畔何人初见月？江月何年初照人？
+人生代代无穷已，江月年年只相似。(只相似 一作：望相似)
+不知江月待何人，但见长江送流水。
+白云一片去悠悠，青枫浦上不胜愁。
+谁家今夜扁舟子？何处相思明月楼？
+可怜楼上月徘徊，应照离人妆镜台。
+玉户帘中卷不去，捣衣砧上拂还来。
+此时相望不相闻，愿逐月华流照君。
+鸿雁长飞光不度，鱼龙潜跃水成文。
+昨夜闲潭梦落花，可怜春半不还家。
+江水流春去欲尽，江潭落月复西斜。
+斜月沉沉藏海雾，碣石潇湘无限路。
+不知乘月几人归，落月摇情满江树。(落月 一作：落花)
+```
+---
+## 《题都城南庄》  
+### 唐代：崔护  
+```
+去年今日此门中，人面桃花相映红。
+人面不知何处去，桃花依旧笑春风。
+```
+---
+## 《无题·昨夜星辰昨夜风》
+### 唐代：李商隐
+```
+昨夜星辰昨夜风，画楼西畔桂堂东。
+身无彩凤双飞翼，心有灵犀一点通。
+隔座送钩春酒暖，分曹射覆蜡灯红。
+嗟余听鼓应官去，走马兰台类转蓬。
+```
+---
+## 《无题·相见时难别亦难》
+### 唐代：李商隐
+```
+相见时难别亦难，东风无力百花残。
+春蚕到死丝方尽，蜡炬成灰泪始干。
+晓镜但愁云鬓改，夜吟应觉月光寒。
+蓬山此去无多路，青鸟殷勤为探看。(蓬山 一作：蓬莱)
+```
+---
+## 《夜雨寄北》
+### 唐代：李商隐
+```
+君问归期未有期，巴山夜雨涨秋池。 
+何当共剪西窗烛，却话巴山夜雨时。
+```
+---
+## 《锦瑟》
+### 唐代：李商隐
+```
+锦瑟无端五十弦，一弦一柱思华年。
+庄生晓梦迷蝴蝶，望帝春心托杜鹃。
+沧海月明珠有泪，蓝田日暖玉生烟。
+此情可待成追忆，只是当时已惘然。
+```
+---
+## 《乐游原 / 登乐游原》
+### 唐代：李商隐
+```
+向晚意不适，驱车登古原。
+夕阳无限好，只是近黄昏。
+```
+---
+## 《贾生》
+### 唐代：李商隐
+```
+宣室求贤访逐臣，贾生才调更无伦。
+可怜夜半虚前席，不问苍生问鬼神。
+```
+---
+## 《金陵晚望》
+## 唐代：高蟾
+```
+曾伴浮云归晚翠，犹陪落日泛秋声。
+世间无限丹青手，一片伤心画不成。
+```
+---
+## 《不第后赋菊》
+### 唐代：黄巢
+```
+待到秋来九月八，我花开后百花杀。
+冲天香阵透长安，满城尽带黄金甲。
 ```
