--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -1,5 +1,5 @@
-# 江城子·乙卯正月二十日夜记梦
-## 宋代：苏轼
+## 《江城子·乙卯正月二十日夜记梦》
+### 宋代：苏轼
 ```
 十年生死两茫茫，不思量，自难忘。
 千里孤坟，无处话凄凉。
@@ -8,12 +8,190 @@
 相顾无言，惟有泪千行。
 料得年年肠断处，明月夜，短松冈。(肠断 一作：断肠)
 ```
-
-# 卜算子·我住长江头
-## 宋代：李之仪
+---
+## 《念奴娇·赤壁怀古》
+### 宋代：苏轼
+```
+大江东去，浪淘尽，千古风流人物。
+故垒西边，人道是，三国周郎赤壁。
+乱石穿空，惊涛拍岸，卷起千堆雪。
+江山如画，一时多少豪杰。
+遥想公瑾当年，小乔初嫁了，雄姿英发。
+羽扇纶巾，谈笑间，樯橹灰飞烟灭。(樯橹 一作：强虏)
+故国神游，多情应笑我，早生华发。
+人生如梦，一尊还酹江月。(人生 一作：人间；尊 通：樽)
+```
+---
+## 《水调歌头·明月几时有》
+### 宋代：苏轼
+> 丙辰中秋，欢饮达旦，大醉，作此篇，兼怀子由。
+```
+明月几时有？把酒问青天。
+不知天上宫阙，今夕是何年。
+我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
+起舞弄清影，何似在人间？(何似 一作：何时；又恐 一作：惟 / 唯恐)
+转朱阁，低绮户，照无眠。
+不应有恨，何事长向别时圆？
+人有悲欢离合，月有阴晴圆缺，此事古难全。
+但愿人长久，千里共婵娟。(长向 一作：偏向)
+```
+---
+## 《江城子·密州出猎》
+### 宋代：苏轼
+```
+老夫聊发少年狂，左牵黄，右擎苍，锦帽貂裘，千骑卷平冈。
+为报倾城随太守，亲射虎，看孙郎。
+酒酣胸胆尚开张，鬓微霜，又何妨！持节云中，何日遣冯唐？
+会挽雕弓如满月，西北望，射天狼。
+```
+---
+## 《卜算子·我住长江头》
+### 宋代：李之仪
 ```
 我住长江头，君住长江尾。
 日日思君不见君，共饮长江水。 
 此水几时休，此恨何时已。
 只愿君心似我心，定不负相思意。
+```
+---
+## 《临江仙·送钱穆父》
+### 宋代：苏轼
+```
+一别都门三改火，天涯踏尽红尘。
+依然一笑作春温。
+无波真古井，有节是秋筠。
+惆怅孤帆连夜发，送行淡月微云。
+尊前不用翠眉颦。
+人生如逆旅，我亦是行人。(尊 通：樽)
+```
+---
+## 《一剪梅·舟过吴江》
+### 宋代：蒋捷
+```
+一片春愁待酒浇。
+江上舟摇，楼上帘招。
+秋娘渡与泰娘桥，风又飘飘，雨又萧萧。（渡 一作：度。桥 一作：娇）
+何日归家洗客袍？
+银字笙调，心字香烧。
+流光容易把人抛，红了樱桃，绿了芭蕉。
+```
+---
+## 《鹊桥仙·纤云弄巧》
+### 宋代：秦观
+```
+纤云弄巧，飞星传恨，银汉迢迢暗度。
+金风玉露一相逢，便胜却人间无数。(度 通：渡)
+柔情似水，佳期如梦，忍顾鹊桥归路。
+两情若是久长时，又岂在朝朝暮暮。
+```
+---
+## 《扬州慢·淮左名都》
+### 宋代：姜夔
+> 淳熙丙申至日，予过维扬。夜雪初霁，荠麦弥望。入其城，则四顾萧条，寒水自碧，暮色渐起，戍角悲吟。予怀怆然，感慨今昔，因自度此曲。千岩老人以为有“黍离”之悲也。
+```
+淮左名都，竹西佳处，解鞍少驻初程。
+过春风十里。尽荠麦青青。
+自胡马窥江去后，废池乔木，犹厌言兵。
+渐黄昏，清角吹寒。
+都在空城。 
+杜郎俊赏，算而今、重到须惊。
+纵豆蔻词工，青楼梦好，难赋深情。
+二十四桥仍在，波心荡、冷月无声。
+念桥边红药，年年知为谁生。
+```
+---
+## 《玉楼春·尊前拟把归期说》
+### 宋代：欧阳修
+```
+尊前拟把归期说，欲语春容先惨咽。
+人生自是有情痴，此恨不关风与月。
+离歌且莫翻新阕，一曲能教肠寸结。
+直须看尽洛城花，始共春风容易别。
+```
+---
+## 《水调歌头·送章德茂大卿使虏》
+### 宋代：陈亮
+```
+不见南师久，漫说北群空。
+当场只手，毕竟还我万夫雄。
+自笑堂堂汉使，得似洋洋河水，依旧只流东？
+且复穹庐拜，会向藁街逢！
+尧之都，舜之壤，禹之封。
+于中应有，一个半个耻臣戎！
+万里腥膻如许，千古英灵安在，磅礴几时通？
+胡运何须问，赫日自当中！
+```
+---
+## 《一剪梅·红藕香残玉簟秋》
+### 宋代：李清照
+```
+红藕香残玉簟秋。
+轻解罗裳，独上兰舟。
+云中谁寄锦书来，雁字回时，月满西楼。
+花自飘零水自流。
+一种相思，两处闲愁。
+此情无计可消除，才下眉头，却上心头。
+```
+---
+## 《钗头凤·红酥手》
+### 宋代：陆游
+```
+红酥手，黄縢酒，满城春色宫墙柳。
+东风恶，欢情薄。一怀愁绪，几年离索。错、错、错。
+春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。
+山盟虽在，锦书难托。莫、莫、莫！
+```
+---
+## 《钗头凤·世情薄》
+### 宋代：唐婉
+```
+世情薄，人情恶，雨送黄昏花易落。
+晓风干，泪痕残。欲笺心事，独语斜阑。难，难，难！
+人成各，今非昨，病魂常似秋千索。
+角声寒，夜阑珊。怕人寻问，咽泪装欢。瞒，瞒，瞒！(装欢 通：妆)
+```
+---
+## 《苏幕遮·怀旧》
+### 宋代：范仲淹
+```
+碧云天，黄叶地。
+秋色连波，波上寒烟翠。
+山映斜阳天接水。芳草无情，更在斜阳外。
+黯乡魂，追旅思。
+夜夜除非，好梦留人睡。
+明月楼高休独倚。酒入愁肠，化作相思泪。(留人睡 一作：留人醉)
+```
+---
+## 《丑奴儿·书博山道中壁》
+### 宋代：辛弃疾
+```
+少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。 
+而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。
+```
+---
+##  《青玉案·元夕》
+### 宋代：辛弃疾
+```
+东风夜放花千树。更吹落、星如雨。
+宝马雕车香满路。凤箫声动，玉壶光转，一夜鱼龙舞。 
+蛾儿雪柳黄金缕。笑语盈盈暗香去。
+众里寻他千百度。蓦然回首，那人却在，灯火阑珊处。
+```
+---
+## 《破阵子·为陈同甫赋壮词以寄之》
+### 宋代：辛弃疾
+```
+醉里挑灯看剑，梦回吹角连营。
+八百里分麾下炙，五十弦翻塞外声。沙场秋点兵。
+马作的卢飞快，弓如霹雳弦惊。
+了却君王天下事，赢得生前身后名。可怜白发生！
+```
+---
+## 《西江月·夜行黄沙道中》
+### 宋代：辛弃疾
+```
+明月别枝惊鹊，清风半夜鸣蝉。
+稻花香里说丰年，听取蛙声一片。 
+七八个星天外，两三点雨山前。
+旧时茅店社林边，路转溪桥忽见。(溪桥 一作：溪头)
 ```
