--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -1,5 +1,5 @@
-# 面朝大海，春暖花开
-## 海子
+## 《面朝大海，春暖花开》
+### 海子
 ```
 从明天起，做一个幸福的人
 喂马，劈柴，周游世界
@@ -18,9 +18,9 @@
 愿你在尘世获得幸福
 我只愿面朝大海，春暖花开
 ```
-
-# 班扎古鲁白玛的沉默
-## 扎西拉姆·多多
+---
+## 《班扎古鲁白玛的沉默》
+### 扎西拉姆·多多
 ```
 你见，或者不见我
 我就在那里
@@ -40,9 +40,9 @@
 默然 相爱
 寂静 欢喜
 ```
-
-# 雨巷
-## 戴望舒
+---
+## 《雨巷》
+### 戴望舒
 ```
 撑着油纸伞，独自 
 彷徨在悠长、悠长 
