--- a/poetry/先秦.md
+++ b/poetry/先秦.md
@@ -1,9 +1,19 @@
-# 越人歌
-## 先秦：佚名
+## 《越人歌》
+### 先秦：佚名
 ```
 今夕何夕兮，搴舟中流。
 今日何日兮，得与王子同舟。
 蒙羞被好兮，不訾诟耻。
 心几烦而不绝兮，得知王子。
 山有木兮木有枝，心悦君兮君不知。
+```
+---
+## 《击鼓》
+### 先秦：佚名
+```
+击鼓其镗，踊跃用兵。土国城漕，我独南行。
+从孙子仲，平陈与宋。不我以归，忧心有忡。
+爰居爰处？爰丧其马？于以求之？于林之下。
+死生契阔，与子成说。执子之手，与子偕老。
+于嗟阔兮，不我活兮。于嗟洵兮，不我信兮。
 ```
