--- a/poetry/金词.md
+++ b/poetry/金词.md
@@ -1,5 +1,5 @@
-# 摸鱼儿·雁丘词 / 迈陂塘
-## 金朝：元好问
+## 《摸鱼儿·雁丘词 / 迈陂塘》
+### 金朝：元好问
 > 乙丑岁赴试并州，道逢捕雁者云：“今旦获一雁，杀之矣。其脱网者悲鸣不能去，竟自投于地而死。”予因买得之，葬之汾水之上，垒石为识，号曰“雁丘”。同行者多为赋诗，予亦有《雁丘词》。旧所作无宫商，今改定之。
 ```
 问世间，情为何物，直教生死相许？
