--- a/poetry/两汉.md
+++ b/poetry/两汉.md
@@ -1,4 +1,4 @@
-## 《上邪》
+## 上邪
 ### 两汉：佚名
 ```
 上邪，我欲与君相知，长命无绝衰。
@@ -7,10 +7,10 @@
 天地合，乃敢与君绝。
 ```
 ---
-## 《凤求凰》
+## 凤求凰
 ### 两汉：司马相如
 ```
-其一：【琴曲出自王实甫《西厢记》】
+其一：【琴曲出自王实甫西厢记】
 有美一人兮，见之不忘。（有美人兮，见之不忘。）
 一日不见兮，思之如狂。
 凤飞翱翔兮，四海求凰。
@@ -30,7 +30,7 @@
 双翼俱起翻高飞，无感我思使余悲。
 ```
 ---
-## 《白头吟》
+## 白头吟
 ### 两汉：卓文君
 ```
 皑如山上雪，皎若云间月。
@@ -43,7 +43,7 @@
 男儿重意气，何用钱刀为！
 ```
 ---
-## 《怨郎诗》
+## 怨郎诗
 ### 两汉：卓文君
 ```
 一朝别后，二地相悬。
