--- a/poetry/唐词.md
+++ b/poetry/唐词.md
@@ -1,4 +1,4 @@
-## 《三五七言 / 秋风词》
+## 三五七言 / 秋风词
 ### 唐代：李白
 ```
 秋风清，秋月明，
@@ -8,3 +8,20 @@
 长相思兮长相忆，短相思兮无穷极，
 早知如此绊人心，何如当初莫相识。
 ```
+---
+## 菩萨蛮·人人尽说江南好
+### 唐代：韦庄
+```
+人人尽说江南好，游人只合江南老。
+春水碧于天，画船听雨眠。
+垆边人似月，皓腕凝霜雪。
+未老莫还乡，还乡须断肠。
+```
+---
+## 长相思·汴水流
+### 唐代：白居易
+```
+汴水流，泗水流，流到瓜州古渡头。吴山点点愁。
+思悠悠，恨悠悠，恨到归时方始休。月明人倚楼。
+```
+---
