--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -1,8 +1,34 @@
-## 《木兰花·拟古决绝词柬友》
+## 木兰花·拟古决绝词柬友
 ### 清代：纳兰性德
 ```
 人生若只如初见，何事秋风悲画扇。
 等闲变却故人心，却道故人心易变。(一作：却道故心人易变)
 骊山语罢清宵半，泪雨霖铃终不怨。(一作：泪雨零 / 夜雨霖)
 何如薄幸锦衣郎，比翼连枝当日愿。
+```
+---
+## 绮怀
+### 清代：黄景仁 
+```
+几回花下坐吹箫，银汉红墙入望遥。
+似此星辰非昨夜，为谁风露立中宵。
+缠绵思尽抽残茧，宛转心伤剥后蕉。
+三五年时三五月，可怜杯酒不曾消。
+```
+---
+## 蝶恋花·阅尽天涯离别苦
+### 清代：王国维
+```
+阅尽天涯离别苦，不道归来，零落花如许。花底相看无一语，绿窗春与天俱莫。(俱莫 一作：俱暮)
+待把相思灯下诉，一缕新欢，旧恨千千缕。最是人间留不住，朱颜辞镜花辞树。
+```
+---
+## 狱中题壁
+### 近代：谭嗣同
+```
+望门投止思张俭，忍死须臾待杜根。
+我自横刀向天笑，去留肝胆两昆仑。(版本一)
+
+望门投趾怜张俭，直谏陈书愧杜根。
+手掷欧刀仰天笑，留将公罪后人论。(版本二)
 ```
