--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -1,4 +1,4 @@
-## 《面朝大海，春暖花开》
+## 面朝大海，春暖花开
 ### 海子
 ```
 从明天起，做一个幸福的人
@@ -19,7 +19,7 @@
 我只愿面朝大海，春暖花开
 ```
 ---
-## 《班扎古鲁白玛的沉默》
+## 班扎古鲁白玛的沉默
 ### 扎西拉姆·多多
 ```
 你见，或者不见我
@@ -41,7 +41,7 @@
 寂静 欢喜
 ```
 ---
-## 《雨巷》
+## 雨巷
 ### 戴望舒
 ```
 撑着油纸伞，独自 
