--- a/poetry/先秦.md
+++ b/poetry/先秦.md
@@ -1,4 +1,4 @@
-## 《越人歌》
+## 越人歌
 ### 先秦：佚名
 ```
 今夕何夕兮，搴舟中流。
@@ -8,7 +8,15 @@
 山有木兮木有枝，心悦君兮君不知。
 ```
 ---
-## 《击鼓》
+## 击壤歌
+### 先秦：佚名
+```
+日出而作，日入而息。
+凿井而饮，耕田而食。
+帝力于我何有哉！
+```
+---
+## 击鼓
 ### 先秦：佚名
 ```
 击鼓其镗，踊跃用兵。土国城漕，我独南行。
@@ -16,4 +24,194 @@
 爰居爰处？爰丧其马？于以求之？于林之下。
 死生契阔，与子成说。执子之手，与子偕老。
 于嗟阔兮，不我活兮。于嗟洵兮，不我信兮。
+```
+---
+## 桃夭
+###　先秦：佚名
+```
+桃之夭夭，灼灼其华。之子于归，宜其室家。
+桃之夭夭，有蕡其实。之子于归，宜其家室。
+桃之夭夭，其叶蓁蓁。之子于归，宜其家人。
+```
+---
+## 氓
+### 先秦：佚名
+```
+氓之蚩蚩，抱布贸丝。匪来贸丝，来即我谋。送子涉淇，至于顿丘。匪我愆期，子无良媒。将子无怒，秋以为期。
+乘彼垝垣，以望复关。不见复关，泣涕涟涟。既见复关，载笑载言。尔卜尔筮，体无咎言。以尔车来，以我贿迁。(尔 一作：尓)
+桑之未落，其叶沃若。于嗟鸠兮！无食桑葚。于嗟女兮！无与士耽。士之耽兮，犹可说也。女之耽兮，不可说也。
+桑之落矣，其黄而陨。自我徂尔，三岁食贫。淇水汤汤，渐车帷裳。女也不爽，士贰其行。士也罔极，二三其德。
+三岁为妇，靡室劳矣。夙兴夜寐，靡有朝矣。言既遂矣，至于暴矣。兄弟不知，咥其笑矣。静言思之，躬自悼矣。
+及尔偕老，老使我怨。淇则有岸，隰则有泮。总角之宴，言笑晏晏，信誓旦旦，不思其反。反是不思，亦已焉哉！
+```
+---
+## 采薇
+### 先秦：佚名
+```
+采薇采薇，薇亦作止。曰归曰归，岁亦莫止。 靡室靡家，猃狁之故。不遑启居，猃狁之故。
+采薇采薇，薇亦柔止。曰归曰归，心亦忧止。 忧心烈烈，载饥载渴。我戍未定，靡使归聘。
+采薇采薇，薇亦刚止。曰归曰归，岁亦阳止。 王事靡盬，不遑启处。忧心孔疚，我行不来！
+彼尔维何？维常之华。彼路斯何？君子之车。 戎车既驾，四牡业业。岂敢定居？一月三捷。
+驾彼四牡，四牡骙骙。君子所依，小人所腓。 四牡翼翼，象弭鱼服。岂不日戒？猃狁孔棘！
+昔我往矣，杨柳依依。今我来思，雨雪霏霏。 行道迟迟，载渴载饥。我心伤悲，莫知我哀！
+```
+---
+## 黍离
+### 先秦：佚名
+```
+彼黍离离，彼稷之苗。行迈靡靡，中心摇摇。知我者，谓我心忧；不知我者，谓我何求。悠悠苍天，此何人哉？
+彼黍离离，彼稷之穗。行迈靡靡，中心如醉。知我者，谓我心忧；不知我者，谓我何求。悠悠苍天，此何人哉？
+彼黍离离，彼稷之实。行迈靡靡，中心如噎。知我者，谓我心忧；不知我者，谓我何求。悠悠苍天，此何人哉？
+```
+---
+## 关雎
+### 先秦：佚名
+```
+关关雎鸠，在河之洲。窈窕淑女，君子好逑。
+参差荇菜，左右流之。窈窕淑女，寤寐求之。
+求之不得，寤寐思服。悠哉悠哉，辗转反侧。
+参差荇菜，左右采之。窈窕淑女，琴瑟友之。
+参差荇菜，左右芼之。窈窕淑女，钟鼓乐之。
+```
+---
+## 蒹葭
+### 先秦：佚名
+```
+蒹葭苍苍，白露为霜。所谓伊人，在水一方。
+溯洄从之，道阻且长。溯游从之，宛在水中央。
+蒹葭萋萋，白露未晞。所谓伊人，在水之湄。
+溯洄从之，道阻且跻。溯游从之，宛在水中坻。
+蒹葭采采，白露未已。所谓伊人，在水之涘。
+溯洄从之，道阻且右。溯游从之，宛在水中沚。
+```
+---
+## 子衿
+### 先秦：佚名
+```
+青青子衿，悠悠我心。纵我不往，子宁不嗣音？
+青青子佩，悠悠我思。纵我不往，子宁不来？
+挑兮达兮，在城阙兮。一日不见，如三月兮。
+```
+---
+## 静女
+### 先秦：佚名
+```
+静女其姝，俟我于城隅。爱而不见，搔首踟蹰。
+静女其娈，贻我彤管。彤管有炜，说怿女美。
+自牧归荑，洵美且异。匪女之为美，美人之贻。
+```
+---
+## 秦风·无衣
+### 先秦：佚名
+```
+岂曰无衣？与子同袍。王于兴师，修我戈矛。与子同仇！
+岂曰无衣？与子同泽。王于兴师，修我矛戟。与子偕作！
+岂曰无衣？与子同裳。王于兴师，修我甲兵。与子偕行！
+```
+---
+## 国风·卫风·木瓜
+### 先秦：佚名
+```
+投我以木瓜，报之以琼琚。匪报也，永以为好也！
+投我以木桃，报之以琼瑶。匪报也，永以为好也！
+投我以木李，报之以琼玖。匪报也，永以为好也！
+```
+---
+## 樛木
+### 先秦：佚名
+```
+南有樛木，葛藟累之。乐只君子，福履绥之。
+南有樛木，葛藟荒之。乐只君子，福履将之。
+南有樛木，葛藟萦之。乐只君子，福履成之。
+```
+---
+## 国风·魏风·硕鼠
+### 先秦：佚名
+```
+硕鼠硕鼠，无食我黍！三岁贯女，莫我肯顾。逝将去女，适彼乐土。乐土乐土，爰得我所。
+硕鼠硕鼠，无食我麦！三岁贯女，莫我肯德。逝将去女，适彼乐国。乐国乐国，爰得我直。
+硕鼠硕鼠，无食我苗！三岁贯女，莫我肯劳。逝将去女，适彼乐郊。乐郊乐郊，谁之永号？(女 通 汝)
+```
+---
+## 小雅·鹿鸣
+### 先秦：佚名
+```
+呦呦鹿鸣，食野之苹。我有嘉宾，鼓瑟吹笙。吹笙鼓簧，承筐是将。人之好我，示我周行。
+呦呦鹿鸣，食野之蒿。我有嘉宾，德音孔昭。视民不恌，君子是则是效。我有旨酒，嘉宾式燕以敖。
+呦呦鹿鸣，食野之芩。我有嘉宾，鼓瑟鼓琴。鼓瑟鼓琴，和乐且湛。我有旨酒，以燕乐嘉宾之心。
+```
+---
+## 国风·郑风·山有扶苏
+### 先秦：佚名
+```
+山有扶苏，隰有荷华。不见子都，乃见狂且。
+山有乔松，隰有游龙，不见子充，乃见狡童。
+```
+---
+## 汉广
+### 先秦：佚名
+```
+南有乔木，不可休思。
+汉有游女，不可求思。
+汉之广矣，不可泳思。
+江之永矣，不可方思。
+
+翘翘错薪，言刈其楚。
+之子于归，言秣其马。
+汉之广矣，不可泳思。
+江之永矣，不可方思。
+
+翘翘错薪，言刈其蒌。
+之子于归，言秣其驹。
+汉之广矣，不可泳思。
+江之永矣，不可方思。
+```
+---
+## 国风·鄘风·相鼠
+### 先秦：佚名
+```
+相鼠有皮，人而无仪！人而无仪，不死何为？
+相鼠有齿，人而无止！人而无止，不死何俟？
+相鼠有体，人而无礼，人而无礼！胡不遄死？
+```
+---
+## 硕人
+### 先秦：佚名
+```
+硕人其颀，衣锦褧衣。齐侯之子，卫侯之妻。东宫之妹，邢侯之姨，谭公维私。
+手如柔荑，肤如凝脂，领如蝤蛴，齿如瓠犀，螓首蛾眉，巧笑倩兮，美目盼兮。
+硕人敖敖，说于农郊。四牡有骄，朱幩镳镳。翟茀以朝。大夫夙退，无使君劳。
+河水洋洋，北流活活。施罛濊濊，鳣鲔发发。葭菼揭揭，庶姜孽孽，庶士有朅。
+```
+---
+## 国风·邶风·绿衣
+### 先秦：佚名
+```
+绿兮衣兮，绿衣黄里。心之忧矣，曷维其已？(黄里 一作：黄裹)
+绿兮衣兮，绿衣黄裳。心之忧矣，曷维其亡？
+绿兮丝兮，女所治兮。我思古人，俾无訧兮。
+絺兮绤兮，凄其以风。我思古人，实获我心。
+```
+---
+## 国风·卫风·淇奥
+### 先秦：佚名
+```
+瞻彼淇奥，绿竹猗猗。有匪君子，如切如磋，如琢如磨。瑟兮僩兮，赫兮咺兮。有匪君子，终不可谖兮。
+瞻彼淇奥，绿竹青青。有匪君子，充耳琇莹，会弁如星。瑟兮僩兮，赫兮咺兮。有匪君子，终不可谖兮。
+瞻彼淇奥，绿竹如箦。有匪君子，如金如锡，如圭如璧。宽兮绰兮，猗重较兮。善戏谑兮，不为虐兮。
+```
+---
+## 国风·邶风·式微
+### 先秦：佚名
+```
+式微，式微，胡不归？微君之故，胡为乎中露！
+式微，式微，胡不归？微君之躬，胡为乎泥中！
+```
+---
+## 国风·召南·鹊巢
+### 先秦：佚名
+```
+维鹊有巢，维鸠居之。之子于归，百两御之。
+维鹊有巢，维鸠方之。之子于归，百两将之。
+维鹊有巢，维鸠盈之。之子于归，百两成之。
 ```
