--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -1,11 +1,11 @@
-## 《离思五首·其四》
+## 离思五首·其四
 ### 唐代：元稹
 ```
 曾经沧海难为水，除却巫山不是云。
 取次花丛懒回顾，半缘修道半缘君。
 ```
 ---
-## 《南歌子词二首 / 新添声杨柳枝词》
+## 南歌子词二首 / 新添声杨柳枝词
 ### 唐代：温庭筠
 ```
 一尺深红胜曲尘，天生旧物不如新。(胜曲尘 一作：蒙曲尘)
@@ -15,7 +15,7 @@
 玲珑骰子安红豆，入骨相思知不知。
 ```
 ---
-## 《春江花月夜》
+## 春江花月夜
 ### 唐代：张若虚
 ```
 春江潮水连海平，海上明月共潮生。
@@ -38,14 +38,14 @@
 不知乘月几人归，落月摇情满江树。(落月 一作：落花)
 ```
 ---
-## 《题都城南庄》  
+## 题都城南庄  
 ### 唐代：崔护  
 ```
 去年今日此门中，人面桃花相映红。
 人面不知何处去，桃花依旧笑春风。
 ```
 ---
-## 《无题·昨夜星辰昨夜风》
+## 无题·昨夜星辰昨夜风
 ### 唐代：李商隐
 ```
 昨夜星辰昨夜风，画楼西畔桂堂东。
@@ -54,7 +54,7 @@
 嗟余听鼓应官去，走马兰台类转蓬。
 ```
 ---
-## 《无题·相见时难别亦难》
+## 无题·相见时难别亦难
 ### 唐代：李商隐
 ```
 相见时难别亦难，东风无力百花残。
@@ -63,14 +63,14 @@
 蓬山此去无多路，青鸟殷勤为探看。(蓬山 一作：蓬莱)
 ```
 ---
-## 《夜雨寄北》
+## 夜雨寄北
 ### 唐代：李商隐
 ```
 君问归期未有期，巴山夜雨涨秋池。 
 何当共剪西窗烛，却话巴山夜雨时。
 ```
 ---
-## 《锦瑟》
+## 锦瑟
 ### 唐代：李商隐
 ```
 锦瑟无端五十弦，一弦一柱思华年。
@@ -79,30 +79,887 @@
 此情可待成追忆，只是当时已惘然。
 ```
 ---
-## 《乐游原 / 登乐游原》
+## 乐游原 / 登乐游原
 ### 唐代：李商隐
 ```
 向晚意不适，驱车登古原。
 夕阳无限好，只是近黄昏。
 ```
 ---
-## 《贾生》
+## 贾生
 ### 唐代：李商隐
 ```
 宣室求贤访逐臣，贾生才调更无伦。
 可怜夜半虚前席，不问苍生问鬼神。
 ```
 ---
-## 《金陵晚望》
+## 金陵晚望
 ## 唐代：高蟾
 ```
 曾伴浮云归晚翠，犹陪落日泛秋声。
 世间无限丹青手，一片伤心画不成。
 ```
 ---
-## 《不第后赋菊》
+## 不第后赋菊
 ### 唐代：黄巢
 ```
 待到秋来九月八，我花开后百花杀。
 冲天香阵透长安，满城尽带黄金甲。
+```
+---
+## 清明
+## 唐代：杜牧
+```
+清明时节雨纷纷，路上行人欲断魂。
+借问酒家何处有，牧童遥指杏花村。
+```
+---
+## 秋夕
+### 唐代：杜牧
+```
+银烛秋光冷画屏，轻罗小扇扑流萤。
+天阶夜色凉如水，卧看牵牛织女星。
+(天阶 一作：天街；卧看 一作：坐看)
+```
+---
+## 江南春
+### 唐代：杜牧
+```
+千里莺啼绿映红，水村山郭酒旗风。 
+南朝四百八十寺，多少楼台烟雨中。
+```
+---
+## 泊秦淮
+### 唐代：杜牧
+```
+烟笼寒水月笼沙，夜泊秦淮近酒家。
+商女不知亡国恨，隔江犹唱后庭花。
+```
+---
+## 山行
+### 唐代：杜牧
+```
+远上寒山石径斜，白云深处有人家。(深处 一作：生处)
+停车坐爱枫林晚，霜叶红于二月花。
+```
+---
+## 赤壁
+### 唐代：杜牧
+```
+折戟沉沙铁未销，自将磨洗认前朝。
+东风不与周郎便，铜雀春深锁二乔。
+```
+---
+## 寄扬州韩绰判官
+### 唐代：杜牧
+```
+青山隐隐水迢迢，秋尽江南草未凋。
+二十四桥明月夜，玉人何处教吹箫？
+```
+---
+## 赠别
+### 唐代：杜牧
+```
+多情却似总无情，唯觉樽前笑不成。
+蜡烛有心还惜别，替人垂泪到天明。
+```
+---
+## 题乌江亭
+### 唐代：杜牧
+```
+胜败兵家事不期，包羞忍耻是男儿。 
+江东子弟多才俊，卷土重来未可知。
+```
+---
+## 过华清宫绝句三首
+### 唐代：杜牧
+```
+长安回望绣成堆，山顶千门次第开。
+一骑红尘妃子笑，无人知是荔枝来。
+
+新丰绿树起黄埃，数骑渔阳探使回。
+霓裳一曲千峰上，舞破中原始下来。
+
+万国笙歌醉太平，倚天楼殿月分明。
+云中乱拍禄山舞，风过重峦下笑声。
+```
+---
+## 赠别二首
+### 唐代：杜牧
+```
+娉娉袅袅十三余，豆蔻梢头二月初。
+春风十里扬州路，卷上珠帘总不如。
+
+多情却似总无情，唯觉樽前笑不成。
+蜡烛有心还惜别，替人垂泪到天明。
+```
+---
+## 紫薇花
+### 唐代：杜牧
+```
+晓迎秋露一枝新，不占园中最上春。
+桃李无言又何在，向风偏笑艳阳人。
+```
+---
+## 遣怀
+### 唐代：杜牧
+```
+落魄江南载酒行，楚腰纤细掌中轻。(江南 一作：江湖；纤细 一作：肠断)
+十年一觉扬州梦，赢得青楼薄幸名。
+```
+---
+## 金谷园
+### 唐代：杜牧
+```
+繁华事散逐香尘，流水无情草自春。
+日暮东风怨啼鸟，落花犹似坠楼人。
+```
+---
+## 白雪歌送武判官归京
+### 唐代：岑参
+```
+北风卷地白草折，胡天八月即飞雪。
+忽如一夜春风来，千树万树梨花开。
+散入珠帘湿罗幕，狐裘不暖锦衾薄。
+将军角弓不得控，都护铁衣冷难着。(难着 一作：犹著)
+瀚海阑干百丈冰，愁云惨淡万里凝。
+中军置酒饮归客，胡琴琵琶与羌笛。
+纷纷暮雪下辕门，风掣红旗冻不翻。
+轮台东门送君去，去时雪满天山路。
+山回路转不见君，雪上空留马行处。
+```
+---
+## 逢入京使
+### 唐代：岑参
+```
+故园东望路漫漫，双袖龙钟泪不干。 
+马上相逢无纸笔，凭君传语报平安。
+```
+---
+## 凉州馆中与诸判官夜集
+### 唐代：岑参
+```
+弯弯月出挂城头，城头月出照凉州。
+凉州七里十万家，胡人半解弹琵琶。
+琵琶一曲肠堪断，风萧萧兮夜漫漫。
+河西幕中多故人，故人别来三五春。
+花门楼前见秋草，岂能贫贱相看老。
+一生大笑能几回，斗酒相逢须醉倒。
+```
+---
+## 凉州词二首
+### 唐代：王翰
+```
+葡萄美酒夜光杯，欲饮琵琶马上催。
+醉卧沙场君莫笑，古来征战几人回？
+
+秦中花鸟已应阑，塞外风沙犹自寒。
+夜听胡笳折杨柳，教人意气忆长安。
+```
+---
+## 登科后
+### 唐代：孟郊
+```
+昔日龌龊不足夸，今朝放荡思无涯。 
+春风得意马蹄疾，一日看尽长安花。
+```
+---
+## 闺怨
+### 唐代：王昌龄
+```
+闺中少妇不知愁，春日凝妆上翠楼。
+忽见陌头杨柳色，悔教夫婿觅封侯。
+```
+---
+## 芙蓉楼送辛渐两首
+### 唐代：王昌龄
+```
+寒雨连江夜入吴，平明送客楚山孤。(连江 一作：连天)
+洛阳亲友如相问，一片冰心在玉壶。
+
+丹阳城南秋海阴，丹阳城北楚云深。
+高楼送客不能醉，寂寂寒江明月心。
+```
+---
+## 出塞二首
+### 唐代：王昌龄
+```
+秦时明月汉时关，万里长征人未还。
+但使龙城飞将在，不教胡马度阴山。
+
+骝马新跨白玉鞍，战罢沙场月色寒。
+城头铁鼓声犹振，匣里金刀血未干。
+```
+---
+## 从军行七首
+### 唐代：王昌龄
+```
+烽火城西百尺楼，黄昏独上海风秋。(独上 一作：独坐)
+更吹羌笛关山月，无那金闺万里愁。
+
+琵琶起舞换新声，总是关山旧别情。
+撩乱边愁听不尽，高高秋月照长城。
+
+关城榆叶早疏黄，日暮云沙古战场。
+表请回军掩尘骨，莫教兵士哭龙荒。
+
+青海长云暗雪山，孤城遥望玉门关。
+黄沙百战穿金甲，不破楼兰终不还。
+
+大漠风尘日色昏，红旗半卷出辕门。
+前军夜战洮河北，已报生擒吐谷浑。
+
+胡瓶落膊紫薄汗，碎叶城西秋月团。
+明敕星驰封宝剑，辞君一夜取楼兰。
+
+玉门山嶂几千重，山北山南总是烽。
+人依远戍须看火，马踏深山不见踪。
+```
+---
+## 山居秋暝
+###　唐代：王维
+```
+空山新雨后，天气晚来秋。
+明月松间照，清泉石上流。
+竹喧归浣女，莲动下渔舟。
+随意春芳歇，王孙自可留。
+```
+---
+## 使至塞上
+### 唐代：王维
+```
+单车欲问边，属国过居延。
+征蓬出汉塞，归雁入胡天。
+大漠孤烟直，长河落日圆。
+萧关逢候骑，都护在燕然。
+```
+---
+## 九月九日忆山东兄弟
+### 唐代：王维
+```
+独在异乡为异客，每逢佳节倍思亲。
+遥知兄弟登高处，遍插茱萸少一人。 
+```
+---
+## 送元二使安西 / 渭城曲
+### 唐代：王维
+```
+渭城朝雨浥轻尘，客舍青青柳色新。(一作：客舍依依杨柳春)
+劝君更尽一杯酒，西出阳关无故人。
+```
+---
+## 竹里馆
+### 唐代：王维
+```
+独坐幽篁里，弹琴复长啸。
+深林人不知，明月来相照。
+```
+---
+## 画
+### 唐代：王维
+```
+远看山有色，近听水无声。
+春去花还在，人来鸟不惊。
+```
+---
+## 相思
+### 唐代：王维
+```
+红豆生南国，春来发几枝。
+愿君多采撷，此物最相思
+```
+---
+##　鸟鸣涧
+### 唐代：王维
+```
+人闲桂花落，夜静春山空。
+月出惊山鸟，时鸣春涧中。
+```
+---
+## 终南别业
+### 唐代：王维
+```
+中岁颇好道，晚家南山陲。
+兴来每独往，胜事空自知。
+行到水穷处，坐看云起时。
+偶然值林叟，谈笑无还期。
+```
+---
+## 菩提偈
+### 唐代：惠能
+```
+菩提本无树，明镜亦非台。
+佛性常清净，何处有尘埃！
+
+心是菩提树，身为明镜台。
+明镜本清净，何处染尘埃！
+
+菩提本无树，明镜亦非台。
+本来无一物，何处惹尘埃！
+
+菩提只向心觅，何劳向外求玄？
+听说依此修行，西方只在目前！
+```
+---
+## 淮上喜会梁川故人 / 淮上喜会梁州故人
+### 唐代：韦应物
+```
+江汉曾为客，相逢每醉还。
+浮云一别后，流水十年间。
+欢笑情如旧，萧疏鬓已斑。
+何因不归去？淮上有秋山。
+```
+---
+##　宣州谢脁楼饯别校书叔云
+### 唐代：李白
+```
+弃我去者，昨日之日不可留；
+乱我心者，今日之日多烦忧。
+长风万里送秋雁，对此可以酣高楼。
+蓬莱文章建安骨，中间小谢又清发。
+俱怀逸兴壮思飞，欲上青天览明月。(览 通：揽；明月 一作：日月)
+抽刀断水水更流，举杯销愁愁更愁。(销愁 一作 消愁)
+人生在世不称意，明朝散发弄扁舟。
+```
+---
+## 南陵别儿童入京
+### 唐代：李白
+```
+白酒新熟山中归，黄鸡啄黍秋正肥。
+呼童烹鸡酌白酒，儿女嬉笑牵人衣。
+高歌取醉欲自慰，起舞落日争光辉。
+游说万乘苦不早，著鞭跨马涉远道。
+会稽愚妇轻买臣，余亦辞家西入秦。
+仰天大笑出门去，我辈岂是蓬蒿人。
+```
+---
+## 古风·秦王扫六合
+### 唐代：李白
+```
+秦王扫六合，虎视何雄哉！
+挥剑决浮云，诸侯尽西来。
+明断自天启，大略驾群才。
+收兵铸金人，函谷正东开。
+铭功会稽岭，骋望琅琊台。
+刑徒七十万，起土骊山隈。
+尚采不死药，茫然使心哀。
+连弩射海鱼，长鲸正崔嵬。
+额鼻象五岳，扬波喷云雷。
+鬐鬣蔽青天，何由睹蓬莱？
+徐巿载秦女，楼船几时回？
+但见三泉下，金棺葬寒灰。
+```
+---
+## 将进酒
+### 唐代：李白
+```
+君不见，黄河之水天上来，奔流到海不复回。
+君不见，高堂明镜悲白发，朝如青丝暮成雪。
+人生得意须尽欢，莫使金樽空对月。
+天生我材必有用，千金散尽还复来。
+烹羊宰牛且为乐，会须一饮三百杯。
+岑夫子，丹丘生，将进酒，杯莫停。
+与君歌一曲，请君为我倾耳听。(倾耳听 一作：侧耳听)
+钟鼓馔玉不足贵，但愿长醉不复醒。(不足贵 一作：何足贵；不复醒 一作：不愿醒/不用醒)
+古来圣贤皆寂寞，惟有饮者留其名。(古来 一作：自古；惟 通：唯)
+陈王昔时宴平乐，斗酒十千恣欢谑。
+主人何为言少钱，径须沽取对君酌。
+五花马，千金裘，呼儿将出换美酒，与尔同销万古愁。
+```
+---
+## 黄鹤楼送孟浩然之广陵
+### 唐代：李白
+```
+故人西辞黄鹤楼，烟花三月下扬州。
+孤帆远影碧空尽，唯见长江天际流。 (唯 通：惟)
+```
+---
+## 把酒问月·故人贾淳令予问之
+### 唐代：李白
+```
+青天有月来几时？我今停杯一问之。
+人攀明月不可得，月行却与人相随。
+皎如飞镜临丹阙，绿烟灭尽清辉发。
+但见宵从海上来，宁知晓向云间没。
+白兔捣药秋复春，嫦娥孤栖与谁邻？
+今人不见古时月，今月曾经照古人。
+古人今人若流水，共看明月皆如此。
+唯愿当歌对酒时，月光长照金樽里。
+```
+---
+## 行路难·其一
+### 唐代：李白
+```
+金樽清酒斗十千，玉盘珍羞直万钱。(羞 通：馐；直 通：值)
+停杯投箸不能食，拔剑四顾心茫然。
+欲渡黄河冰塞川，将登太行雪满山。(雪满山 一作：雪暗天)
+闲来垂钓碧溪上，忽复乘舟梦日边。(碧 一作：坐)
+行路难！行路难！多歧路，今安在？
+长风破浪会有时，直挂云帆济沧海。
+```
+---
+## 望庐山瀑布
+### 唐代：李白
+```
+日照香炉生紫烟，遥看瀑布挂前川。
+飞流直下三千尺，疑是银河落九天。
+```
+---
+## 赠汪伦
+### 唐代：李白
+```
+李白乘舟将欲行，忽闻岸上踏歌声。
+桃花潭水深千尺，不及汪伦送我情。
+```
+---
+## 送友人
+### 唐代：李白
+```
+青山横北郭，白水绕东城。
+此地一为别，孤蓬万里征。
+浮云游子意，落日故人情。
+挥手自兹去，萧萧班马鸣。
+```
+---
+## 闻王昌龄左迁龙标遥有此寄
+### 唐代：李白
+```
+杨花落尽子规啼，闻道龙标过五溪。
+我寄愁心与明月，随风直到夜郎西。(随风 一作：随君)
+```
+---
+## 蜀道难
+### 唐代：李白
+```
+噫吁嚱，危乎高哉！蜀道之难，难于上青天！
+蚕丛及鱼凫，开国何茫然！
+尔来四万八千岁，不与秦塞通人烟。
+西当太白有鸟道，可以横绝峨眉巅。
+地崩山摧壮士死，然后天梯石栈相钩连。
+上有六龙回日之高标，下有冲波逆折之回川。
+黄鹤之飞尚不得过，猿猱欲度愁攀援。(攀援 一作：攀缘)
+青泥何盘盘，百步九折萦岩峦。
+扪参历井仰胁息，以手抚膺坐长叹。
+问君西游何时还？畏途巉岩不可攀。
+但见悲鸟号古木，雄飞雌从绕林间。
+又闻子规啼夜月，愁空山。
+蜀道之难,难于上青天，使人听此凋朱颜！
+连峰去天不盈尺，枯松倒挂倚绝壁。
+飞湍瀑流争喧豗，砯崖转石万壑雷。
+其险也如此，嗟尔远道之人胡为乎来哉！(也如此 一作：也若此)
+剑阁峥嵘而崔嵬，一夫当关，万夫莫开。
+所守或匪亲，化为狼与豺。
+朝避猛虎，夕避长蛇；磨牙吮血，杀人如麻。
+锦城虽云乐，不如早还家。
+蜀道之难,难于上青天，侧身西望长咨嗟！
+```
+---
+## 咸阳城东楼 / 咸阳城西楼晚眺
+### 唐代：许浑
+```
+一上高城万里愁，蒹葭杨柳似汀洲。
+溪云初起日沉阁，山雨欲来风满楼。(沉 通：沈)
+鸟下绿芜秦苑夕，蝉鸣黄叶汉宫秋。
+行人莫问当年事，故国东来渭水流。
+```
+---
+## 节妇吟·寄东平李司空师道
+### 唐代：张籍
+```
+君知妾有夫，赠妾双明珠。
+感君缠绵意，系在红罗襦。
+妾家高楼连苑起，良人执戟明光里。
+知君用心如日月，事夫誓拟同生死。
+还君明珠双泪垂，恨不相逢未嫁时。
+```
+---
+## 草 / 赋得古原草送别
+###　唐代：白居易
+```
+离离原上草，一岁一枯荣。
+野火烧不尽，春风吹又生。
+远芳侵古道，晴翠接荒城。
+又送王孙去，萋萋满别情。
+```
+---
+## 钱塘湖春行
+### 唐代：白居易
+```
+孤山寺北贾亭西，水面初平云脚低。
+几处早莺争暖树，谁家新燕啄春泥。
+乱花渐欲迷人眼，浅草才能没马蹄。
+最爱湖东行不足，绿杨阴里白沙堤。
+```
+---
+## 梦微之
+### 唐代：白居易
+```
+夜来携手梦同游，晨起盈巾泪莫收。
+漳浦老身三度病，咸阳宿草八回秋。
+君埋泉下泥销骨，我寄人间雪满头。
+阿卫韩郎相次去，夜台茫昧得知不？
+```
+---
+## 问刘十九
+###　唐代：白居易
+```
+绿蚁新醅酒，红泥小火炉。
+晚来天欲雪，能饮一杯无？
+```
+---
+## 长恨歌
+### 唐代：白居易
+```
+汉皇重色思倾国，御宇多年求不得。
+杨家有女初长成，养在深闺人未识。
+天生丽质难自弃，一朝选在君王侧。
+回眸一笑百媚生，六宫粉黛无颜色。
+春寒赐浴华清池，温泉水滑洗凝脂。
+侍儿扶起娇无力，始是新承恩泽时。
+云鬓花颜金步摇，芙蓉帐暖度春宵。
+春宵苦短日高起，从此君王不早朝。
+
+承欢侍宴无闲暇，春从春游夜专夜。
+后宫佳丽三千人，三千宠爱在一身。
+金屋妆成娇侍夜，玉楼宴罢醉和春。
+姊妹弟兄皆列土，可怜光彩生门户。
+遂令天下父母心，不重生男重生女。
+骊宫高处入青云，仙乐风飘处处闻。
+缓歌慢舞凝丝竹，尽日君王看不足。
+渔阳鼙鼓动地来，惊破霓裳羽衣曲。
+
+九重城阙烟尘生，千乘万骑西南行。
+翠华摇摇行复止，西出都门百余里。
+六军不发无奈何，宛转蛾眉马前死。
+花钿委地无人收，翠翘金雀玉搔头。
+君王掩面救不得，回看血泪相和流。
+黄埃散漫风萧索，云栈萦纡登剑阁。
+峨嵋山下少人行，旌旗无光日色薄。
+蜀江水碧蜀山青，圣主朝朝暮暮情。
+
+行宫见月伤心色，夜雨闻铃肠断声。
+天旋地转回龙驭，到此踌躇不能去。
+马嵬坡下泥土中，不见玉颜空死处。
+君臣相顾尽沾衣，东望都门信马归。
+归来池苑皆依旧，太液芙蓉未央柳。
+芙蓉如面柳如眉，对此如何不泪垂。
+春风桃李花开日，秋雨梧桐叶落时。
+西宫南内多秋草，落叶满阶红不扫。(花开日 一作：花开夜；南内 一作：南苑)
+
+梨园弟子白发新，椒房阿监青娥老。
+夕殿萤飞思悄然，孤灯挑尽未成眠。
+迟迟钟鼓初长夜，耿耿星河欲曙天。
+鸳鸯瓦冷霜华重，翡翠衾寒谁与共。
+悠悠生死别经年，魂魄不曾来入梦。
+临邛道士鸿都客，能以精诚致魂魄。
+为感君王辗转思，遂教方士殷勤觅。
+排空驭气奔如电，升天入地求之遍。
+
+上穷碧落下黄泉，两处茫茫皆不见。
+忽闻海上有仙山，山在虚无缥渺间。
+楼阁玲珑五云起，其中绰约多仙子。
+中有一人字太真，雪肤花貌参差是。
+金阙西厢叩玉扃，转教小玉报双成。
+闻道汉家天子使，九华帐里梦魂惊。
+揽衣推枕起徘徊，珠箔银屏迤逦开。
+云鬓半偏新睡觉，花冠不整下堂来。
+
+风吹仙袂飘飘举，犹似霓裳羽衣舞。
+玉容寂寞泪阑干，梨花一枝春带雨。(阑 通：栏；飘飘 一作：飘飖)
+含情凝睇谢君王，一别音容两渺茫。
+昭阳殿里恩爱绝，蓬莱宫中日月长。
+回头下望人寰处，不见长安见尘雾。
+惟将旧物表深情，钿合金钗寄将去。
+钗留一股合一扇，钗擘黄金合分钿。
+但教心似金钿坚，天上人间会相见。
+
+临别殷勤重寄词，词中有誓两心知。
+七月七日长生殿，夜半无人私语时。
+在天愿作比翼鸟，在地愿为连理枝。
+天长地久有时尽，此恨绵绵无绝期。
+```
+---
+## 琵琶行 / 琵琶引
+### 唐代：白居易
+> 元和十年，予左迁九江郡司马。明年秋，送客湓浦口，闻舟中夜弹琵琶者，听其音，铮铮然有京都声。问其人，本长安倡女，尝学琵琶于穆、曹二善才，年长色衰，委身为贾人妇。遂命酒，使快弹数曲。曲罢悯然，自叙少小时欢乐事，今漂沦憔悴，转徙于江湖间。予出官二年，恬然自安，感斯人言，是夕始觉有迁谪意。因为长句，歌以赠之，凡六百一十六言，命曰《琵琶行》。
+
+```
+浔阳江头夜送客，枫叶荻花秋瑟瑟。
+主人下马客在船，举酒欲饮无管弦。
+醉不成欢惨将别，别时茫茫江浸月。
+忽闻水上琵琶声，主人忘归客不发。
+寻声暗问弹者谁？琵琶声停欲语迟。
+移船相近邀相见，添酒回灯重开宴。
+千呼万唤始出来，犹抱琵琶半遮面。
+转轴拨弦三两声，未成曲调先有情。
+弦弦掩抑声声思，似诉平生不得志。（不得志 一作：不得意）
+低眉信手续续弹，说尽心中无限事。
+轻拢慢捻抹复挑，初为《霓裳》后《六幺》（六幺 一作：绿腰）。
+大弦嘈嘈如急雨，小弦切切如私语。
+嘈嘈切切错杂弹，大珠小珠落玉盘。
+间关莺语花底滑，幽咽泉流冰下难。
+冰泉冷涩弦凝绝，凝绝不通声暂歇。(暂歇 一作：渐歇)
+别有幽愁暗恨生，此时无声胜有声。
+银瓶乍破水浆迸，铁骑突出刀枪鸣。
+曲终收拨当心画，四弦一声如裂帛。
+东船西舫悄无言，唯见江心秋月白。
+沉吟放拨插弦中，整顿衣裳起敛容。
+自言本是京城女，家在虾蟆陵下住。
+十三学得琵琶成，名属教坊第一部。
+曲罢曾教善才服，妆成每被秋娘妒。
+五陵年少争缠头，一曲红绡不知数。
+钿头银篦击节碎，血色罗裙翻酒污。(银篦 一作：云篦)
+今年欢笑复明年，秋月春风等闲度。
+弟走从军阿姨死，暮去朝来颜色故。
+门前冷落鞍马稀，老大嫁作商人妇。
+商人重利轻别离，前月浮梁买茶去。
+去来江口守空船，绕船月明江水寒。
+夜深忽梦少年事，梦啼妆泪红阑干。
+我闻琵琶已叹息，又闻此语重唧唧。
+同是天涯沦落人，相逢何必曾相识！
+我从去年辞帝京，谪居卧病浔阳城。
+浔阳地僻无音乐，终岁不闻丝竹声。
+住近湓江地低湿，黄芦苦竹绕宅生。
+其间旦暮闻何物？杜鹃啼血猿哀鸣。
+春江花朝秋月夜，往往取酒还独倾。
+岂无山歌与村笛？呕哑嘲哳难为听。
+今夜闻君琵琶语，如听仙乐耳暂明。
+莫辞更坐弹一曲，为君翻作《琵琶行》。
+感我此言良久立，却坐促弦弦转急。
+凄凄不似向前声，满座重闻皆掩泣。
+座中泣下谁最多？江州司马青衫湿。
+```
+---
+##　江南逢李龟年
+### 唐代：杜甫
+```
+岐王宅里寻常见，崔九堂前几度闻。 
+正是江南好风景，落花时节又逢君。
+```
+---
+## 春望
+### 唐代：杜甫
+```
+国破山河在，城春草木深。
+感时花溅泪，恨别鸟惊心。
+烽火连三月，家书抵万金。
+白头搔更短，浑欲不胜簪。
+```
+---
+## 茅屋为秋风所破歌
+### 唐代：杜甫
+```
+八月秋高风怒号，卷我屋上三重茅。
+茅飞渡江洒江郊，高者挂罥长林梢，下者飘转沉塘坳。
+南村群童欺我老无力，忍能对面为盗贼，公然抱茅入竹去。
+唇焦口燥呼不得，归来倚杖自叹息。
+俄顷风定云墨色，秋天漠漠向昏黑。
+布衾多年冷似铁，娇儿恶卧踏里裂。床头屋漏无干处，雨脚如麻未断绝。
+自经丧乱少睡眠，长夜沾湿何由彻?
+安得广厦千万间，大庇天下寒士俱欢颜，风雨不动安如山。
+呜呼！何时眼前突兀见此屋，吾庐独破受冻死亦足！(死亦足 一作：死意足）
+```
+---
+## 春夜喜雨
+### 唐代：杜甫
+```
+好雨知时节，当春乃发生。
+随风潜入夜，润物细无声。
+野径云俱黑，江船火独明。
+晓看红湿处，花重锦官城。
+```
+---
+## 望岳
+### 唐代：杜甫
+```
+岱宗夫如何？齐鲁青未了。
+造化钟神秀，阴阳割昏晓。
+荡胸生曾云，决眦入归鸟。( 曾 通：层)
+会当凌绝顶，一览众山小。
+```
+---
+## 绝句
+### 唐代：杜甫
+```
+两个黄鹂鸣翠柳，一行白鹭上青天。
+窗含西岭千秋雪，门泊东吴万里船。
+```
+---
+## 闻官军收河南河北
+### 唐代：杜甫
+```
+剑外忽传收蓟北，初闻涕泪满衣裳。
+却看妻子愁何在，漫卷诗书喜欲狂。
+白日放歌须纵酒，青春作伴好还乡。
+即从巴峡穿巫峡，便下襄阳向洛阳。
+```
+---
+## 石壕吏
+### 唐代：杜甫
+```
+暮投石壕村，有吏夜捉人。老翁逾墙走，老妇出门看。
+吏呼一何怒，妇啼一何苦。听妇前致词，三男邺城戍。
+一男附书至，二男新战死。存者且偷生，死者长已矣。
+室中更无人，惟有乳下孙。有孙母未去，出入无完裙。
+老妪力虽衰，请从吏夜归。急应河阳役，犹得备晨炊。
+夜久语声绝，如闻泣幽咽。天明登前途，独与老翁别。
+```
+---
+## 登高
+### 唐代：杜甫
+```
+风急天高猿啸哀，渚清沙白鸟飞回。
+无边落木萧萧下，不尽长江滚滚来。
+万里悲秋常作客，百年多病独登台。
+艰难苦恨繁霜鬓，潦倒新停浊酒杯。
+```
+---
+## 蜀相
+### 唐代：杜甫
+```
+丞相祠堂何处寻，锦官城外柏森森。
+映阶碧草自春色，隔叶黄鹂空好音。
+三顾频烦天下计，两朝开济老臣心。(频烦 一作：频繁)
+出师未捷身先死，长使英雄泪满襟。
+```
+---
+## 八阵图
+### 唐代：杜甫
+```
+功盖三分国，名成八阵图。（名成 一作：名高）
+江流石不转，遗恨失吞吴。
+```
+---
+## 登岳阳楼
+### 唐代：杜甫
+```
+昔闻洞庭水，今上岳阳楼。
+吴楚东南坼，乾坤日夜浮。
+亲朋无一字，老病有孤舟。
+戎马关山北，凭轩涕泗流。
+```
+---
+## 赠花卿
+### 唐代：杜甫
+```
+锦城丝管日纷纷，半入江风半入云。 
+此曲只应天上有，人间能得几回闻。
+```
+---
+## 旅夜书怀
+### 唐代：杜甫
+```
+细草微风岸，危樯独夜舟。
+星垂平野阔，月涌大江流。
+名岂文章著，官应老病休。
+飘飘何所似，天地一沙鸥。
+```
+---
+## 兵车行
+### 唐代：杜甫
+```
+车辚辚，马萧萧，行人弓箭各在腰。
+耶娘妻子走相送，尘埃不见咸阳桥。(耶娘 一作：“爷”)
+牵衣顿足拦道哭，哭声直上干云霄。
+道旁过者问行人，行人但云点行频。
+或从十五北防河，便至四十西营田。
+去时里正与裹头，归来头白还戍边。
+边庭流血成海水，武皇开边意未已。
+君不闻汉家山东二百州，千村万落生荆杞。
+纵有健妇把锄犁，禾生陇亩无东西。
+况复秦兵耐苦战，被驱不异犬与鸡。
+长者虽有问，役夫敢申恨？
+且如今年冬，未休关西卒。
+县官急索租，租税从何出？
+信知生男恶，反是生女好。
+生女犹得嫁比邻，生男埋没随百草。
+君不见，青海头，古来白骨无人收。
+新鬼烦冤旧鬼哭，天阴雨湿声啾啾！
+```
+---
+## 题龙阳县青草湖
+### 元代：唐珙
+```
+西风吹老洞庭波，一夜湘君白发多。
+醉后不知天在水，满船清梦压星河。
+```
+---
+## 早春呈水部张十八员外二首
+### 唐代：韩愈
+```
+天街小雨润如酥，草色遥看近却无。
+最是一年春好处，绝胜烟柳满皇都。
+
+莫道官忙身老大，即无年少逐春心。
+凭君先到江头看，柳色如今深未深。
+```
+---
+## 春雪
+### 唐代：韩愈
+```
+新年都未有芳华，二月初惊见草芽。 
+白雪却嫌春色晚，故穿庭树作飞花。
+```
+---
+## 左迁至蓝关示侄孙湘
+### 唐代：韩愈
+```
+一封朝奏九重天，夕贬潮州路八千。
+欲为圣明除弊事，肯将衰朽惜残年！
+云横秦岭家何在？雪拥蓝关马不前。
+知汝远来应有意，好收吾骨瘴江边。（版本一）
+
+一封朝奏九重天，夕贬潮阳路八千。
+本为圣朝除弊政，敢将衰朽惜残年。
+云横秦岭家何在？雪拥蓝关马不前。
+知汝远来应有意，好收吾骨瘴江边。（版本二）
+```
+---
+## 雁门太守行
+### 唐代：李贺
+```
+黑云压城城欲摧，甲光向日金鳞开。(向日 一作：向月)
+角声满天秋色里，塞上燕脂凝夜紫。(塞上 一作：塞土)
+半卷红旗临易水，霜重鼓寒声不起。
+报君黄金台上意，提携玉龙为君死！
+```
+---
+## 南园十三首
+###　唐代：李贺
+```
+男儿何不带吴钩，收取关山五十州。
+请君暂上凌烟阁，若个书生万户侯？
+```
+---
+## 李凭箜篌引
+###　唐代：李贺
+```
+吴丝蜀桐张高秋，空山凝云颓不流。
+江娥啼竹素女愁，李凭中国弹箜篌。
+昆山玉碎凤凰叫，芙蓉泣露香兰笑。
+十二门前融冷光，二十三丝动紫皇。
+女娲炼石补天处，石破天惊逗秋雨。
+梦入神山教神妪，老鱼跳波瘦蛟舞。
+吴质不眠倚桂树，露脚斜飞湿寒兔。
+```
+---
+## 滁州西涧
+### 唐代：韦应物
+```
+独怜幽草涧边生，上有黄鹂深树鸣。 
+春潮带雨晚来急，野渡无人舟自横。
+```
+---
+## 江雪
+### 唐代：柳宗元
+```
+千山鸟飞绝，万径人踪灭。
+孤舟蓑笠翁，独钓寒江雪。
+```
+---
+## 忆扬州
+### 唐代：徐凝
+```
+萧娘脸薄难胜泪，桃叶眉尖易觉愁。
+天下三分明月夜，二分无赖是扬州。
 ```
