--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -1,4 +1,4 @@
-## 《江城子·乙卯正月二十日夜记梦》
+## 江城子·乙卯正月二十日夜记梦
 ### 宋代：苏轼
 ```
 十年生死两茫茫，不思量，自难忘。
@@ -9,7 +9,16 @@
 料得年年肠断处，明月夜，短松冈。(肠断 一作：断肠)
 ```
 ---
-## 《念奴娇·赤壁怀古》
+## 定风波·莫听穿林打叶声
+###　宋代：苏轼
+> 三月七日，沙湖道中遇雨。雨具先去，同行皆狼狈，余独不觉，已而遂晴，故作此词。
+
+```
+莫听穿林打叶声，何妨吟啸且徐行。竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。
+料峭春风吹酒醒，微冷，山头斜照却相迎。回首向来萧瑟处，归去，也无风雨也无晴。
+```
+---
+## 念奴娇·赤壁怀古
 ### 宋代：苏轼
 ```
 大江东去，浪淘尽，千古风流人物。
@@ -22,9 +31,10 @@
 人生如梦，一尊还酹江月。(人生 一作：人间；尊 通：樽)
 ```
 ---
-## 《水调歌头·明月几时有》
+## 水调歌头·明月几时有
 ### 宋代：苏轼
 > 丙辰中秋，欢饮达旦，大醉，作此篇，兼怀子由。
+
 ```
 明月几时有？把酒问青天。
 不知天上宫阙，今夕是何年。
@@ -36,7 +46,7 @@
 但愿人长久，千里共婵娟。(长向 一作：偏向)
 ```
 ---
-## 《江城子·密州出猎》
+## 江城子·密州出猎
 ### 宋代：苏轼
 ```
 老夫聊发少年狂，左牵黄，右擎苍，锦帽貂裘，千骑卷平冈。
@@ -45,7 +55,7 @@
 会挽雕弓如满月，西北望，射天狼。
 ```
 ---
-## 《卜算子·我住长江头》
+## 卜算子·我住长江头
 ### 宋代：李之仪
 ```
 我住长江头，君住长江尾。
@@ -54,7 +64,7 @@
 只愿君心似我心，定不负相思意。
 ```
 ---
-## 《临江仙·送钱穆父》
+## 临江仙·送钱穆父
 ### 宋代：苏轼
 ```
 一别都门三改火，天涯踏尽红尘。
@@ -65,7 +75,7 @@
 人生如逆旅，我亦是行人。(尊 通：樽)
 ```
 ---
-## 《一剪梅·舟过吴江》
+## 一剪梅·舟过吴江
 ### 宋代：蒋捷
 ```
 一片春愁待酒浇。
@@ -76,7 +86,7 @@
 流光容易把人抛，红了樱桃，绿了芭蕉。
 ```
 ---
-## 《鹊桥仙·纤云弄巧》
+## 鹊桥仙·纤云弄巧
 ### 宋代：秦观
 ```
 纤云弄巧，飞星传恨，银汉迢迢暗度。
@@ -85,9 +95,21 @@
 两情若是久长时，又岂在朝朝暮暮。
 ```
 ---
-## 《扬州慢·淮左名都》
+## 八六子·倚危亭
+### 宋代：秦观
+```
+倚危亭。恨如芳草，萋萋刬尽还生。
+念柳外青骢别后，水边红袂分时，怆然暗惊。
+无端天与娉婷。
+夜月一帘幽梦，春风十里柔情。
+怎奈向、欢娱渐随流水，素弦声断，翠绡香减，那堪片片飞花弄晚，蒙蒙残雨笼晴。
+正销凝。黄鹂又啼数声。
+```
+---
+## 扬州慢·淮左名都
 ### 宋代：姜夔
 > 淳熙丙申至日，予过维扬。夜雪初霁，荠麦弥望。入其城，则四顾萧条，寒水自碧，暮色渐起，戍角悲吟。予怀怆然，感慨今昔，因自度此曲。千岩老人以为有“黍离”之悲也。
+
 ```
 淮左名都，竹西佳处，解鞍少驻初程。
 过春风十里。尽荠麦青青。
@@ -100,7 +122,7 @@
 念桥边红药，年年知为谁生。
 ```
 ---
-## 《玉楼春·尊前拟把归期说》
+## 玉楼春·尊前拟把归期说
 ### 宋代：欧阳修
 ```
 尊前拟把归期说，欲语春容先惨咽。
@@ -109,7 +131,7 @@
 直须看尽洛城花，始共春风容易别。
 ```
 ---
-## 《水调歌头·送章德茂大卿使虏》
+## 水调歌头·送章德茂大卿使虏
 ### 宋代：陈亮
 ```
 不见南师久，漫说北群空。
@@ -122,7 +144,7 @@
 胡运何须问，赫日自当中！
 ```
 ---
-## 《一剪梅·红藕香残玉簟秋》
+## 一剪梅·红藕香残玉簟秋
 ### 宋代：李清照
 ```
 红藕香残玉簟秋。
@@ -133,7 +155,7 @@
 此情无计可消除，才下眉头，却上心头。
 ```
 ---
-## 《钗头凤·红酥手》
+## 钗头凤·红酥手
 ### 宋代：陆游
 ```
 红酥手，黄縢酒，满城春色宫墙柳。
@@ -142,7 +164,21 @@
 山盟虽在，锦书难托。莫、莫、莫！
 ```
 ---
-## 《钗头凤·世情薄》
+## 卜算子·咏梅
+### 宋代：陆游
+```
+驿外断桥边，寂寞开无主。已是黄昏独自愁，更著风和雨。 
+无意苦争春，一任群芳妒。零落成泥碾作尘，只有香如故。
+```
+---
+## 诉衷情·当年万里觅封侯
+### 宋代：陆游
+```
+当年万里觅封侯，匹马戍梁州。关河梦断何处？尘暗旧貂裘。
+胡未灭，鬓先秋，泪空流。此生谁料，心在天山，身老沧洲。
+```
+---
+## 钗头凤·世情薄
 ### 宋代：唐婉
 ```
 世情薄，人情恶，雨送黄昏花易落。
@@ -151,7 +187,7 @@
 角声寒，夜阑珊。怕人寻问，咽泪装欢。瞒，瞒，瞒！(装欢 通：妆)
 ```
 ---
-## 《苏幕遮·怀旧》
+## 苏幕遮·怀旧
 ### 宋代：范仲淹
 ```
 碧云天，黄叶地。
@@ -162,14 +198,14 @@
 明月楼高休独倚。酒入愁肠，化作相思泪。(留人睡 一作：留人醉)
 ```
 ---
-## 《丑奴儿·书博山道中壁》
+## 丑奴儿·书博山道中壁
 ### 宋代：辛弃疾
 ```
 少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。 
 而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。
 ```
 ---
-##  《青玉案·元夕》
+##  青玉案·元夕
 ### 宋代：辛弃疾
 ```
 东风夜放花千树。更吹落、星如雨。
@@ -178,7 +214,7 @@
 众里寻他千百度。蓦然回首，那人却在，灯火阑珊处。
 ```
 ---
-## 《破阵子·为陈同甫赋壮词以寄之》
+## 破阵子·为陈同甫赋壮词以寄之
 ### 宋代：辛弃疾
 ```
 醉里挑灯看剑，梦回吹角连营。
@@ -187,11 +223,221 @@
 了却君王天下事，赢得生前身后名。可怜白发生！
 ```
 ---
-## 《西江月·夜行黄沙道中》
+## 菩萨蛮·书江西造口壁
+### 宋代：辛弃疾
+```
+郁孤台下清江水，中间多少行人泪。西北望长安，可怜无数山。
+青山遮不住，毕竟东流去。江晚正愁余，山深闻鹧鸪。 (愁余 一作：愁予)
+```
+---
+## 西江月·夜行黄沙道中
 ### 宋代：辛弃疾
 ```
 明月别枝惊鹊，清风半夜鸣蝉。
 稻花香里说丰年，听取蛙声一片。 
 七八个星天外，两三点雨山前。
 旧时茅店社林边，路转溪桥忽见。(溪桥 一作：溪头)
+```
+---
+## 南乡子·登京口北固亭有怀
+###　宋代：辛弃疾
+```
+何处望神州？满眼风光北固楼。
+千古兴亡多少事？悠悠。不尽长江滚滚流。
+年少万兜鍪，坐断东南战未休。
+天下英雄谁敌手？曹刘。生子当如孙仲谋。
+```
+---
+## 永遇乐·京口北固亭怀古
+### 宋代：辛弃疾
+```
+千古江山，英雄无觅，孙仲谋处。
+舞榭歌台，风流总被雨打风吹去。
+斜阳草树，寻常巷陌，人道寄奴曾住。
+想当年，金戈铁马，气吞万里如虎。
+元嘉草草，封狼居胥，赢得仓皇北顾。
+四十三年，望中犹记，烽火扬州路。
+可堪回首，佛狸祠下，一片神鸦社鼓。
+凭谁问，廉颇老矣，尚能饭否？
+```
+---
+## 水龙吟·登建康赏心亭
+### 宋代：辛弃疾
+```
+楚天千里清秋，水随天去秋无际。
+遥岑远目，献愁供恨，玉簪螺髻。
+落日楼头，断鸿声里，江南游子。
+把吴钩看了，栏杆拍遍，无人会，登临意。(栏杆 一作：阑干)
+休说鲈鱼堪脍，尽西风，季鹰归未？
+求田问舍，怕应羞见，刘郎才气。
+可惜流年，忧愁风雨，树犹如此！
+倩何人唤取，红巾翠袖，揾英雄泪！
+```
+---
+## 满江红·写怀
+### 宋代：岳飞
+```
+怒发冲冠，凭栏处、潇潇雨歇。
+抬望眼，仰天长啸，壮怀激烈。
+三十功名尘与土，八千里路云和月。
+莫等闲，白了少年头，空悲切！(栏 通：阑)
+靖康耻，犹未雪。臣子恨，何时灭！
+驾长车，踏破贺兰山缺。
+壮志饥餐胡虏肉，笑谈渴饮匈奴血。
+待从头、收拾旧山河，朝天阙。(壮志 一作：壮士；兰山缺 一作：兰山阙)
+```
+---
+## 鹊桥仙·纤云弄巧
+### 宋代：秦观
+```
+纤云弄巧，飞星传恨，银汉迢迢暗度。金风玉露一相逢，便胜却人间无数。(度 通：渡)
+柔情似水，佳期如梦，忍顾鹊桥归路。两情若是久长时，又岂在朝朝暮暮。
+```
+---
+## 浣溪沙·漠漠轻寒上小楼
+### 宋代：秦观
+```
+漠漠轻寒上小楼，晓阴无赖似穷秋。淡烟流水画屏幽。
+自在飞花轻似梦，无边丝雨细如愁。宝帘闲挂小银钩。
+```
+---
+## 采桑子·时光只解催人老
+### 宋代：晏殊
+```
+时光只解催人老，不信多情，长恨离亭，泪滴春衫酒易醒。
+梧桐昨夜西风急，淡月胧明，好梦频惊，何处高楼雁一声？
+```
+---
+## 浣溪沙·一曲新词酒一杯
+### 宋代：晏殊
+```
+一曲新词酒一杯，去年天气旧亭台。夕阳西下几时回？
+无可奈何花落去，似曾相识燕归来。小园香径独徘徊。
+```
+---
+## 蝶恋花·槛菊愁烟兰泣露
+### 宋代：晏殊
+```
+槛菊愁烟兰泣露，罗幕轻寒，燕子双飞去。
+明月不谙离恨苦，斜光到晓穿朱户。(双飞去 一作：双来去 离恨苦 一作：离别苦)
+昨夜西风凋碧树，独上高楼，望尽天涯路。
+欲寄彩笺兼尺素，山长水阔知何处？
+```
+---
+## 破阵子·春景
+### 宋代：晏殊
+```
+燕子来时新社，梨花落后清明。池上碧苔三四点，叶底黄鹂一两声。日长飞絮轻。
+巧笑东邻女伴，采桑径里逢迎。疑怪昨宵春梦好，元是今朝斗草赢。笑从双脸生。
+```
+---
+## 浣溪沙·一向年光有限身
+### 宋代：晏殊
+```
+一向年光有限身，等闲离别易销魂，酒筵歌席莫辞频。
+满目山河空念远，落花风雨更伤春，不如怜取眼前人。
+```
+---
+## 玉楼春·春恨
+### 宋代：晏殊
+```
+绿杨芳草长亭路，年少抛人容易去。楼头残梦五更钟，花底离愁三月雨。
+无情不似多情苦，一寸还成千万缕。天涯地角有穷时，只有相思无尽处。
+```
+---
+## 清平乐·红笺小字
+### 宋代：晏殊
+```
+红笺小字。说尽平生意。鸿雁在云鱼在水。惆怅此情难寄。 
+斜阳独倚西楼。遥山恰对帘钩。人面不知何处，绿波依旧东流。
+```
+---
+## 采桑子·时光只解催人老
+### 宋代：晏殊
+```
+时光只解催人老，不信多情，长恨离亭，泪滴春衫酒易醒。
+梧桐昨夜西风急，淡月胧明，好梦频惊，何处高楼雁一声？
+```
+---
+## 卜算子·答施
+### 宋代：乐婉
+```
+相思似海深，旧事如天远。泪滴千千万万行，更使人、愁肠断。
+要见无因见，拚了终难拚。若是前生未有缘，待重结、来生愿。
+```
+---
+## 山园小梅二首
+### 宋代：林逋
+```
+众芳摇落独暄妍，占尽风情向小园。
+疏影横斜水清浅，暗香浮动月黄昏。
+霜禽欲下先偷眼，粉蝶如知合断魂。
+幸有微吟可相狎，不须檀板共金樽。
+
+剪绡零碎点酥乾，向背稀稠画亦难。
+日薄从甘春至晚，霜深应怯夜来寒。
+澄鲜只共邻僧惜，冷落犹嫌俗客看。
+忆着江南旧行路，酒旗斜拂堕吟鞍。
+```
+---
+## 临江仙·梦后楼台高锁
+### 宋代：晏几道
+```
+梦后楼台高锁，酒醒帘幕低垂。去年春恨却来时。落花人独立，微雨燕双飞。 
+记得小蘋初见，两重心字罗衣。琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
+```
+---
+## 雨霖铃·寒蝉凄切
+###　宋代：柳永
+```
+寒蝉凄切，对长亭晚，骤雨初歇。
+都门帐饮无绪，留恋处，兰舟催发。
+执手相看泪眼，竟无语凝噎。
+念去去，千里烟波，暮霭沉沉楚天阔。
+多情自古伤离别，更那堪，冷落清秋节！
+今宵酒醒何处？杨柳岸，晓风残月。
+此去经年，应是良辰好景虚设。
+便纵有千种风情，更与何人说？(好景 一作：美景)
+```
+---
+## 蝶恋花·伫倚危楼风细细
+###　宋代：柳永
+```
+伫倚危楼风细细，望极春愁，黯黯生天际。
+草色烟光残照里，无言谁会凭阑意。(阑 通 栏)
+拟把疏狂图一醉，对酒当歌，强乐还无味。
+衣带渐宽终不悔，为伊消得人憔悴。
+```
+---
+## 望海潮·东南形胜
+### 宋代：柳永
+```
+东南形胜，三吴都会，钱塘自古繁华，烟柳画桥，风帘翠幕，参差十万人家。
+云树绕堤沙，怒涛卷霜雪，天堑无涯。
+市列珠玑，户盈罗绮，竞豪奢。
+重湖叠巘清嘉。有三秋桂子，十里荷花。
+羌管弄晴，菱歌泛夜，嬉嬉钓叟莲娃。
+千骑拥高牙。乘醉听箫鼓，吟赏烟霞。异日图将好景，归去凤池夸。
+```
+---
+## 玉楼春·尊前拟把归期说
+### 宋代：欧阳修
+```
+尊前拟把归期说，欲语春容先惨咽。人生自是有情痴，此恨不关风与月。
+离歌且莫翻新阕，一曲能教肠寸结。直须看尽洛城花，始共春风容易别。
+```
+---
+## 蝶恋花·庭院深深深几许
+### 宋代：欧阳修
+```
+庭院深深深几许，杨柳堆烟，帘幕无重数。玉勒雕鞍游冶处，楼高不见章台路。
+雨横风狂三月暮，门掩黄昏，无计留春住。泪眼问花花不语，乱红飞过秋千去。
+```
+---
+## 唐多令·芦叶满汀洲
+### 宋代：刘过
+> 安远楼小集，侑觞歌板之姬黄其姓者，乞词于龙洲道人，为赋此《唐多令》。同柳阜之、刘去非、石民瞻、周嘉仲、陈孟参、孟容。时八月五日也。
+```
+芦叶满汀洲，寒沙带浅流。二十年重过南楼。柳下系船犹未稳，能几日，又中秋。
+黄鹤断矶头，故人今在否？旧江山浑是新愁。欲买桂花同载酒，终不似，少年游。(在否 一作：在不)
 ```
