update some poems

--- a/poetry/元词.md
+++ b/poetry/元词.md
@@ -46,6 +46,17 @@
 ## 人月圆·山中书事
 ### 元代：张可久
 ```
-兴亡千古繁华梦，诗眼倦天涯。孔林乔木，吴宫蔓草，楚庙寒鸦。
-数间茅舍，藏书万卷，投老村家。山中何事？松花酿酒，春水煎茶。
+兴亡千古繁华梦，诗眼倦天涯。
+孔林乔木，吴宫蔓草，楚庙寒鸦。
+数间茅舍，藏书万卷，投老村家。
+山中何事？松花酿酒，春水煎茶。
+```
+---
+## 普天乐·咏世
+### 元代：张鸣善
+```
+洛阳花，梁园月，好花须买，皓月须赊。
+花倚栏干看烂熳开，月曾把酒问团圆夜。
+月有盈亏花有开谢，想人生最苦离别。
+花谢了三春近也，月缺了中秋到也，人去了何日来也？
 ```
