--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -317,7 +317,7 @@
 ```
 ---
 ## 山居秋暝
-###　唐代：王维
+### 唐代：王维
 ```
 空山新雨后，天气晚来秋。
 明月松间照，清泉石上流。
@@ -369,7 +369,7 @@
 愿君多采撷，此物最相思
 ```
 ---
-##　鸟鸣涧
+## 鸟鸣涧
 ### 唐代：王维
 ```
 人闲桂花落，夜静春山空。
@@ -410,7 +410,7 @@
 何因不归去？淮上有秋山。
 ```
 ---
-##　宣州谢脁楼饯别校书叔云
+## 宣州谢脁楼饯别校书叔云
 ### 唐代：李白
 ```
 弃我去者，昨日之日不可留；
@@ -528,6 +528,18 @@
 我寄愁心与明月，随风直到夜郎西。(随风 一作：随君)
 ```
 ---
+## 月下独酌四首·其一
+### 唐代：李白
+```
+花间一壶酒，独酌无相亲。
+举杯邀明月，对影成三人。
+月既不解饮，影徒随我身。
+暂伴月将影，行乐须及春。
+我歌月徘徊，我舞影零乱。
+醒时同交欢，醉后各分散。(同交欢 一作：相交欢)
+永结无情游，相期邈云汉。
+```
+---
 ## 蜀道难
 ### 唐代：李白
 ```
@@ -554,6 +566,13 @@
 蜀道之难,难于上青天，侧身西望长咨嗟！
 ```
 ---
+## 寄人
+### 唐代：张泌
+```
+别梦依依到谢家，小廊回合曲阑斜。
+多情只有春庭月，犹为离人照落花。
+```
+---
 ## 咸阳城东楼 / 咸阳城西楼晚眺
 ### 唐代：许浑
 ```
@@ -574,7 +593,7 @@
 ```
 ---
 ## 草 / 赋得古原草送别
-###　唐代：白居易
+### 唐代：白居易
 ```
 离离原上草，一岁一枯荣。
 野火烧不尽，春风吹又生。
@@ -601,7 +620,7 @@
 ```
 ---
 ## 问刘十九
-###　唐代：白居易
+### 唐代：白居易
 ```
 绿蚁新醅酒，红泥小火炉。
 晚来天欲雪，能饮一杯无？
@@ -730,7 +749,7 @@
 座中泣下谁最多？江州司马青衫湿。
 ```
 ---
-##　江南逢李龟年
+## 江南逢李龟年
 ### 唐代：杜甫
 ```
 岐王宅里寻常见，崔九堂前几度闻。 
@@ -754,7 +773,8 @@
 南村群童欺我老无力，忍能对面为盗贼，公然抱茅入竹去。
 唇焦口燥呼不得，归来倚杖自叹息。
 俄顷风定云墨色，秋天漠漠向昏黑。
-布衾多年冷似铁，娇儿恶卧踏里裂。床头屋漏无干处，雨脚如麻未断绝。
+布衾多年冷似铁，娇儿恶卧踏里裂。
+床头屋漏无干处，雨脚如麻未断绝。
 自经丧乱少睡眠，长夜沾湿何由彻?
 安得广厦千万间，大庇天下寒士俱欢颜，风雨不动安如山。
 呜呼！何时眼前突兀见此屋，吾庐独破受冻死亦足！(死亦足 一作：死意足）
@@ -925,14 +945,14 @@
 ```
 ---
 ## 南园十三首
-###　唐代：李贺
+### 唐代：李贺
 ```
 男儿何不带吴钩，收取关山五十州。
 请君暂上凌烟阁，若个书生万户侯？
 ```
 ---
 ## 李凭箜篌引
-###　唐代：李贺
+### 唐代：李贺
 ```
 吴丝蜀桐张高秋，空山凝云颓不流。
 江娥啼竹素女愁，李凭中国弹箜篌。
@@ -941,6 +961,18 @@
 女娲炼石补天处，石破天惊逗秋雨。
 梦入神山教神妪，老鱼跳波瘦蛟舞。
 吴质不眠倚桂树，露脚斜飞湿寒兔。
+```
+---
+## 金铜仙人辞汉歌
+### 唐代：李贺
+> 魏明帝青龙元年八月，诏宫官牵车西取汉孝武捧露盘仙人，欲立置前殿。宫官既拆盘，仙人临载，乃潸然泪下。唐诸王孙李长吉遂作《金铜仙人辞汉歌》。
+```
+茂陵刘郎秋风客，夜闻马嘶晓无迹。
+画栏桂树悬秋香，三十六宫土花碧。
+魏官牵车指千里，东关酸风射眸子。
+空将汉月出宫门，忆君清泪如铅水。
+衰兰送客咸阳道，天若有情天亦老。
+携盘独出月荒凉，渭城已远波声小。
 ```
 ---
 ## 滁州西涧
@@ -962,4 +994,41 @@
 ```
 萧娘脸薄难胜泪，桃叶眉尖易觉愁。
 天下三分明月夜，二分无赖是扬州。
+```
+---
+## 蜂
+### 唐代：罗隐
+```
+不论平地与山尖，无限风光尽被占。 
+采得百花成蜜后，为谁辛苦为谁甜？
+```
+---
+## 西施
+## 唐代：罗隐
+```
+家国兴亡自有时，吴人何苦怨西施。
+西施若解倾吴国，越国亡来又是谁。
+```
+---
+## 题长安壁主人
+### 唐代：张谓
+```
+世人结交须黄金，黄金不多交不深。 
+纵令然诺暂相许，终是悠悠行路心。
+```
+---
+## 送杜少府之任蜀州 / 送杜少府之任蜀川
+### 唐代：王勃
+```
+城阙辅三秦，风烟望五津。
+与君离别意，同是宦游人。
+海内存知己，天涯若比邻。
+无为在歧路，儿女共沾巾。
+```
+---
+## 枫桥夜泊
+### 唐代：张继
+```
+月落乌啼霜满天，江枫渔火对愁眠。
+姑苏城外寒山寺，夜半钟声到客船。
 ```
