--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -10,12 +10,14 @@
 ```
 ---
 ## 定风波·莫听穿林打叶声
-###　宋代：苏轼
+### 宋代：苏轼
 > 三月七日，沙湖道中遇雨。雨具先去，同行皆狼狈，余独不觉，已而遂晴，故作此词。
 
 ```
-莫听穿林打叶声，何妨吟啸且徐行。竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。
-料峭春风吹酒醒，微冷，山头斜照却相迎。回首向来萧瑟处，归去，也无风雨也无晴。
+莫听穿林打叶声，何妨吟啸且徐行。
+竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。
+料峭春风吹酒醒，微冷，山头斜照却相迎。
+回首向来萧瑟处，归去，也无风雨也无晴。
 ```
 ---
 ## 念奴娇·赤壁怀古
@@ -55,15 +57,6 @@
 会挽雕弓如满月，西北望，射天狼。
 ```
 ---
-## 卜算子·我住长江头
-### 宋代：李之仪
-```
-我住长江头，君住长江尾。
-日日思君不见君，共饮长江水。 
-此水几时休，此恨何时已。
-只愿君心似我心，定不负相思意。
-```
----
 ## 临江仙·送钱穆父
 ### 宋代：苏轼
 ```
@@ -73,6 +66,33 @@
 惆怅孤帆连夜发，送行淡月微云。
 尊前不用翠眉颦。
 人生如逆旅，我亦是行人。(尊 通：樽)
+```
+---
+### 南乡子·重九涵辉楼呈徐君猷
+### 宋代：苏轼
+```
+霜降水痕收。浅碧鳞鳞露远洲。
+酒力渐消风力软，飕飕。破帽多情却恋头。
+佳节若为酬。但把清尊断送秋。
+万事到头都是梦，休休。明日黄花蝶也愁。
+```
+---
+## 浣溪沙·游蕲水清泉寺
+### 宋代：苏轼
+> 游蕲水清泉寺，寺临兰溪，溪水西流。
+
+```
+山下兰芽短浸溪，松间沙路净无泥，潇潇暮雨子规啼。(潇潇 一作：萧萧)
+谁道人生无再少？门前流水尚能西！休将白发唱黄鸡。
+```
+---
+## 卜算子·我住长江头
+### 宋代：李之仪
+```
+我住长江头，君住长江尾。
+日日思君不见君，共饮长江水。 
+此水几时休，此恨何时已。
+只愿君心似我心，定不负相思意。
 ```
 ---
 ## 一剪梅·舟过吴江
@@ -93,6 +113,21 @@
 金风玉露一相逢，便胜却人间无数。(度 通：渡)
 柔情似水，佳期如梦，忍顾鹊桥归路。
 两情若是久长时，又岂在朝朝暮暮。
+```
+---
+## 如梦令·春景
+### 宋代：秦观
+```
+莺嘴啄花红溜，燕尾点波绿皱。
+指冷玉笙寒，吹彻小梅春透。
+依旧，依旧，人与绿杨俱瘦。
+```
+---
+## 浣溪沙·漠漠轻寒上小楼
+### 宋代：秦观
+```
+漠漠轻寒上小楼，晓阴无赖似穷秋。淡烟流水画屏幽。
+自在飞花轻似梦，无边丝雨细如愁。宝帘闲挂小银钩。
 ```
 ---
 ## 八六子·倚危亭
@@ -153,6 +188,17 @@
 花自飘零水自流。
 一种相思，两处闲愁。
 此情无计可消除，才下眉头，却上心头。
+```
+---
+## 声声慢·寻寻觅觅
+### 宋代：李清照
+```
+寻寻觅觅，冷冷清清，凄凄惨惨戚戚。
+乍暖还寒时候，最难将息。三杯两盏淡酒，怎敌他、晚来风急？
+雁过也，正伤心，却是旧时相识。
+满地黄花堆积。憔悴损，如今有谁堪摘？
+守着窗儿，独自怎生得黑？梧桐更兼细雨，到黄昏、点点滴滴。
+这次第，怎一个愁字了得！（守着窗儿 一作：守著窗儿）
 ```
 ---
 ## 钗头凤·红酥手
@@ -240,7 +286,7 @@
 ```
 ---
 ## 南乡子·登京口北固亭有怀
-###　宋代：辛弃疾
+### 宋代：辛弃疾
 ```
 何处望神州？满眼风光北固楼。
 千古兴亡多少事？悠悠。不尽长江滚滚流。
@@ -287,20 +333,6 @@
 待从头、收拾旧山河，朝天阙。(壮志 一作：壮士；兰山缺 一作：兰山阙)
 ```
 ---
-## 鹊桥仙·纤云弄巧
-### 宋代：秦观
-```
-纤云弄巧，飞星传恨，银汉迢迢暗度。金风玉露一相逢，便胜却人间无数。(度 通：渡)
-柔情似水，佳期如梦，忍顾鹊桥归路。两情若是久长时，又岂在朝朝暮暮。
-```
----
-## 浣溪沙·漠漠轻寒上小楼
-### 宋代：秦观
-```
-漠漠轻寒上小楼，晓阴无赖似穷秋。淡烟流水画屏幽。
-自在飞花轻似梦，无边丝雨细如愁。宝帘闲挂小银钩。
-```
----
 ## 采桑子·时光只解催人老
 ### 宋代：晏殊
 ```
@@ -327,8 +359,10 @@
 ## 破阵子·春景
 ### 宋代：晏殊
 ```
-燕子来时新社，梨花落后清明。池上碧苔三四点，叶底黄鹂一两声。日长飞絮轻。
-巧笑东邻女伴，采桑径里逢迎。疑怪昨宵春梦好，元是今朝斗草赢。笑从双脸生。
+燕子来时新社，梨花落后清明。
+池上碧苔三四点，叶底黄鹂一两声。日长飞絮轻。
+巧笑东邻女伴，采桑径里逢迎。
+疑怪昨宵春梦好，元是今朝斗草赢。笑从双脸生。
 ```
 ---
 ## 浣溪沙·一向年光有限身
@@ -341,8 +375,10 @@
 ## 玉楼春·春恨
 ### 宋代：晏殊
 ```
-绿杨芳草长亭路，年少抛人容易去。楼头残梦五更钟，花底离愁三月雨。
-无情不似多情苦，一寸还成千万缕。天涯地角有穷时，只有相思无尽处。
+绿杨芳草长亭路，年少抛人容易去。
+楼头残梦五更钟，花底离愁三月雨。
+无情不似多情苦，一寸还成千万缕。
+天涯地角有穷时，只有相思无尽处。
 ```
 ---
 ## 清平乐·红笺小字
@@ -383,12 +419,14 @@
 ## 临江仙·梦后楼台高锁
 ### 宋代：晏几道
 ```
-梦后楼台高锁，酒醒帘幕低垂。去年春恨却来时。落花人独立，微雨燕双飞。 
-记得小蘋初见，两重心字罗衣。琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
+梦后楼台高锁，酒醒帘幕低垂。
+去年春恨却来时。落花人独立，微雨燕双飞。 
+记得小蘋初见，两重心字罗衣。
+琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
 ```
 ---
 ## 雨霖铃·寒蝉凄切
-###　宋代：柳永
+### 宋代：柳永
 ```
 寒蝉凄切，对长亭晚，骤雨初歇。
 都门帐饮无绪，留恋处，兰舟催发。
@@ -401,7 +439,7 @@
 ```
 ---
 ## 蝶恋花·伫倚危楼风细细
-###　宋代：柳永
+### 宋代：柳永
 ```
 伫倚危楼风细细，望极春愁，黯黯生天际。
 草色烟光残照里，无言谁会凭阑意。(阑 通 栏)
@@ -412,32 +450,52 @@
 ## 望海潮·东南形胜
 ### 宋代：柳永
 ```
-东南形胜，三吴都会，钱塘自古繁华，烟柳画桥，风帘翠幕，参差十万人家。
+东南形胜，三吴都会，钱塘自古繁华，
+烟柳画桥，风帘翠幕，参差十万人家。
 云树绕堤沙，怒涛卷霜雪，天堑无涯。
 市列珠玑，户盈罗绮，竞豪奢。
 重湖叠巘清嘉。有三秋桂子，十里荷花。
 羌管弄晴，菱歌泛夜，嬉嬉钓叟莲娃。
-千骑拥高牙。乘醉听箫鼓，吟赏烟霞。异日图将好景，归去凤池夸。
+千骑拥高牙。乘醉听箫鼓，吟赏烟霞。
+异日图将好景，归去凤池夸。
+```
+---
+## 忆帝京·薄衾小枕凉天气
+### 宋代：柳永
+```
+薄衾小枕凉天气，乍觉别离滋味。
+展转数寒更，起了还重睡。
+毕竟不成眠，一夜长如岁。 
+也拟待、却回征辔；又争奈、已成行计。
+万种思量，多方开解，只恁寂寞厌厌地。
+系我一生心，负你千行泪。
 ```
 ---
 ## 玉楼春·尊前拟把归期说
 ### 宋代：欧阳修
 ```
-尊前拟把归期说，欲语春容先惨咽。人生自是有情痴，此恨不关风与月。
-离歌且莫翻新阕，一曲能教肠寸结。直须看尽洛城花，始共春风容易别。
+尊前拟把归期说，欲语春容先惨咽。
+人生自是有情痴，此恨不关风与月。
+离歌且莫翻新阕，一曲能教肠寸结。
+直须看尽洛城花，始共春风容易别。
 ```
 ---
 ## 蝶恋花·庭院深深深几许
 ### 宋代：欧阳修
 ```
-庭院深深深几许，杨柳堆烟，帘幕无重数。玉勒雕鞍游冶处，楼高不见章台路。
-雨横风狂三月暮，门掩黄昏，无计留春住。泪眼问花花不语，乱红飞过秋千去。
+庭院深深深几许，杨柳堆烟，帘幕无重数。
+玉勒雕鞍游冶处，楼高不见章台路。
+雨横风狂三月暮，门掩黄昏，无计留春住。
+泪眼问花花不语，乱红飞过秋千去。
 ```
 ---
 ## 唐多令·芦叶满汀洲
 ### 宋代：刘过
 > 安远楼小集，侑觞歌板之姬黄其姓者，乞词于龙洲道人，为赋此《唐多令》。同柳阜之、刘去非、石民瞻、周嘉仲、陈孟参、孟容。时八月五日也。
+
 ```
-芦叶满汀洲，寒沙带浅流。二十年重过南楼。柳下系船犹未稳，能几日，又中秋。
-黄鹤断矶头，故人今在否？旧江山浑是新愁。欲买桂花同载酒，终不似，少年游。(在否 一作：在不)
+芦叶满汀洲，寒沙带浅流。二十年重过南楼。
+柳下系船犹未稳，能几日，又中秋。
+黄鹤断矶头，故人今在否？旧江山浑是新愁。
+欲买桂花同载酒，终不似，少年游。(在否 一作：在不)
 ```
