--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -20,8 +20,18 @@
 已作迟迟君去鲁，犹教缓缓妾还家。
 ```
 ---
+## 惠崇春江晚景二首 / 惠崇春江晓景二首
+### 宋代：苏轼
+```
+竹外桃花三两枝，春江水暖鸭先知。
+蒌蒿满地芦芽短，正是河豚欲上时。
+
+两两归鸿欲破群，依依还似北归人。
+遥知朔漠多风雪，更待江南半月春。
+```
+---
 ## 断句
-###　宋代：苏麟
+### 宋代：苏麟
 ```
 近水楼台先得月，向阳花木易为春。
 ```
@@ -101,4 +111,18 @@
 ```
 生当作人杰，死亦为鬼雄。
 至今思项羽，不肯过江东。
+```
+---
+## 雪梅·其一
+### 宋代：卢梅坡
+```
+梅雪争春未肯降，骚人搁笔费评章。
+梅须逊雪三分白，雪却输梅一段香。
+```
+---
+## 春日
+### 宋代：朱熹
+```
+胜日寻芳泗水滨，无边光景一时新。
+等闲识得东风面，万紫千红总是春。
 ```
