--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -19,8 +19,10 @@
 ## 蝶恋花·阅尽天涯离别苦
 ### 清代：王国维
 ```
-阅尽天涯离别苦，不道归来，零落花如许。花底相看无一语，绿窗春与天俱莫。(俱莫 一作：俱暮)
-待把相思灯下诉，一缕新欢，旧恨千千缕。最是人间留不住，朱颜辞镜花辞树。
+阅尽天涯离别苦，不道归来，零落花如许。
+花底相看无一语，绿窗春与天俱莫。(俱莫 一作：俱暮)
+待把相思灯下诉，一缕新欢，旧恨千千缕。
+最是人间留不住，朱颜辞镜花辞树。
 ```
 ---
 ## 狱中题壁
@@ -31,4 +33,18 @@
 
 望门投趾怜张俭，直谏陈书愧杜根。
 手掷欧刀仰天笑，留将公罪后人论。(版本二)
+```
+---
+## 己亥杂诗·其五
+### 清代：龚自珍
+```
+浩荡离愁白日斜，吟鞭东指即天涯。
+落红不是无情物，化作春泥更护花。
+```
+---
+## 论诗五首·其二
+### 清代：赵翼
+```
+李杜诗篇万口传，至今已觉不新鲜。
+江山代有才人出，各领风骚数百年。
 ```
