--- a/poetry/两汉.md
+++ b/poetry/两汉.md
@@ -61,3 +61,20 @@
 飘零零，二月风筝线儿断。
 噫，郎呀郎，巴不得下一世，你为女来我做男。
 ```
+---
+## 长歌行
+### 两汉：佚名
+```
+青青园中葵，朝露待日晞。
+阳春布德泽，万物生光辉。
+常恐秋节至，焜黄华叶衰。
+百川东到海，何时复西归？
+少壮不努力，老大徒伤悲！
+```
+---
+## 垓下歌
+### 两汉：项羽
+```
+力拔山兮气盖世。时不利兮骓不逝。
+骓不逝兮可奈何！虞兮虞兮奈若何！
+```
