--- a/poetry/五代十国.md
+++ b/poetry/五代十国.md
@@ -19,8 +19,10 @@
 ## 浪淘沙令·帘外雨潺潺
 ### 五代：李煜
 ```
-帘外雨潺潺，春意阑珊。罗衾不耐五更寒。梦里不知身是客，一晌贪欢。
-独自莫凭栏，无限江山，别时容易见时难。流水落花春去也，天上人间。
+帘外雨潺潺，春意阑珊。罗衾不耐五更寒。
+梦里不知身是客，一晌贪欢。
+独自莫凭栏，无限江山，别时容易见时难。
+流水落花春去也，天上人间。
 ```
 ---
 ## 相见欢·林花谢了春红
@@ -40,29 +42,37 @@
 ## 破阵子·四十年来家国
 ### 五代：李煜
 ```
-四十年来家国，三千里地山河。凤阁龙楼连霄汉，玉树琼枝作烟萝，几曾识干戈？
-一旦归为臣虏，沈腰潘鬓消磨。最是仓皇辞庙日，教坊犹奏别离歌，垂泪对宫娥。
+四十年来家国，三千里地山河。
+凤阁龙楼连霄汉，玉树琼枝作烟萝，几曾识干戈？
+一旦归为臣虏，沈腰潘鬓消磨。
+最是仓皇辞庙日，教坊犹奏别离歌，垂泪对宫娥。
 ```
 ---
 ## 蝶恋花·春暮
 ### 五代：李煜
 ```
-遥夜亭皋闲信步。才过清明，渐觉伤春暮。数点雨声风约住。朦胧淡月云来去。
-桃杏依稀香暗渡。谁在秋千，笑里轻轻语。一寸相思千万绪。人间没个安排处。
+遥夜亭皋闲信步。才过清明，渐觉伤春暮。
+数点雨声风约住。朦胧淡月云来去。
+桃杏依稀香暗渡。谁在秋千，笑里轻轻语。
+一寸相思千万绪。人间没个安排处。
 ```
 ---
 ## 虞美人·风回小院庭芜绿
 ### 五代：李煜
 ```
-风回小院庭芜绿，柳眼春相续。凭阑半日独无言，依旧竹声新月似当年。
-笙歌未散尊罍在，池面冰初解。烛明香暗画堂深，满鬓青霜残雪思难任。
+风回小院庭芜绿，柳眼春相续。
+凭阑半日独无言，依旧竹声新月似当年。
+笙歌未散尊罍在，池面冰初解。
+烛明香暗画堂深，满鬓青霜残雪思难任。
 ```
 ---
 ## 临江仙·樱桃落尽春归去
 ### 五代：李煜
 ```
-樱桃落尽春归去，蝶翻金粉双飞。子规啼月小楼西，玉钩罗幕，惆怅暮烟垂。
-别巷寂寥人散后，望残烟草低迷。炉香闲袅凤凰儿，空持罗带，回首恨依依。
+樱桃落尽春归去，蝶翻金粉双飞。
+子规啼月小楼西，玉钩罗幕，惆怅暮烟垂。
+别巷寂寥人散后，望残烟草低迷。
+炉香闲袅凤凰儿，空持罗带，回首恨依依。
 ```
 ---
 ## 相见欢·林花谢了春红
