--- a/poetry/古文/韩愈.md
+++ b/poetry/古文/韩愈.md
@@ -1,49 +1,49 @@
 ## 师说
 ### 唐代：韩愈
-```
-　　古之学者必有师。师者，所以传道受业解惑也。人非生而知之者，孰能无惑？惑而不从师，其为惑也，终不解矣。生乎吾前，其闻道也固先乎吾，吾从而师之；生乎吾后，其闻道也亦先乎吾，吾从而师之。吾师道也，夫庸知其年之先后生于吾乎？是故无贵无贱，无长无少，道之所存，师之所存也。
-
-　　嗟乎！师道之不传也久矣！欲人之无惑也难矣！古之圣人，其出人也远矣，犹且从师而问焉；今之众人，其下圣人也亦远矣，而耻学于师。是故圣益圣，愚益愚。圣人之所以为圣，愚人之所以为愚，其皆出于此乎？爱其子，择师而教之；于其身也，则耻师焉，惑矣。彼童子之师，授之书而习其句读者，非吾所谓传其道解其惑者也。句读之不知，惑之不解，或师焉，或不焉，小学而大遗，吾未见其明也。巫医乐师百工之人，不耻相师。士大夫之族，曰师曰弟子云者，则群聚而笑之。问之，则曰：“彼与彼年相若也，道相似也。位卑则足羞，官盛则近谀。”呜呼！师道之不复可知矣。巫医乐师百工之人，君子不齿，今其智乃反不能及，其可怪也欤！
-
-　　圣人无常师。孔子师郯子、苌弘、师襄、老聃。郯子之徒，其贤不及孔子。孔子曰：三人行，则必有我师。是故弟子不必不如师，师不必贤于弟子，闻道有先后，术业有专攻，如是而已。
-
-　　李氏子蟠，年十七，好古文，六艺经传皆通习之，不拘于时，学于余。余嘉其能行古道，作师说以贻之。
-```
+>```
+>　　古之学者必有师。师者，所以传道受业解惑也。人非生而知之者，孰能无惑？惑而不从师，其为惑也，终不解矣。生乎吾前，其闻道也固先乎吾，吾从而师之；生乎吾后，其闻道也亦先乎吾，吾从而师之。吾师道也，夫庸知其年之先后生于吾乎？是故无贵无贱，无长无少，道之所存，师之所存也。
+>
+>　　嗟乎！师道之不传也久矣！欲人之无惑也难矣！古之圣人，其出人也远矣，犹且从师而问焉；今之众人，其下圣人也亦远矣，而耻学于师。是故圣益圣，愚益愚。圣人之所以为圣，愚人之所以为愚，其皆出于此乎？爱其子，择师而教之；于其身也，则耻师焉，惑矣。彼童子之师，授之书而习其句读者，非吾所谓传其道解其惑者也。句读之不知，惑之不解，或师焉，或不焉，小学而大遗，吾未见其明也。巫医乐师百工之人，不耻相师。士大夫之族，曰师曰弟子云者，则群聚而笑之。问之，则曰：“彼与彼年相若也，道相似也。位卑则足羞，官盛则近谀。”呜呼！师道之不复可知矣。巫医乐师百工之人，君子不齿，今其智乃反不能及，其可怪也欤！
+>
+>　　圣人无常师。孔子师郯子、苌弘、师襄、老聃。郯子之徒，其贤不及孔子。孔子曰：三人行，则必有我师。是故弟子不必不如师，师不必贤于弟子，闻道有先后，术业有专攻，如是而已。
+>
+>　　李氏子蟠，年十七，好古文，六艺经传皆通习之，不拘于时，学于余。余嘉其能行古道，作师说以贻之。
+>```
 ---
 ## 祭十二郎文
 ### 唐代：韩愈
-```
-　　年、月、日，季父愈闻汝丧之七日，乃能衔哀致诚，使建中远具时羞之奠，告汝十二郎之灵：
-
-　　呜呼！吾少孤，及长，不省所怙，惟兄嫂是依。中年，兄殁南方，吾与汝俱幼，从嫂归葬河阳。既又与汝就食江南。零丁孤苦，未尝一日相离也。吾上有三兄，皆不幸早世。承先人后者，在孙惟汝，在子惟吾。两世一身，形单影只。嫂尝抚汝指吾而言曰：“韩氏两世，惟此而已！”汝时尤小，当不复记忆。吾时虽能记忆，亦未知其言之悲也。
-
-　　吾年十九，始来京城。其后四年，而归视汝。又四年，吾往河阳省坟墓，遇汝从嫂丧来葬。又二年，吾佐董丞相于汴州，汝来省吾。止一岁，请归取其孥。明年，丞相薨。吾去汴州，汝不果来。是年，吾佐戎徐州，使取汝者始行，吾又罢去，汝又不果来。吾念汝从于东，东亦客也，不可以久；图久远者，莫如西归，将成家而致汝。呜呼！孰谓汝遽去吾而殁乎！吾与汝俱少年，以为虽暂相别，终当久相与处。故舍汝而旅食京师，以求斗斛之禄。诚知其如此，虽万乘之公相，吾不以一日辍汝而就也。
-
-　　去年，孟东野往。吾书与汝曰：“吾年未四十，而视茫茫，而发苍苍，而齿牙动摇。念诸父与诸兄，皆康强而早世。如吾之衰者，其能久存乎？吾不可去，汝不肯来，恐旦暮死，而汝抱无涯之戚也！”孰谓少者殁而长者存，强者夭而病者全乎！
-
-　　呜呼！其信然邪？其梦邪？其传之非其真邪？信也，吾兄之盛德而夭其嗣乎？汝之纯明而不克蒙其泽乎？少者、强者而夭殁，长者、衰者而存全乎？未可以为信也。梦也，传之非其真也，东野之书，耿兰之报，何为而在吾侧也？呜呼！其信然矣！吾兄之盛德而夭其嗣矣！汝之纯明宜业其家者，不克蒙其泽矣！所谓天者诚难测，而神者诚难明矣！所谓理者不可推，而寿者不可知矣！
-
-　　虽然，吾自今年来，苍苍者或化而为白矣，动摇者或脱而落矣。毛血日益衰，志气日益微，几何不从汝而死也。死而有知，其几何离；其无知，悲不几时，而不悲者无穷期矣。
-
-　　汝之子始十岁，吾之子始五岁。少而强者不可保，如此孩提者，又可冀其成立邪?呜呼哀哉！呜呼哀哉！
-
-　　汝去年书云：“比得软脚病，往往而剧。”吾曰：“是疾也，江南之人，常常有之。”未始以为忧也。呜呼！ 其竟以此而殒其生乎？抑别有疾而至斯极乎？
-
-　　汝之书，六月十七日也。东野云，汝殁以六月二日；耿兰之报无月日。盖东野之使者，不知问家人以月日；如耿兰之报，不知当言月日。东野与吾书，乃问使者，使者妄称以应之乎。其然乎？其不然乎？
-
-　　今吾使建中祭汝，吊汝之孤与汝之乳母。彼有食，可守以待终丧，则待终丧而取以来；如不能守以终丧，则遂取以来。其余奴婢，并令守汝丧。吾力能改葬，终葬汝于先人之兆，然后惟其所愿。
-
-　　呜呼！汝病吾不知时，汝殁吾不知日，生不能相养以共居，殁不能抚汝以尽哀，敛不凭其棺，窆不临其穴。吾行负神明，而使汝夭；不孝不慈，而不能与汝相养以生，相守以死。一在天之涯，一在地之角，生而影不与吾形相依，死而魂不与吾梦相接。吾实为之，其又何尤！彼苍者天，曷其有极！自今已往，吾其无意于人世矣！当求数顷之田于伊颍之上，以待余年，教吾子与汝子，幸其成；长吾女与汝女，待其嫁，如此而已。
-
-　　呜呼，言有穷而情不可终，汝其知也邪？其不知也邪？呜呼哀哉！尚飨！
-```
+>```
+>　　年、月、日，季父愈闻汝丧之七日，乃能衔哀致诚，使建中远具时羞之奠，告汝十二郎之灵：
+>
+>　　呜呼！吾少孤，及长，不省所怙，惟兄嫂是依。中年，兄殁南方，吾与汝俱幼，从嫂归葬河阳。既又与汝就食江南。零丁孤苦，未尝一日相离也。吾上有三兄，皆不幸早世。承先人后者，在孙惟汝，在子惟吾。两世一身，形单影只。嫂尝抚汝指吾而言曰：“韩氏两世，惟此而已！”汝时尤小，当不复记忆。吾时虽能记忆，亦未知其言之悲也。
+>
+>　　吾年十九，始来京城。其后四年，而归视汝。又四年，吾往河阳省坟墓，遇汝从嫂丧来葬。又二年，吾佐董丞相于汴州，汝来省吾。止一岁，请归取其孥。明年，丞相薨。吾去汴州，汝不果来。是年，吾佐戎徐州，使取汝者始行，吾又罢去，汝又不果来。吾念汝从于东，东亦客也，不可以久；图久远者，莫如西归，将成家而致汝。呜呼！孰谓汝遽去吾而殁乎！吾与汝俱少年，以为虽暂相别，终当久相与处。故舍汝而旅食京师，以求斗斛之禄。诚知其如此，虽万乘之公相，吾不以一日辍汝而就也。
+>
+>　　去年，孟东野往。吾书与汝曰：“吾年未四十，而视茫茫，而发苍苍，而齿牙动摇。念诸父与诸兄，皆康强而早世。如吾之衰者，其能久存乎？吾不可去，汝不肯来，恐旦暮死，而汝抱无涯之戚也！”孰谓少者殁而长者存，强者夭而病者全乎！
+>
+>　　呜呼！其信然邪？其梦邪？其传之非其真邪？信也，吾兄之盛德而夭其嗣乎？汝之纯明而不克蒙其泽乎？少者、强者而夭殁，长者、衰者而存全乎？未可以为信也。梦也，传之非其真也，东野之书，耿兰之报，何为而在吾侧也？呜呼！其信然矣！吾兄之盛德而夭其嗣矣！汝之纯明宜业其家者，不克蒙其泽矣！所谓天者诚难测，而神者诚难明矣！所谓理者不可推，而寿者不可知矣！
+>
+>　　虽然，吾自今年来，苍苍者或化而为白矣，动摇者或脱而落矣。毛血日益衰，志气日益微，几何不从汝而死也。死而有知，其几何离；其无知，悲不几时，而不悲者无穷期矣。
+>
+>　　汝之子始十岁，吾之子始五岁。少而强者不可保，如此孩提者，又可冀其成立邪?呜呼哀哉！呜呼哀哉！
+>
+>　　汝去年书云：“比得软脚病，往往而剧。”吾曰：“是疾也，江南之人，常常有之。”未始以为忧也。呜呼！ 其竟以此而殒其生乎？抑别有疾而至斯极乎？
+>
+>　　汝之书，六月十七日也。东野云，汝殁以六月二日；耿兰之报无月日。盖东野之使者，不知问家人以月日；如耿兰之报，不知当言月日。东野与吾书，乃问使者，使者妄称以应之乎。其然乎？其不然乎？
+>
+>　　今吾使建中祭汝，吊汝之孤与汝之乳母。彼有食，可守以待终丧，则待终丧而取以来；如不能守以终丧，则遂取以来。其余奴婢，并令守汝丧。吾力能改葬，终葬汝于先人之兆，然后惟其所愿。
+>
+>　　呜呼！汝病吾不知时，汝殁吾不知日，生不能相养以共居，殁不能抚汝以尽哀，敛不凭其棺，窆不临其穴。吾行负神明，而使汝夭；不孝不慈，而不能与汝相养以生，相守以死。一在天之涯，一在地之角，生而影不与吾形相依，死而魂不与吾梦相接。吾实为之，其又何尤！彼苍者天，曷其有极！自今已往，吾其无意于人世矣！当求数顷之田于伊颍之上，以待余年，教吾子与汝子，幸其成；长吾女与汝女，待其嫁，如此而已。
+>
+>　　呜呼，言有穷而情不可终，汝其知也邪？其不知也邪？呜呼哀哉！尚飨！
+>```
 ---
 ## 杂说四·马说
 ### 唐代：韩愈
-```
-　　世有伯乐，然后有千里马。千里马常有，而伯乐不常有。故虽有名马，祇辱于奴隶人之手，骈死于槽枥之间，不以千里称也。(祇辱 一作：只辱)
-
-　　马之千里者，一食或尽粟一石。食马者不知其能千里而食也。是马也，虽有千里之能，食不饱，力不足，才美不外见，且欲与常马等不可得，安求其能千里也？(食马者 通：饲)
-
-　　策之不以其道，食之不能尽其材，鸣之而不能通其意，执策而临之，曰：“天下无马！”呜呼！其真无马邪？其真不知马也！
-```
+>```
+>　　世有伯乐，然后有千里马。千里马常有，而伯乐不常有。故虽有名马，祇辱于奴隶人之手，骈死于槽枥之间，不以千里称也。(祇辱 一作：只辱)
+>
+>　　马之千里者，一食或尽粟一石。食马者不知其能千里而食也。是马也，虽有千里之能，食不饱，力不足，才美不外见，且欲与常马等不可得，安求其能千里也？(食马者 通：饲)
+>
+>　　策之不以其道，食之不能尽其材，鸣之而不能通其意，执策而临之，曰：“天下无马！”呜呼！其真无马邪？其真不知马也！
+>```
