--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -94,7 +94,7 @@
 ```
 ---
 ## 金陵晚望
-## 唐代：高蟾
+### 唐代：高蟾
 ```
 曾伴浮云归晚翠，犹陪落日泛秋声。
 世间无限丹青手，一片伤心画不成。
@@ -107,8 +107,29 @@
 冲天香阵透长安，满城尽带黄金甲。
 ```
 ---
+## 近试上张籍水部 / 近试上张水部 / 闺意献张水部
+### 唐代：朱庆馀
+```
+洞房昨夜停红烛，待晓堂前拜舅姑。 
+妆罢低声问夫婿，画眉深浅入时无。
+```
+---
+## 题金陵渡
+### 唐代：张祜
+```
+金陵津渡小山楼，一宿行人自可愁。 
+潮落夜江斜月里，两三星火是瓜州。
+```
+---
+## 春怨
+### 唐代：刘方平
+```
+纱窗日落渐黄昏，金屋无人见泪痕。 
+寂寞空庭春欲晚，梨花满地不开门。
+```
+---
 ## 清明
-## 唐代：杜牧
+### 唐代：杜牧
 ```
 清明时节雨纷纷，路上行人欲断魂。
 借问酒家何处有，牧童遥指杏花村。
@@ -410,6 +431,84 @@
 何因不归去？淮上有秋山。
 ```
 ---
+## 乌衣巷
+### 唐代：刘禹锡
+```
+朱雀桥边野草花，乌衣巷口夕阳斜。 
+旧时王谢堂前燕，飞入寻常百姓家。
+```
+---
+## 秋词二首
+## 唐代：刘禹锡
+```
+自古逢秋悲寂寥，我言秋日胜春朝。
+晴空一鹤排云上，便引诗情到碧霄。
+
+山明水净夜来霜，数树深红出浅黄。
+试上高楼清入骨，岂如春色嗾人狂。
+```
+---
+## 酬乐天扬州初逢席上见赠
+## 唐代：刘禹锡
+```
+巴山楚水凄凉地，二十三年弃置身。
+怀旧空吟闻笛赋，到乡翻似烂柯人。
+沉舟侧畔千帆过，病树前头万木春。
+今日听君歌一曲，暂凭杯酒长精神。
+```
+---
+## 赏牡丹
+### 唐代：刘禹锡
+```
+庭前芍药妖无格，池上芙蕖净少情。
+唯有牡丹真国色，花开时节动京城。
+```
+---
+## 再游玄都观
+### 唐代：刘禹锡
+```
+百亩庭中半是苔，桃花净尽菜花开。
+种桃道士归何处，前度刘郎今又来。
+```
+---
+## 浪淘沙·其三
+### 唐代：刘禹锡
+```
+汴水东流虎眼文，清淮晓色鸭头春。
+君看渡口淘沙处，渡却人间多少人。
+```
+---
+## 竹枝词二首·其一
+### 唐代：刘禹锡
+```
+杨柳青青江水平，闻郎江上踏歌声。(踏歌声 一作：唱歌声)
+东边日出西边雨，道是无晴却有晴。(却有晴 一作：还有晴)
+```
+---
+## 回乡偶书二首
+### 唐代：贺知章
+```
+少小离家老大回，乡音无改鬓毛衰。(无改 一作：未改/难改)
+儿童相见不相识，笑问客从何处来。
+
+离别家乡岁月多，近来人事半消磨。
+惟有门前镜湖水，春风不改旧时波。
+```
+---
+## 咏柳 / 柳枝词
+### 唐代：贺知章
+```
+碧玉妆成一树高，万条垂下绿丝绦。
+不知细叶谁裁出，二月春风似剪刀。
+```
+---
+## 陇西行四首·其二
+### 唐代：陈陶
+```
+誓扫匈奴不顾身，五千貂锦丧胡尘。
+可怜无定河边骨，犹是春闺梦里人！(春闺 一作：深闺)
+```
+---
 ## 宣州谢脁楼饯别校书叔云
 ### 唐代：李白
 ```
@@ -420,6 +519,34 @@
 俱怀逸兴壮思飞，欲上青天览明月。(览 通：揽；明月 一作：日月)
 抽刀断水水更流，举杯销愁愁更愁。(销愁 一作 消愁)
 人生在世不称意，明朝散发弄扁舟。
+```
+---
+## 长干行·其一
+### 唐代：李白
+```
+妾发初覆额，折花门前剧。
+郎骑竹马来，绕床弄青梅。
+同居长干里，两小无嫌猜，
+十四为君妇，羞颜未尝开。
+低头向暗壁，千唤不一回。
+十五始展眉，愿同尘与灰。
+常存抱柱信，岂上望夫台。
+十六君远行，瞿塘滟滪堆。
+五月不可触，猿声天上哀。(猿声 一作：鸣)
+门前迟行迹，一一生绿苔。
+苔深不能扫，落叶秋风早。
+八月蝴蝶来，双飞西园草。
+感此伤妾心，坐愁红颜老。
+早晚下三巴，预将书报家。
+相迎不道远，直至长风沙。
+```
+---
+## 子夜吴歌·秋歌
+### 唐代：李白
+```
+长安一片月，万户捣衣声。
+秋风吹不尽，总是玉关情。
+何日平胡虏，良人罢远征。
 ```
 ---
 ## 南陵别儿童入京
@@ -474,6 +601,13 @@
 孤帆远影碧空尽，唯见长江天际流。 (唯 通：惟)
 ```
 ---
+## 宿建德江
+###唐代：孟浩然
+```
+移舟泊烟渚，日暮客愁新。
+野旷天低树，江清月近人
+```
+---
 ## 把酒问月·故人贾淳令予问之
 ### 唐代：李白
 ```
@@ -487,6 +621,13 @@
 唯愿当歌对酒时，月光长照金樽里。
 ```
 ---
+## 清平调·其一
+### 唐代：李白
+```
+云想衣裳花想容，春风拂槛露华浓。 
+若非群玉山头见，会向瑶台月下逢。
+```
+---
 ## 行路难·其一
 ### 唐代：李白
 ```
@@ -496,6 +637,18 @@
 闲来垂钓碧溪上，忽复乘舟梦日边。(碧 一作：坐)
 行路难！行路难！多歧路，今安在？
 长风破浪会有时，直挂云帆济沧海。
+```
+---
+## 下终南山过斛斯山人宿置酒
+### 唐代：李白
+```
+暮从碧山下，山月随人归。
+却顾所来径，苍苍横翠微。
+相携及田家，童稚开荆扉。
+绿竹入幽径，青萝拂行衣。
+欢言得所憩，美酒聊共挥。
+长歌吟松风，曲尽河星稀。
+我醉君复乐，陶然共忘机。
 ```
 ---
 ## 望庐山瀑布
