--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -98,11 +98,9 @@
 ## 一剪梅·舟过吴江
 ### 宋代：蒋捷
 ```
-一片春愁待酒浇。
-江上舟摇，楼上帘招。
+一片春愁待酒浇。江上舟摇，楼上帘招。
 秋娘渡与泰娘桥，风又飘飘，雨又萧萧。（渡 一作：度。桥 一作：娇）
-何日归家洗客袍？
-银字笙调，心字香烧。
+何日归家洗客袍？银字笙调，心字香烧。
 流光容易把人抛，红了樱桃，绿了芭蕉。
 ```
 ---
@@ -135,10 +133,9 @@
 ```
 倚危亭。恨如芳草，萋萋刬尽还生。
 念柳外青骢别后，水边红袂分时，怆然暗惊。
-无端天与娉婷。
-夜月一帘幽梦，春风十里柔情。
-怎奈向、欢娱渐随流水，素弦声断，翠绡香减，那堪片片飞花弄晚，蒙蒙残雨笼晴。
-正销凝。黄鹂又啼数声。
+无端天与娉婷。夜月一帘幽梦，春风十里柔情。
+怎奈向、欢娱渐随流水，素弦声断，翠绡香减，
+那堪片片飞花弄晚，蒙蒙残雨笼晴。正销凝。黄鹂又啼数声。
 ```
 ---
 ## 扬州慢·淮左名都
@@ -149,8 +146,7 @@
 淮左名都，竹西佳处，解鞍少驻初程。
 过春风十里。尽荠麦青青。
 自胡马窥江去后，废池乔木，犹厌言兵。
-渐黄昏，清角吹寒。
-都在空城。 
+渐黄昏，清角吹寒。都在空城。 
 杜郎俊赏，算而今、重到须惊。
 纵豆蔻词工，青楼梦好，难赋深情。
 二十四桥仍在，波心荡、冷月无声。
@@ -169,12 +165,10 @@
 ## 水调歌头·送章德茂大卿使虏
 ### 宋代：陈亮
 ```
-不见南师久，漫说北群空。
-当场只手，毕竟还我万夫雄。
+不见南师久，漫说北群空。当场只手，毕竟还我万夫雄。
 自笑堂堂汉使，得似洋洋河水，依旧只流东？
 且复穹庐拜，会向藁街逢！
-尧之都，舜之壤，禹之封。
-于中应有，一个半个耻臣戎！
+尧之都，舜之壤，禹之封。于中应有，一个半个耻臣戎！
 万里腥膻如许，千古英灵安在，磅礴几时通？
 胡运何须问，赫日自当中！
 ```
@@ -182,11 +176,9 @@
 ## 一剪梅·红藕香残玉簟秋
 ### 宋代：李清照
 ```
-红藕香残玉簟秋。
-轻解罗裳，独上兰舟。
+红藕香残玉簟秋。轻解罗裳，独上兰舟。
 云中谁寄锦书来，雁字回时，月满西楼。
-花自飘零水自流。
-一种相思，两处闲愁。
+花自飘零水自流。一种相思，两处闲愁。
 此情无计可消除，才下眉头，却上心头。
 ```
 ---
@@ -199,15 +191,6 @@
 满地黄花堆积。憔悴损，如今有谁堪摘？
 守着窗儿，独自怎生得黑？梧桐更兼细雨，到黄昏、点点滴滴。
 这次第，怎一个愁字了得！（守着窗儿 一作：守著窗儿）
-```
----
-## 钗头凤·红酥手
-### 宋代：陆游
-```
-红酥手，黄縢酒，满城春色宫墙柳。
-东风恶，欢情薄。一怀愁绪，几年离索。错、错、错。
-春如旧，人空瘦，泪痕红浥鲛绡透。桃花落，闲池阁。
-山盟虽在，锦书难托。莫、莫、莫！
 ```
 ---
 ## 卜算子·咏梅
@@ -224,6 +207,15 @@
 胡未灭，鬓先秋，泪空流。此生谁料，心在天山，身老沧洲。
 ```
 ---
+## 钗头凤·红酥手
+### 宋代：陆游
+```
+红酥手，黄縢酒，满城春色宫墙柳。
+东风恶，欢情薄。一怀愁绪，几年离索。错、错、错。
+春如旧，人空瘦，泪痕红浥鲛绡透。
+桃花落，闲池阁。山盟虽在，锦书难托。莫、莫、莫！
+```
+---
 ## 钗头凤·世情薄
 ### 宋代：唐婉
 ```
@@ -236,11 +228,9 @@
 ## 苏幕遮·怀旧
 ### 宋代：范仲淹
 ```
-碧云天，黄叶地。
-秋色连波，波上寒烟翠。
+碧云天，黄叶地。秋色连波，波上寒烟翠。
 山映斜阳天接水。芳草无情，更在斜阳外。
-黯乡魂，追旅思。
-夜夜除非，好梦留人睡。
+黯乡魂，追旅思。夜夜除非，好梦留人睡。
 明月楼高休独倚。酒入愁肠，化作相思泪。(留人睡 一作：留人醉)
 ```
 ---
@@ -272,8 +262,10 @@
 ## 菩萨蛮·书江西造口壁
 ### 宋代：辛弃疾
 ```
-郁孤台下清江水，中间多少行人泪。西北望长安，可怜无数山。
-青山遮不住，毕竟东流去。江晚正愁余，山深闻鹧鸪。 (愁余 一作：愁予)
+郁孤台下清江水，中间多少行人泪。
+西北望长安，可怜无数山。
+青山遮不住，毕竟东流去。
+江晚正愁余，山深闻鹧鸪。 (愁余 一作：愁予)
 ```
 ---
 ## 西江月·夜行黄沙道中
@@ -487,6 +479,13 @@
 玉勒雕鞍游冶处，楼高不见章台路。
 雨横风狂三月暮，门掩黄昏，无计留春住。
 泪眼问花花不语，乱红飞过秋千去。
+```
+---
+## 蚕妇
+### 宋代：张俞
+```
+昨日入城市，归来泪满巾。
+遍身罗绮者，不是养蚕人。
 ```
 ---
 ## 唐多令·芦叶满汀洲
