--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -126,3 +126,17 @@
 胜日寻芳泗水滨，无边光景一时新。
 等闲识得东风面，万紫千红总是春。
 ```
+---
+## 题临安邸
+### 宋代：林升
+```
+山外青山楼外楼，西湖歌舞几时休？
+暖风熏得游人醉，直把杭州作汴州。
+```
+---
+## 小池
+###宋代：杨万里
+```
+泉眼无声惜细流，树阴照水爱晴柔。
+小荷才露尖尖角，早有蜻蜓立上头。
+```
