--- a/poetry/魏晋南北朝.md
+++ b/poetry/魏晋南北朝.md
@@ -39,6 +39,26 @@ ___
 衣沾不足惜，但使愿无违。
 ```
 ---
+## 咏荆轲
+### 魏晋：陶渊明
+```
+燕丹善养士，志在报强嬴。
+招集百夫良，岁暮得荆卿。
+君子死知己，提剑出燕京；
+素骥鸣广陌，慷慨送我行。
+雄发指危冠，猛气冲长缨。
+饮饯易水上，四座列群英。
+渐离击悲筑，宋意唱高声。
+萧萧哀风逝，淡淡寒波生。
+商音更流涕，羽奏壮士惊。
+心知去不归，且有后世名。
+登车何时顾，飞盖入秦庭。
+凌厉越万里，逶迤过千城。
+图穷事自至，豪主正怔营。
+惜哉剑术疏，奇功遂不成。
+其人虽已没，千载有馀情。
+```
+---
 ## 观沧海
 ### 魏晋：曹操
 ```
@@ -142,3 +162,40 @@ ___
 众人徒嗷嗷，安知彼所观？
 盛年处房室，中夜起长叹。
 ```
+---
+## 玉树后庭花
+### 南北朝：陈叔宝
+```
+丽宇芳林对高阁，新装艳质本倾城。
+映户凝娇乍不进，出帷含态笑相迎。
+妖姬脸似花含露，玉树流光照后庭。
+花开花落不长久，落红满地归寂中。
+```
+---
+## 西洲曲
+### 南北朝：佚名
+```
+忆梅下西洲，折梅寄江北。单衫杏子红，双鬓鸦雏色。
+西洲在何处？两桨桥头渡。日暮伯劳飞，风吹乌臼树。
+树下即门前，门中露翠钿。开门郎不至，出门采红莲。
+采莲南塘秋，莲花过人头。低头弄莲子，莲子清如水。
+置莲怀袖中，莲心彻底红。忆郎郎不至，仰首望飞鸿。
+鸿飞满西洲，望郎上青楼。楼高望不见，尽日栏杆头。
+栏杆十二曲，垂手明如玉。卷帘天自高，海水摇空绿。
+海水梦悠悠，君愁我亦愁。南风知我意，吹梦到西洲。
+```
+---
+## 木兰诗 / 木兰辞
+### 南北朝：佚名
+>
+>　　唧唧复唧唧，木兰当户织。不闻机杼声，惟闻女叹息。(惟闻 通：唯)问女何所思，问女何所忆。女亦无所思，女亦无所忆。昨夜见军帖，可汗大点兵，军书十二卷，卷卷有爷名。阿爷无大儿，木兰无长兄，愿为市鞍马，从此替爷征。
+>
+>　　东市买骏马，西市买鞍鞯，南市买辔头，北市买长鞭。旦辞爷娘去，暮宿黄河边，不闻爷娘唤女声，但闻黄河流水鸣溅溅。旦辞黄河去，暮至黑山头，不闻爷娘唤女声，但闻燕山胡骑鸣啾啾。
+>
+>　　万里赴戎机，关山度若飞。朔气传金柝，寒光照铁衣。将军百战死，壮士十年归。
+>
+>　　归来见天子，天子坐明堂。策勋十二转，赏赐百千强。可汗问所欲，木兰不用尚书郎，愿驰千里足，送儿还故乡。(一作：愿借明驼千里足)
+>
+>　　爷娘闻女来，出郭相扶将；阿姊闻妹来，当户理红妆；小弟闻姊来，磨刀霍霍向猪羊。开我东阁门，坐我西阁床，脱我战时袍，著我旧时裳。当窗理云鬓，对镜帖花黄。出门看火伴，火伴皆惊忙：同行十二年，不知木兰是女郎。（帖 通：贴；惊忙 一作：惶；惶 火伴 通：伙）
+>
+>　　雄兔脚扑朔，雌兔眼迷离；双兔傍地走，安能辨我是雄雌？
