--- a/poetry/唐诗.md
+++ b/poetry/唐诗.md
@@ -1,3 +1,5 @@
+# 唐诗
+
 ## 离思五首·其四
 ### 唐代：元稹
 ```
@@ -13,6 +15,15 @@
 
 井底点灯深烛伊，共郎长行莫围棋。
 玲珑骰子安红豆，入骨相思知不知。
+```
+---
+## 商山早行
+### 唐代：温庭筠
+```
+晨起动征铎，客行悲故乡。
+鸡声茅店月，人迹板桥霜。
+槲叶落山路，枳花明驿墙。(明驿墙 一作：照驿墙)
+因思杜陵梦，凫雁满回塘。
 ```
 ---
 ## 春江花月夜
@@ -234,6 +245,36 @@
 ```
 繁华事散逐香尘，流水无情草自春。
 日暮东风怨啼鸟，落花犹似坠楼人。
+```
+---
+## 贫女
+###唐代：秦韬玉
+```
+蓬门未识绮罗香，拟托良媒益自伤。
+谁爱风流高格调，共怜时世俭梳妆。
+敢将十指夸针巧，不把双眉斗画长。
+苦恨年年压金线，为他人作嫁衣裳。
+```
+---
+## 金陵图
+### 唐代：韦庄
+```
+谁谓伤心画不成，画人心逐世人情。 
+君看六幅南朝事，老木寒云满故城。
+```
+---
+##台城
+### 唐代：韦庄
+```
+江雨霏霏江草齐，六朝如梦鸟空啼。 
+无情最是台城柳，依旧烟笼十里堤。
+```
+---
+## 金缕衣
+### 唐代：佚名
+```
+劝君莫惜金缕衣，劝君惜取少年时。(惜取 一作：须取)
+花开堪折直须折，莫待无花空折枝。(花开 一作：有花)
 ```
 ---
 ## 白雪歌送武判官归京
@@ -507,6 +548,13 @@
 ```
 誓扫匈奴不顾身，五千貂锦丧胡尘。
 可怜无定河边骨，犹是春闺梦里人！(春闺 一作：深闺)
+```
+--
+## 与史郎中钦听黄鹤楼上吹笛 / 题北榭碑
+###唐代：李白
+```
+一为迁客去长沙，西望长安不见家。 
+黄鹤楼中吹玉笛，江城五月落梅花。
 ```
 ---
 ## 宣州谢脁楼饯别校书叔云
@@ -1088,6 +1136,17 @@
 知汝远来应有意，好收吾骨瘴江边。（版本二）
 ```
 ---
+## 天上谣
+### 唐代：李贺
+```
+天河夜转漂回星，银浦流云学水声。
+玉宫桂树花未落，仙妾采香垂佩缨。
+秦妃卷帘北窗晓，窗前植桐青凤小。
+王子吹笙鹅管长，呼龙耕烟种瑶草。
+粉霞红绶藕丝裙，青洲步拾兰苕春。
+东指羲和能走马，海尘新生石山下。
+```
+---
 ## 雁门太守行
 ### 唐代：李贺
 ```
@@ -1095,6 +1154,15 @@
 角声满天秋色里，塞上燕脂凝夜紫。(塞上 一作：塞土)
 半卷红旗临易水，霜重鼓寒声不起。
 报君黄金台上意，提携玉龙为君死！
+```
+---
+##梦天
+### 唐代：李贺
+```
+老兔寒蟾泣天色，云楼半开壁斜白。
+玉轮轧露湿团光，鸾珮相逢桂香陌。
+黄尘清水三山下，更变千年如走马。
+遥望齐州九点烟，一泓海水杯中泻。
 ```
 ---
 ## 南园十三首
