--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -1,3 +1,5 @@
+# 宋诗
+
 ## 春宵
 ### 宋代：苏轼
 ```
@@ -20,6 +22,21 @@
 已作迟迟君去鲁，犹教缓缓妾还家。
 ```
 ---
+## 再用前韵
+### 宋代：苏轼
+```
+罗浮山下梅花村，玉雪为骨冰为魂。
+纷纷初疑月挂树，耿耿独与参横昏。
+先生索居江海上，悄如病鹤栖荒园。
+天香国艳肯相顾，知我酒熟诗清温。
+蓬莱宫中花鸟使，绿衣倒挂扶桑暾。
+抱丛窥我方醉卧，故遣啄木先敲门。
+麻姑过君急洒扫，鸟能歌舞花能言。
+酒醒人散山寂寂，惟有落蕊黏空樽。
+（岭南珍禽有倒挂子，绿毛红喙，如鹦鹉而小，自东海来，非尘埃中物也。
+）
+```
+---
 ## 惠崇春江晚景二首 / 惠崇春江晓景二首
 ### 宋代：苏轼
 ```
@@ -30,10 +47,33 @@
 遥知朔漠多风雪，更待江南半月春。
 ```
 ---
+## 饮湖上初晴后雨二首·其二
+### 宋代：苏轼
+```
+水光潋滟晴方好，山色空蒙雨亦奇。(蒙 通：濛)
+欲把西湖比西子，淡妆浓抹总相宜。
+```
+---
+## 泊船瓜洲
+### 宋代：王安石
+```
+京口瓜洲一水间，钟山只隔数重山。
+春风又绿江南岸，明月何时照我还？
+```
+---
 ## 断句
 ### 宋代：苏麟
 ```
 近水楼台先得月，向阳花木易为春。
+```
+---
+## 过零丁洋
+### 宋代：文天祥
+```
+辛苦遭逢起一经，干戈寥落四周星。
+山河破碎风飘絮，身世浮沉雨打萍。
+惶恐滩头说惶恐，零丁洋里叹零丁。
+人生自古谁无死？留取丹心照汗青。
 ```
 ---
 ## 寄黄几复
@@ -139,4 +179,11 @@
 ```
 泉眼无声惜细流，树阴照水爱晴柔。
 小荷才露尖尖角，早有蜻蜓立上头。
+```
+---
+## 约客
+### 宋代：赵师秀
+```
+黄梅时节家家雨，青草池塘处处蛙。
+有约不来过夜半，闲敲棋子落灯花。
 ```
