--- a/poetry/唐词.md
+++ b/poetry/唐词.md
@@ -1,3 +1,5 @@
+# 唐词
+
 ## 三五七言 / 秋风词
 ### 唐代：李白
 ```
@@ -9,6 +11,15 @@
 早知如此绊人心，何如当初莫相识。
 ```
 ---
+## 忆秦娥·箫声咽
+### 唐代：李白
+```
+箫声咽，秦娥梦断秦楼月。
+秦楼月，年年柳色，灞陵伤别。
+乐游原上清秋节，咸阳古道音尘绝。
+音尘绝，西风残照，汉家陵阙。
+```
+---
 ## 菩萨蛮·人人尽说江南好
 ### 唐代：韦庄
 ```
@@ -17,10 +28,85 @@
 垆边人似月，皓腕凝霜雪。
 未老莫还乡，还乡须断肠。
 ```
+--
+## 菩萨蛮·红楼别夜堪惆怅
+### 唐代：韦庄
+```
+红楼别夜堪惆怅，香灯半卷流苏帐。
+残月出门时，美人和泪辞。
+琵琶金翠羽，弦上黄莺语。
+劝我早还家，绿窗人似花。
+```
+---
+## 荷叶杯·记得那年花下
+### 唐代：韦庄
+```
+记得那年花下，深夜，初识谢娘时。
+水堂西面画帘垂，携手暗相期。
+惆怅晓莺残月，相别，从此隔音尘。
+如今俱是异乡人，相见更无因。
+```
+---
+## 菩萨蛮·洛阳城里春光好
+### 唐代：韦庄
+```
+洛阳城里春光好，洛阳才子他乡老。
+柳暗魏王堤，此时心转迷。
+桃花春水渌，水上鸳鸯浴。
+凝恨对残晖，忆君君不知。
+```
+---
+## 菩萨蛮·如今却忆江南乐
+### 唐代：韦庄
+```
+如今却忆江南乐，当时年少春衫薄。
+骑马倚斜桥，满楼红袖招。
+翠屏金屈曲，醉入花丛宿。
+此度见花枝，白头誓不归。
+```
+---
+## 菩萨蛮·劝君今夜须沉醉
+### 唐代：韦庄
+```
+劝君今夜须沉醉，尊前莫话明朝事。
+珍重主人心，酒深情亦深。
+须愁春漏短，莫诉金杯满。
+遇酒且呵呵，人生能几何。
+```
+---
+## 思帝乡·春日游
+### 唐代：韦庄
+```
+春日游，杏花吹满头。陌上谁家年少足风流？
+妾拟将身嫁与一生休。纵被无情弃，不能羞。
+```
 ---
 ## 长相思·汴水流
 ### 唐代：白居易
 ```
 汴水流，泗水流，流到瓜州古渡头。吴山点点愁。
 思悠悠，恨悠悠，恨到归时方始休。月明人倚楼。
+```
+---
+## 望江南·梳洗罢
+### 唐代：温庭筠
+```
+梳洗罢，独倚望江楼。
+过尽千帆皆不是，斜晖脉脉水悠悠。肠断白蘋洲。
+```
+---
+## 梦江南·千万恨
+### 唐代：温庭筠
+```
+千万恨，恨极在天涯。
+山月不知心里事，水风空落眼前花，摇曳碧云斜。
+```
+---
+## 菩萨蛮·小山重叠金明灭
+### 唐代：温庭筠
+```
+小山重叠金明灭，鬓云欲度香腮雪。
+懒起画蛾眉，弄妆梳洗迟。
+照花前后镜，花面交相映。
+新帖绣罗襦，双双金鹧鸪。
 ```
