--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -1,12 +1,47 @@
+# 宋词
+
 ## 江城子·乙卯正月二十日夜记梦
 ### 宋代：苏轼
 ```
 十年生死两茫茫，不思量，自难忘。
 千里孤坟，无处话凄凉。
 纵使相逢应不识，尘满面，鬓如霜。
+
 夜来幽梦忽还乡，小轩窗，正梳妆。
 相顾无言，惟有泪千行。
 料得年年肠断处，明月夜，短松冈。(肠断 一作：断肠)
+```
+---
+## 临江仙·夜饮东坡醒复醉
+### 宋代：苏轼
+```
+夜饮东坡醒复醉，归来仿佛三更。
+家童鼻息已雷鸣。敲门都不应，倚杖听江声。 
+长恨此身非我有，何时忘却营营。
+夜阑风静縠纹平。小舟从此逝，江海寄余生。
+```
+---
+##蝶恋花·春景
+### 宋代：苏轼
+```
+花褪残红青杏小。燕子飞时，绿水人家绕。
+枝上柳绵吹又少。天涯何处无芳草！
+墙里秋千墙外道。墙外行人，墙里佳人笑。
+笑渐不闻声渐悄。多情却被无情恼。
+```
+---
+## 水龙吟·次韵章质夫杨花词
+### 宋代：苏轼
+```
+似花还似非花，也无人惜从教坠。
+抛家傍路，思量却是，无情有思。
+萦损柔肠，困酣娇眼，欲开还闭。
+梦随风万里，寻郎去处，又还被、莺呼起。
+
+不恨此花飞尽，恨西园、落红难缀。
+晓来雨过，遗踪何在？一池萍碎。
+春色三分，二分尘土，一分流水。
+细看来，不是杨花，点点是离人泪。
 ```
 ---
 ## 定风波·莫听穿林打叶声
@@ -27,6 +62,7 @@
 故垒西边，人道是，三国周郎赤壁。
 乱石穿空，惊涛拍岸，卷起千堆雪。
 江山如画，一时多少豪杰。
+
 遥想公瑾当年，小乔初嫁了，雄姿英发。
 羽扇纶巾，谈笑间，樯橹灰飞烟灭。(樯橹 一作：强虏)
 故国神游，多情应笑我，早生华发。
@@ -42,6 +78,7 @@
 不知天上宫阙，今夕是何年。
 我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
 起舞弄清影，何似在人间？(何似 一作：何时；又恐 一作：惟 / 唯恐)
+
 转朱阁，低绮户，照无眠。
 不应有恨，何事长向别时圆？
 人有悲欢离合，月有阴晴圆缺，此事古难全。
@@ -77,6 +114,15 @@
 万事到头都是梦，休休。明日黄花蝶也愁。
 ```
 ---
+## 卜算子·黄州定慧院寓居作
+### 宋代：苏轼
+```
+缺月挂疏桐，漏断人初静。
+时见幽人独往来，缥缈孤鸿影。(时见 一作：谁见)
+惊起却回头，有恨无人省。
+拣尽寒枝不肯栖，寂寞沙洲冷。
+```
+---
 ## 浣溪沙·游蕲水清泉寺
 ### 宋代：苏轼
 > 游蕲水清泉寺，寺临兰溪，溪水西流。
@@ -102,6 +148,15 @@
 秋娘渡与泰娘桥，风又飘飘，雨又萧萧。（渡 一作：度。桥 一作：娇）
 何日归家洗客袍？银字笙调，心字香烧。
 流光容易把人抛，红了樱桃，绿了芭蕉。
+```
+---
+## 虞美人·听雨
+### 宋代：蒋捷
+```
+少年听雨歌楼上。红烛昏罗帐。
+壮年听雨客舟中。江阔云低、断雁叫西风。 
+而今听雨僧庐下。鬓已星星也。
+悲欢离合总无情。一任阶前、点滴到天明。
 ```
 ---
 ## 鹊桥仙·纤云弄巧
@@ -134,8 +189,18 @@
 倚危亭。恨如芳草，萋萋刬尽还生。
 念柳外青骢别后，水边红袂分时，怆然暗惊。
 无端天与娉婷。夜月一帘幽梦，春风十里柔情。
+
 怎奈向、欢娱渐随流水，素弦声断，翠绡香减，
 那堪片片飞花弄晚，蒙蒙残雨笼晴。正销凝。黄鹂又啼数声。
+```
+---
+## 踏莎行·郴州旅舍
+### 宋代：秦观
+```
+雾失楼台，月迷津渡。桃源望断无寻处。
+可堪孤馆闭春寒，杜鹃声里斜阳暮。 
+驿寄梅花，鱼传尺素。砌成此恨无重数。
+郴江幸自绕郴山，为谁流下潇湘去。
 ```
 ---
 ## 扬州慢·淮左名都
@@ -147,19 +212,27 @@
 过春风十里。尽荠麦青青。
 自胡马窥江去后，废池乔木，犹厌言兵。
 渐黄昏，清角吹寒。都在空城。 
+
 杜郎俊赏，算而今、重到须惊。
 纵豆蔻词工，青楼梦好，难赋深情。
 二十四桥仍在，波心荡、冷月无声。
 念桥边红药，年年知为谁生。
 ```
 ---
-## 玉楼春·尊前拟把归期说
-### 宋代：欧阳修
+## 念奴娇·闹红一舸
+### 宋代：姜夔
+> 余客武陵。湖北宪治在焉：古城野水，乔木参天。余与二三友，日荡舟其间。薄荷花而饮，意象幽闲，不类人境。秋水且涸。荷叶出地寻丈，因列坐其下，上不见日。清风徐来，绿云自动。间于疏处，窥见游人画船，亦一乐也。朅来吴兴。数得相羊荷花中，又夜泛西湖，光景奇绝。故以此句写之。
+
 ```
-尊前拟把归期说，欲语春容先惨咽。
-人生自是有情痴，此恨不关风与月。
-离歌且莫翻新阕，一曲能教肠寸结。
-直须看尽洛城花，始共春风容易别。
+闹红一舸，记来时，尝与鸳鸯为侣，
+三十六陂人未到，水佩风裳无数。
+翠叶吹凉，玉容消酒，更洒菇蒲雨。
+嫣然摇动，冷香飞上诗句。
+
+日暮，青盖亭亭，情人不见，争忍凌波去？
+只恐舞衣寒易落，愁人西风南浦。
+高柳垂阴，老鱼吹浪，留我花间住。
+田田多少，几回沙际归路。(愁人 一作：愁入)
 ```
 ---
 ## 水调歌头·送章德茂大卿使虏
@@ -168,6 +241,7 @@
 不见南师久，漫说北群空。当场只手，毕竟还我万夫雄。
 自笑堂堂汉使，得似洋洋河水，依旧只流东？
 且复穹庐拜，会向藁街逢！
+
 尧之都，舜之壤，禹之封。于中应有，一个半个耻臣戎！
 万里腥膻如许，千古英灵安在，磅礴几时通？
 胡运何须问，赫日自当中！
@@ -182,15 +256,83 @@
 此情无计可消除，才下眉头，却上心头。
 ```
 ---
+## 如梦令·常记溪亭日暮
+### 宋代：李清照
+```
+常记溪亭日暮，沉醉不知归路。
+兴尽晚回舟，误入藕花深处。
+争渡，争渡，惊起一滩鸥鹭。
+```
+---
 ## 声声慢·寻寻觅觅
 ### 宋代：李清照
 ```
 寻寻觅觅，冷冷清清，凄凄惨惨戚戚。
-乍暖还寒时候，最难将息。三杯两盏淡酒，怎敌他、晚来风急？
+乍暖还寒时候，最难将息。
+三杯两盏淡酒，怎敌他、晚来风急？
 雁过也，正伤心，却是旧时相识。
+
 满地黄花堆积。憔悴损，如今有谁堪摘？
-守着窗儿，独自怎生得黑？梧桐更兼细雨，到黄昏、点点滴滴。
+守着窗儿，独自怎生得黑？
+梧桐更兼细雨，到黄昏、点点滴滴。
 这次第，怎一个愁字了得！（守着窗儿 一作：守著窗儿）
+```
+---
+## 醉花阴·薄雾浓云愁永昼
+### 宋代：李清照
+```
+薄雾浓云愁永昼，瑞脑消金兽。
+佳节又重阳，玉枕纱橱，半夜凉初透。(橱 通：厨)
+东篱把酒黄昏后，有暗香盈袖。
+莫道不销魂，帘卷西风，人比黄花瘦。(人比 一作：人似；销 一作：消)
+```
+---
+## 蝶恋花·泪湿罗衣脂粉满
+###宋代：李清照
+```
+泪湿罗衣脂粉满，四叠阳关，唱到千千遍。
+人道山长水又断，萧萧微雨闻孤馆。
+惜别伤离方寸乱，忘了临行，酒盏深和浅。
+好把音书凭过雁，东莱不似蓬莱远。
+```
+---
+## 蝶恋花·上巳召亲族
+### 宋代：李清照
+```
+永夜恹恹欢意少。空梦长安，认取长安道。
+为报今年春色好，花光月影宜相照。
+随意杯盘虽草草。酒美梅酸，恰称人怀抱。
+醉里插花花莫笑，可怜春似人将老
+```
+---
+## 武陵春·春晚
+###宋代：李清照
+```
+风住尘香花已尽，日晚倦梳头。
+物是人非事事休，欲语泪先流。
+闻说双溪春尚好，也拟泛轻舟。
+只恐双溪舴艋舟，载不动许多愁。
+```
+---
+## 罗敷歌（采桑子·五之五）
+### 宋代：贺铸
+```
+东亭南馆逢迎地，几醉红裙。凄怨临分。四叠阳关忍泪闻。 
+谁怜今夜篷窗雨，何处渔村。酒冷灯昏。不许愁人不断魂。
+```
+---
+## 青玉案·凌波不过横塘路
+### 宋代：贺铸
+```
+凌波不过横塘路，但目送、芳尘去。
+锦瑟华年谁与度？月桥花院，琐窗朱户，只有春知处。
+飞云冉冉蘅皋暮，彩笔新题断肠句。
+试问闲情都几许？一川烟草，满城风絮，梅子黄时雨。(版本一)
+
+凌波不过横塘路，但目送、芳尘去。
+锦瑟华年谁与度？月台花榭，琐窗朱户，只有春知处。
+碧云冉冉蘅皋暮，彩笔新题断肠句。
+试问闲愁都几许？一川烟草，满城风絮，梅子黄时雨。(版本二)
 ```
 ---
 ## 卜算子·咏梅
@@ -239,6 +381,15 @@
 ```
 少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。 
 而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。
+```
+---
+## 清平乐·村居
+### 宋代：辛弃疾
+```
+茅檐低小，溪上青青草。
+醉里吴音相媚好，白发谁家翁媪？
+大儿锄豆溪东，中儿正织鸡笼。
+最喜小儿亡赖，溪头卧剥莲蓬。(亡 通：无)
 ```
 ---
 ##  青玉案·元夕
@@ -293,6 +444,7 @@
 舞榭歌台，风流总被雨打风吹去。
 斜阳草树，寻常巷陌，人道寄奴曾住。
 想当年，金戈铁马，气吞万里如虎。
+
 元嘉草草，封狼居胥，赢得仓皇北顾。
 四十三年，望中犹记，烽火扬州路。
 可堪回首，佛狸祠下，一片神鸦社鼓。
@@ -306,6 +458,7 @@
 遥岑远目，献愁供恨，玉簪螺髻。
 落日楼头，断鸿声里，江南游子。
 把吴钩看了，栏杆拍遍，无人会，登临意。(栏杆 一作：阑干)
+
 休说鲈鱼堪脍，尽西风，季鹰归未？
 求田问舍，怕应羞见，刘郎才气。
 可惜流年，忧愁风雨，树犹如此！
@@ -319,6 +472,7 @@
 抬望眼，仰天长啸，壮怀激烈。
 三十功名尘与土，八千里路云和月。
 莫等闲，白了少年头，空悲切！(栏 通：阑)
+
 靖康耻，犹未雪。臣子恨，何时灭！
 驾长车，踏破贺兰山缺。
 壮志饥餐胡虏肉，笑谈渴饮匈奴血。
@@ -376,8 +530,10 @@
 ## 清平乐·红笺小字
 ### 宋代：晏殊
 ```
-红笺小字。说尽平生意。鸿雁在云鱼在水。惆怅此情难寄。 
-斜阳独倚西楼。遥山恰对帘钩。人面不知何处，绿波依旧东流。
+红笺小字。说尽平生意。
+鸿雁在云鱼在水。惆怅此情难寄。 
+斜阳独倚西楼。遥山恰对帘钩。
+人面不知何处，绿波依旧东流。
 ```
 ---
 ## 采桑子·时光只解催人老
@@ -387,11 +543,22 @@
 梧桐昨夜西风急，淡月胧明，好梦频惊，何处高楼雁一声？
 ```
 ---
+## 踏莎行·小径红稀
+### 宋代：晏殊
+```
+小径红稀，芳郊绿遍。高台树色阴阴见。
+春风不解禁杨花，蒙蒙乱扑行人面。(蒙 通：濛)
+翠叶藏莺，朱帘隔燕。炉香静逐游丝转。
+一场愁梦酒醒时，斜阳却照深深院。
+```
+---
 ## 卜算子·答施
 ### 宋代：乐婉
 ```
-相思似海深，旧事如天远。泪滴千千万万行，更使人、愁肠断。
-要见无因见，拚了终难拚。若是前生未有缘，待重结、来生愿。
+相思似海深，旧事如天远。
+泪滴千千万万行，更使人、愁肠断。
+要见无因见，拚了终难拚。
+若是前生未有缘，待重结、来生愿。
 ```
 ---
 ## 山园小梅二首
@@ -417,6 +584,58 @@
 琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
 ```
 ---
+## 鹧鸪天·彩袖殷勤捧玉钟
+### 宋代：晏几道
+```
+彩袖殷勤捧玉钟，当年拚却醉颜红。
+舞低杨柳楼心月，歌尽桃花扇底风。
+从别后，忆相逢，几回魂梦与君同。
+今宵剩把银釭照，犹恐相逢是梦中。
+```
+---
+## 采桑子
+### 宋代：晏几道
+```
+白莲池上当时月，今夜重圆。曲水兰船。忆伴飞琼看月眠。 
+黄花绿酒分携后，泪湿吟笺。旧事年年。时节南湖又采莲。
+```
+---
+## 秋蕊香
+### 宋代：晏几道
+```
+歌彻郎君秋草。别恨远山眉小。
+无情莫把多情恼。第一归来须早。 
+红尘自古长安道。故人多。
+相思不比相逢好。此别朱颜应老。
+```
+---
+## 清平乐·留人不住
+### 宋代：晏几道
+```
+留人不住，醉解兰舟去。
+一棹碧涛春水路，过尽晓莺啼处。
+渡头杨柳青青，枝枝叶叶离情。
+此后锦书休寄，画楼云雨无凭。
+```
+---
+## 山之高三章
+### 宋代：张玉娘
+```
+山之高，月出小。
+月之小，何皎皎。
+我有所思在远道，
+一日不见兮，
+我心悄悄。
+
+采苦采苦，于山之南。
+忡忡忧心，其何以堪。
+
+汝心金石坚，我操冰雪洁。
+拟结百岁盟，忽成一朝别。
+
+朝云暮雨心去来，千里相思共明月。
+```
+---
 ## 雨霖铃·寒蝉凄切
 ### 宋代：柳永
 ```
@@ -424,6 +643,7 @@
 都门帐饮无绪，留恋处，兰舟催发。
 执手相看泪眼，竟无语凝噎。
 念去去，千里烟波，暮霭沉沉楚天阔。
+
 多情自古伤离别，更那堪，冷落清秋节！
 今宵酒醒何处？杨柳岸，晓风残月。
 此去经年，应是良辰好景虚设。
@@ -435,6 +655,7 @@
 ```
 伫倚危楼风细细，望极春愁，黯黯生天际。
 草色烟光残照里，无言谁会凭阑意。(阑 通 栏)
+
 拟把疏狂图一醉，对酒当歌，强乐还无味。
 衣带渐宽终不悔，为伊消得人憔悴。
 ```
@@ -446,6 +667,7 @@
 烟柳画桥，风帘翠幕，参差十万人家。
 云树绕堤沙，怒涛卷霜雪，天堑无涯。
 市列珠玑，户盈罗绮，竞豪奢。
+
 重湖叠巘清嘉。有三秋桂子，十里荷花。
 羌管弄晴，菱歌泛夜，嬉嬉钓叟莲娃。
 千骑拥高牙。乘醉听箫鼓，吟赏烟霞。
@@ -458,9 +680,24 @@
 薄衾小枕凉天气，乍觉别离滋味。
 展转数寒更，起了还重睡。
 毕竟不成眠，一夜长如岁。 
+
 也拟待、却回征辔；又争奈、已成行计。
 万种思量，多方开解，只恁寂寞厌厌地。
 系我一生心，负你千行泪。
+```
+---
+## 八声甘州·对潇潇暮雨洒江天
+### 宋代：柳永
+```
+对潇潇暮雨洒江天，一番洗清秋。
+渐霜风凄紧，关河冷落，残照当楼。
+是处红衰翠减，苒苒物华休。
+唯有长江水，无语东流。 
+
+不忍登高临远，望故乡渺邈，归思难收。
+叹年来踪迹，何事苦淹留？
+想佳人妆楼颙望，误几回、天际识归舟。
+争知我，倚阑杆处，正恁凝愁！(阑 一作：栏)
 ```
 ---
 ## 玉楼春·尊前拟把归期说
@@ -481,6 +718,43 @@
 泪眼问花花不语，乱红飞过秋千去。
 ```
 ---
+## 踏莎行·候馆梅残
+### 宋代：欧阳修
+```
+候馆梅残，溪桥柳细。草薰风暖摇征辔。
+离愁渐远渐无穷，迢迢不断如春水。 
+寸寸柔肠，盈盈粉泪。楼高莫近危阑倚。
+平芜尽处是春山，行人更在春山外。
+```
+---
+## 生查子·元夕
+### 宋代：欧阳修
+```
+去年元夜时，花市灯如昼。
+月上柳梢头，人约黄昏后。
+今年元夜时，月与灯依旧。
+不见去年人，泪湿春衫袖。(泪湿 ：一作：满)
+```
+---
+## 诉衷情·眉意
+### 宋代：欧阳修
+```
+清晨帘幕卷轻霜。呵手试梅妆。
+都缘自有离恨，故画作远山长。
+思往事，惜流芳。易成伤。
+拟歌先敛，欲笑还颦，最断人肠。
+```
+---
+##千秋岁·数声鶗鴂
+### 宋代：张先
+```
+数声鶗鴂，又报芳菲歇。惜春更把残红折。
+雨轻风色暴，梅子青时节。永丰柳，无人尽日花飞雪。
+莫把幺弦拨，怨极弦能说。
+天不老，情难绝。心似双丝网，中有千千结。
+夜过也，东窗未白凝残月。(凝残月 一作：孤灯灭)
+```
+---
 ## 蚕妇
 ### 宋代：张俞
 ```
@@ -497,4 +771,45 @@
 柳下系船犹未稳，能几日，又中秋。
 黄鹤断矶头，故人今在否？旧江山浑是新愁。
 欲买桂花同载酒，终不似，少年游。(在否 一作：在不)
+```
+---
+## 踏莎行·雪似梅花
+### 宋代：吕本中
+```
+雪似梅花，梅花似雪。似和不似都奇绝。
+恼人风味阿谁知？请君问取南楼月。
+记得去年，探梅时节。老来旧事无人说。
+为谁醉倒为谁醒？到今犹恨轻离别。
+```
+---
+## 采桑子·恨君不似江楼月
+### 宋代：吕本中
+```
+恨君不似江楼月，南北东西，南北东西，只有相随无别离。
+恨君却似江楼月，暂满还亏，暂满还亏，待得团圆是几时？
+```
+---
+## 苏幕遮·燎沉香
+### 宋代：周邦彦
+```
+燎沉香，消溽暑。鸟雀呼晴，侵晓窥檐语。
+叶上初阳干宿雨、水面清圆，一一风荷举。
+故乡遥，何日去。家住吴门，久作长安旅。
+五月渔郎相忆否。小楫轻舟，梦入芙蓉浦。
+```
+---
+## 九张机
+### 宋代：无名氏
+```
+一张机。织梭光景去如飞。兰房夜永愁无寐。呕呕轧轧，织成春恨，留著待郎归。
+两张机。月明人静漏声稀。千丝万缕相萦系。织成一段，回纹锦字。将去寄呈伊。
+三张机。中心有朵耍花儿。娇红嫩绿春明媚。君须早折，一枝浓艳，莫待过芳菲。
+四张机。鸳鸯织就欲双飞。可怜未老头先白，春波碧草，晓寒深处，相对浴红衣。
+五张机。芳心密与巧心期。合欢树上枝连理。双头花下，两同心处，一对化生儿。
+六张机。雕花铺锦半离披。兰房别有留春计。炉添小篆，日长一线，相对绣工迟。
+七张机。春蚕吐尽一生丝。莫教容易裁罗绮。无端剪破，仙鸾彩凤，分作两般衣。
+八张机。纤纤玉手住无时。蜀江濯尽春波媚。香遗囊麝，花房绣被。归去意迟迟。
+九张机。一心长在百花枝。百花共作红堆被。都将春色，藏头里面，不怕睡多时。
+轻丝。象床玉手出新奇。千花万草光凝碧。裁缝衣著，春天歌舞，飞蝶语黄鹂。
+春衣。素丝染就已堪悲。尘世昏污无颜色。应同秋扇，从兹永弃。无复奉君时。
 ```
