--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -1,3 +1,5 @@
+# 清诗
+
 ## 木兰花·拟古决绝词柬友
 ### 清代：纳兰性德
 ```
@@ -12,6 +14,45 @@
 ```
 山一程，水一程，身向榆关那畔行，夜深千帐灯。
 风一更，雪一更，聒碎乡心梦不成，故园无此声。
+```
+---
+## 菩萨蛮·春云吹散湘帘雨
+### 清代：纳兰性德
+```
+春云吹散湘帘雨，絮黏蝴蝶飞还住。
+人在玉楼中，楼高四面风。
+柳烟丝一把，暝色笼鸳瓦。
+休近小阑干，夕阳无限山。
+```
+---
+## 虞美人·银床淅沥青梧老
+### 清代：纳兰性德
+```
+银床淅沥青梧老，屧粉秋蛩扫。
+采香行处蹙连钱，拾得翠翘何恨不能言。
+回廊一寸相思地，落月成孤倚。
+背灯和月就花阴，已是十年踪迹十年心。
+```
+---
+## 采桑子·明月多情应笑我
+### 清代：纳兰性德
+```
+明月多情应笑我，笑我如今。辜负春心，独自闲行独自吟。
+近来怕说当时事，结遍兰襟。月浅灯深，梦里云归何处寻。
+```
+---
+## 采桑子·塞上咏雪花
+### 清代：纳兰性德
+```
+非关癖爱轻模样，冷处偏佳。别有根芽，不是人间富贵花。
+谢娘别后谁能惜，飘泊天涯。寒月悲笳，万里西风瀚海沙。
+```
+---
+## 浣溪沙·残雪凝辉冷画屏
+### 清代：纳兰性德
+```
+残雪凝辉冷画屏，落梅横笛已三更，更无人处月胧明。
+我是人间惆怅客，知君何事泪纵横，断肠声里忆平生。
 ```
 ---
 ## 绮怀
@@ -32,11 +73,20 @@
 最是人间留不住，朱颜辞镜花辞树。
 ```
 ---
+## 采桑子·高城鼓动兰釭灺
+### 清代：王国维
+```
+高城鼓动兰釭灺，睡也还醒，醉也还醒，忽听孤鸿三两声。
+人生只似风前絮，欢也零星，悲也零星，都作连江点点萍。
+```
+---
 ## 蝶恋花·和漱玉词
 ### 清代：王士祯
 ```
-凉夜沉沉花漏冻，欹枕无眠，渐觉荒鸡动。此际闲愁郎不共，月移窗罅春寒重。
-忆共锦衾无半缝，郎似桐花，妾似桐花凤。往事迢迢徒入梦，银筝断续连珠弄。
+凉夜沉沉花漏冻，欹枕无眠，渐觉荒鸡动。
+此际闲愁郎不共，月移窗罅春寒重。
+忆共锦衾无半缝，郎似桐花，妾似桐花凤。
+往事迢迢徒入梦，银筝断续连珠弄。
 ```
 ---
 ## 狱中题壁
