--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -1,3 +1,5 @@
+# 现代诗
+
 ## 面朝大海，春暖花开
 ### 海子
 ```
@@ -92,4 +94,50 @@
 我希望飘过 
 一个丁香一样地 
 结着愁怨的姑娘 
+```
+---
+## 路人
+### 西贝
+```
+不知为何，明明想和你说话,
+却骗你说，风雨正好，该去写点诗句。
+
+不必嘲讽我，你笑出声来，
+我也当是天籁。
+不必怀有敌意，你所有心计，
+我都当是你对我的心意。
+　　
+我的宿命分两段，
+未遇见你时，和遇见你以后。
+你治好我的忧郁，而后赐我悲伤。
+忧郁和悲伤之间的片刻欢喜，
+透支了我生命全部的热情储蓄。
+
+想饮一些酒，让灵魂失重，好被风吹走。
+可一想到终将是你的路人，
+便觉得，沦为整个世界的路人。
+风虽大，都绕过我灵魂。
+```
+---
+## 直到这个世界禁止爱你
+### 西贝
+```
+我曾以为面壁思过，就会忘记你，
+直到每一面墙都浮现你的样子，
+直到世间万物和你的身影重叠。
+纵然找到身体里，
+哪根骨头属于你，
+也绝不拆下还你。
+纵然世上有三千个你，
+每个我都要娶。
+直到你成为我头上第一根白发，
+也要把你的笑声藏在我皱纹里。
+直到时间之河撞上昆仑山，
+咆哮折回，把世界压在海底，
+直到我变成贝壳，
+也要想着你，结出珍珠千百粒。
+直到这个世界禁止爱你,
+今夜，我的眼泪被世界拒绝，
+又不能，在这波涛汹涌的字句里，
+游向你。
 ```
