add loaders/ buttons/ menus/

--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -15,3 +15,4 @@
 [Day 013 - 使用Grid实现各种布局](day100/day013.html)  
 [Day 014 - 化学元素周期表](day100/day014.html)  
 [Day 015 - 中国历史年代表](day100/day015.html)  
+[Day 016 - 下雨动画](day100/day016.html)  
