--- a/poetry/现代诗.md
+++ b/poetry/现代诗.md
@@ -1,5 +1,7 @@
 # 现代诗
 
+[TOC]
+
 ## 面朝大海，春暖花开
 ### 海子
 ```
@@ -140,4 +142,22 @@
 今夜，我的眼泪被世界拒绝，
 又不能，在这波涛汹涌的字句里，
 游向你。
+```
+---
+## 梅岭三章
+### 作者：陈毅
+```
+断头今日意如何？创业艰难百战多。
+此去泉台招旧部，旌旗十万斩阎罗。
+南国烽烟正十年，此头须向国门悬。
+后死诸君多努力，捷报飞来当纸钱。
+投身革命即为家，血雨腥风应有涯。
+取义成仁今日事，人间遍种自由花。
+```
+---
+## 七绝·改西乡隆盛诗赠父亲
+### 毛泽东
+```
+孩儿立志出乡关，学不成名誓不还。
+埋骨何须桑梓地，人生无处不青山。
 ```
