add some poems and add day018

--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -17,3 +17,11 @@
 [Day 015 - 中国历史年代表](day100/day015.html)  
 [Day 016 - 下雨动画](day100/day016.html)  
 [Day 017 - 网页版天气预报](day100/day017.html)  
+[Day 018 - 手机旋转属性](day100/day018.html)  
+[Day 019 - 手风琴效果菜单](day100/day019.html)  
+[Day 020 - Todo]()  
+[Day 021 - 网页版微信]()  
+[Day 022 - 弹幕]()  
+[Day 023 - 苹果电脑外观效果图]()  
+[Day 024 - Max OS X 的 Dock效果]()  
+[Day 025 - 模拟书本的翻页效果]()  
