--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -584,6 +584,13 @@
 琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
 ```
 ---
+## 蝶恋花·笑艳秋莲生绿浦
+### 宋代：晏几道
+```
+笑艳秋莲生绿浦。红脸青腰，旧识凌波女。照影弄妆娇欲语。西风岂是繁花主。 
+可恨良辰天不与。才过斜阳，又是黄昏雨。朝落暮开空自许。竟无人解知心苦。
+```
+---
 ## 鹧鸪天·彩袖殷勤捧玉钟
 ### 宋代：晏几道
 ```
