--- a/poetry/明诗.md
+++ b/poetry/明诗.md
@@ -37,3 +37,13 @@
 别人笑我忒风骚，我笑他人看不穿。
 不见五陵豪杰墓，无酒无花锄作田。（版本二）
 ```
+---
+## 石灰吟
+### 明代：于谦
+```
+千锤万凿出深山，烈火焚烧若等闲。
+粉骨碎身全不怕，要留清白在人间。
+
+(一作：千锤万击出深山 / 千鎚万击出深山)
+(一作：粉骨碎身全不惜 / 粉身碎骨浑不怕 / 粉身碎骨全不怕)
+```
