--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -22,6 +22,6 @@
 [Day 020 - Todo]()  
 [Day 021 - 网页版微信]()  
 [Day 022 - 弹幕]()  
-[Day 023 - 苹果电脑外观效果图]()  
+[Day 023 - 苹果电脑外观效果图](day100/day023.html)  
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
