--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -25,3 +25,6 @@
 [Day 023 - 苹果电脑外观效果图](day100/day023.html)  
 [Day 024 - Max OS X 的 Dock效果]()  
 [Day 025 - 模拟书本的翻页效果]()  
+[Day 026 - Fancy watch](day100/day026.html)  
+[Day 027 - 放大镜效果]()  
+[Day 028 - 元素拖动]()
