--- a/demo/day100/day100.md
+++ b/demo/day100/day100.md
@@ -27,4 +27,5 @@
 [Day 025 - 模拟书本的翻页效果]()  
 [Day 026 - Fancy watch](day100/day026.html)  
 [Day 027 - 放大镜效果]()  
-[Day 028 - 元素拖动]()
+[Day 028 - 元素拖动]()  
+[Day 029 - 像素画板](day100/day029.html)  
