--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -235,6 +235,24 @@
 田田多少，几回沙际归路。(愁人 一作：愁入)
 ```
 ---
+## 临江仙·夜登小阁忆洛中旧游
+###宋代：陈与义
+```
+忆昔午桥桥上饮，坐中多是豪英。
+长沟流月去无声。杏花疏影里，吹笛到天明。 
+二十余年如一梦，此身虽在堪惊。
+闲登小阁看新晴。古今多少事，渔唱起三更。
+```
+---
+## 满江红·夜雨凉甚忽动从戎之兴
+### 宋代：刘克庄
+```
+金甲雕戈，记当日、辕门初立。磨盾鼻、一挥千纸，龙蛇犹湿。
+铁马晓嘶营壁冷，楼船夜渡风涛急。有谁怜、猿臂故将军，无功级。
+平戎策，从军什。零落尽，慵收拾。把茶经香传，时时温习。
+生怕客谈榆塞事，且教儿诵花间集。叹臣之壮也不如人，今何及。
+```
+---
 ## 水调歌头·送章德茂大卿使虏
 ### 宋代：陈亮
 ```
