--- a/poetry/清诗.md
+++ b/poetry/清诗.md
@@ -55,6 +55,13 @@
 我是人间惆怅客，知君何事泪纵横，断肠声里忆平生。
 ```
 ---
+## 出塞
+### 清代：徐锡麟
+```
+军歌应唱大刀环，誓灭胡奴出玉关。
+只解沙场为国死，何须马革裹尸还。
+```
+---
 ## 绮怀
 ### 清代：黄景仁 
 ```
