--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -167,6 +167,20 @@
 等闲识得东风面，万紫千红总是春。
 ```
 ---
+## 观书有感二首·其一
+### 宋代：朱熹
+```
+半亩方塘一鉴开，天光云影共徘徊。
+问渠那得清如许？为有源头活水来。(那 通：哪)
+```
+---
+## 劝学诗 / 偶成
+### 宋代：朱熹
+```
+少年易老学难成，一寸光阴不可轻。
+未觉池塘春草梦，阶前梧叶已秋声。
+```
+---
 ## 题临安邸
 ### 宋代：林升
 ```
