添加几首诗词

--- a/poetry/宋词.md
+++ b/poetry/宋词.md
@@ -11,7 +11,26 @@
 相顾无言，惟有泪千行。
 料得年年肠断处，明月夜，短松冈。(肠断 一作：断肠)
 ```
----
+
+## 浣溪沙·细雨斜风作晓寒
+### 宋代：苏轼
+
+> 元丰七年十二月二十四日，从泗州刘倩叔游南山
+
+```
+细雨斜风作晓寒，淡烟疏柳媚晴滩。入淮清洛渐漫漫。
+雪沫乳花浮午盏，蓼茸蒿笋试春盘。人间有味是清欢。
+```
+
+## 水调歌头·黄州快哉亭赠张偓佺
+### 宋代：苏轼
+```
+落日绣帘卷，亭下水连空。知君为我新作，窗户湿青红。
+长记平山堂上，欹枕江南烟雨，杳杳没孤鸿。认得醉翁语，山色有无中。
+一千顷，都镜净，倒碧峰。忽然浪起，掀舞一叶白头翁。
+堪笑兰台公子，未解庄生天籁，刚道有雌雄。一点浩然气，千里快哉风。
+```
+
 ## 临江仙·夜饮东坡醒复醉
 ### 宋代：苏轼
 ```
@@ -20,7 +39,7 @@
 长恨此身非我有，何时忘却营营。
 夜阑风静縠纹平。小舟从此逝，江海寄余生。
 ```
----
+
 ##蝶恋花·春景
 ### 宋代：苏轼
 ```
@@ -29,7 +48,7 @@
 墙里秋千墙外道。墙外行人，墙里佳人笑。
 笑渐不闻声渐悄。多情却被无情恼。
 ```
----
+
 ## 水龙吟·次韵章质夫杨花词
 ### 宋代：苏轼
 ```
@@ -43,7 +62,7 @@
 春色三分，二分尘土，一分流水。
 细看来，不是杨花，点点是离人泪。
 ```
----
+
 ## 定风波·莫听穿林打叶声
 ### 宋代：苏轼
 > 三月七日，沙湖道中遇雨。雨具先去，同行皆狼狈，余独不觉，已而遂晴，故作此词。
@@ -54,7 +73,7 @@
 料峭春风吹酒醒，微冷，山头斜照却相迎。
 回首向来萧瑟处，归去，也无风雨也无晴。
 ```
----
+
 ## 念奴娇·赤壁怀古
 ### 宋代：苏轼
 ```
@@ -68,7 +87,7 @@
 故国神游，多情应笑我，早生华发。
 人生如梦，一尊还酹江月。(人生 一作：人间；尊 通：樽)
 ```
----
+
 ## 水调歌头·明月几时有
 ### 宋代：苏轼
 > 丙辰中秋，欢饮达旦，大醉，作此篇，兼怀子由。
@@ -84,7 +103,7 @@
 人有悲欢离合，月有阴晴圆缺，此事古难全。
 但愿人长久，千里共婵娟。(长向 一作：偏向)
 ```
----
+
 ## 江城子·密州出猎
 ### 宋代：苏轼
 ```
@@ -93,7 +112,7 @@
 酒酣胸胆尚开张，鬓微霜，又何妨！持节云中，何日遣冯唐？
 会挽雕弓如满月，西北望，射天狼。
 ```
----
+
 ## 临江仙·送钱穆父
 ### 宋代：苏轼
 ```
@@ -104,7 +123,7 @@
 尊前不用翠眉颦。
 人生如逆旅，我亦是行人。(尊 通：樽)
 ```
----
+
 ### 南乡子·重九涵辉楼呈徐君猷
 ### 宋代：苏轼
 ```
@@ -113,7 +132,7 @@
 佳节若为酬。但把清尊断送秋。
 万事到头都是梦，休休。明日黄花蝶也愁。
 ```
----
+
 ## 卜算子·黄州定慧院寓居作
 ### 宋代：苏轼
 ```
@@ -122,7 +141,39 @@
 惊起却回头，有恨无人省。
 拣尽寒枝不肯栖，寂寞沙洲冷。
 ```
----
+
+## 浣溪沙·缥缈红妆照浅溪
+### 宋代：苏轼
+```
+缥缈红妆照浅溪。薄云疏雨不成泥。送君何处古台西。
+废沼夜来秋水满，茂林深处晚莺啼。行人肠断草凄迷。
+```
+
+## 浣溪沙·簌簌衣巾落枣花
+### 宋代：苏轼
+> 徐门石潭谢雨，道上作五首。潭在城东二十里，常与泗水增减清浊相应。
+
+```
+簌簌衣巾落枣花，村南村北响缲车，牛衣古柳卖黄瓜。(缲 通：缫)
+酒困路长惟欲睡，日高人渴漫思茶。敲门试问野人家。
+```
+
+## 望江南·超然台作
+### 宋代：苏轼
+```
+春未老，风细柳斜斜。
+试上超然台上看，半壕春水一城花。烟雨暗千家。
+寒食后，酒醒却咨嗟。
+休对故人思故国，且将新火试新茶。诗酒趁年华。
+```
+
+## 西江月·世事一场大梦
+### 宋代：苏轼
+```
+世事一场大梦，人生几度秋凉？夜来风叶已鸣廊。看取眉头鬓上。(秋凉 一作：新凉)
+酒贱常愁客少，月明多被云妨。中秋谁与共孤光。把盏凄然北望。
+```
+
 ## 浣溪沙·游蕲水清泉寺
 ### 宋代：苏轼
 > 游蕲水清泉寺，寺临兰溪，溪水西流。
@@ -131,7 +182,7 @@
 山下兰芽短浸溪，松间沙路净无泥，潇潇暮雨子规啼。(潇潇 一作：萧萧)
 谁道人生无再少？门前流水尚能西！休将白发唱黄鸡。
 ```
----
+
 ## 卜算子·我住长江头
 ### 宋代：李之仪
 ```
@@ -140,7 +191,7 @@
 此水几时休，此恨何时已。
 只愿君心似我心，定不负相思意。
 ```
----
+
 ## 一剪梅·舟过吴江
 ### 宋代：蒋捷
 ```
@@ -149,7 +200,7 @@
 何日归家洗客袍？银字笙调，心字香烧。
 流光容易把人抛，红了樱桃，绿了芭蕉。
 ```
----
+
 ## 虞美人·听雨
 ### 宋代：蒋捷
 ```
@@ -158,7 +209,7 @@
 而今听雨僧庐下。鬓已星星也。
 悲欢离合总无情。一任阶前、点滴到天明。
 ```
----
+
 ## 鹊桥仙·纤云弄巧
 ### 宋代：秦观
 ```
@@ -167,7 +218,7 @@
 柔情似水，佳期如梦，忍顾鹊桥归路。
 两情若是久长时，又岂在朝朝暮暮。
 ```
----
+
 ## 如梦令·春景
 ### 宋代：秦观
 ```
@@ -175,14 +226,14 @@
 指冷玉笙寒，吹彻小梅春透。
 依旧，依旧，人与绿杨俱瘦。
 ```
----
+
 ## 浣溪沙·漠漠轻寒上小楼
 ### 宋代：秦观
 ```
 漠漠轻寒上小楼，晓阴无赖似穷秋。淡烟流水画屏幽。
 自在飞花轻似梦，无边丝雨细如愁。宝帘闲挂小银钩。
 ```
----
+
 ## 八六子·倚危亭
 ### 宋代：秦观
 ```
@@ -193,7 +244,7 @@
 怎奈向、欢娱渐随流水，素弦声断，翠绡香减，
 那堪片片飞花弄晚，蒙蒙残雨笼晴。正销凝。黄鹂又啼数声。
 ```
----
+
 ## 踏莎行·郴州旅舍
 ### 宋代：秦观
 ```
@@ -202,7 +253,7 @@
 驿寄梅花，鱼传尺素。砌成此恨无重数。
 郴江幸自绕郴山，为谁流下潇湘去。
 ```
----
+
 ## 扬州慢·淮左名都
 ### 宋代：姜夔
 > 淳熙丙申至日，予过维扬。夜雪初霁，荠麦弥望。入其城，则四顾萧条，寒水自碧，暮色渐起，戍角悲吟。予怀怆然，感慨今昔，因自度此曲。千岩老人以为有“黍离”之悲也。
@@ -218,7 +269,7 @@
 二十四桥仍在，波心荡、冷月无声。
 念桥边红药，年年知为谁生。
 ```
----
+
 ## 念奴娇·闹红一舸
 ### 宋代：姜夔
 > 余客武陵。湖北宪治在焉：古城野水，乔木参天。余与二三友，日荡舟其间。薄荷花而饮，意象幽闲，不类人境。秋水且涸。荷叶出地寻丈，因列坐其下，上不见日。清风徐来，绿云自动。间于疏处，窥见游人画船，亦一乐也。朅来吴兴。数得相羊荷花中，又夜泛西湖，光景奇绝。故以此句写之。
@@ -234,7 +285,7 @@
 高柳垂阴，老鱼吹浪，留我花间住。
 田田多少，几回沙际归路。(愁人 一作：愁入)
 ```
----
+
 ## 临江仙·夜登小阁忆洛中旧游
 ###宋代：陈与义
 ```
@@ -243,7 +294,7 @@
 二十余年如一梦，此身虽在堪惊。
 闲登小阁看新晴。古今多少事，渔唱起三更。
 ```
----
+
 ## 满江红·夜雨凉甚忽动从戎之兴
 ### 宋代：刘克庄
 ```
@@ -252,7 +303,7 @@
 平戎策，从军什。零落尽，慵收拾。把茶经香传，时时温习。
 生怕客谈榆塞事，且教儿诵花间集。叹臣之壮也不如人，今何及。
 ```
----
+
 ## 水调歌头·送章德茂大卿使虏
 ### 宋代：陈亮
 ```
@@ -264,7 +315,7 @@
 万里腥膻如许，千古英灵安在，磅礴几时通？
 胡运何须问，赫日自当中！
 ```
----
+
 ## 一剪梅·红藕香残玉簟秋
 ### 宋代：李清照
 ```
@@ -273,7 +324,7 @@
 花自飘零水自流。一种相思，两处闲愁。
 此情无计可消除，才下眉头，却上心头。
 ```
----
+
 ## 如梦令·常记溪亭日暮
 ### 宋代：李清照
 ```
@@ -281,7 +332,7 @@
 兴尽晚回舟，误入藕花深处。
 争渡，争渡，惊起一滩鸥鹭。
 ```
----
+
 ## 声声慢·寻寻觅觅
 ### 宋代：李清照
 ```
@@ -295,7 +346,7 @@
 梧桐更兼细雨，到黄昏、点点滴滴。
 这次第，怎一个愁字了得！（守着窗儿 一作：守著窗儿）
 ```
----
+
 ## 醉花阴·薄雾浓云愁永昼
 ### 宋代：李清照
 ```
@@ -304,7 +355,7 @@
 东篱把酒黄昏后，有暗香盈袖。
 莫道不销魂，帘卷西风，人比黄花瘦。(人比 一作：人似；销 一作：消)
 ```
----
+
 ## 蝶恋花·泪湿罗衣脂粉满
 ###宋代：李清照
 ```
@@ -313,7 +364,7 @@
 惜别伤离方寸乱，忘了临行，酒盏深和浅。
 好把音书凭过雁，东莱不似蓬莱远。
 ```
----
+
 ## 蝶恋花·上巳召亲族
 ### 宋代：李清照
 ```
@@ -322,7 +373,7 @@
 随意杯盘虽草草。酒美梅酸，恰称人怀抱。
 醉里插花花莫笑，可怜春似人将老
 ```
----
+
 ## 武陵春·春晚
 ###宋代：李清照
 ```
@@ -331,14 +382,14 @@
 闻说双溪春尚好，也拟泛轻舟。
 只恐双溪舴艋舟，载不动许多愁。
 ```
----
+
 ## 罗敷歌（采桑子·五之五）
 ### 宋代：贺铸
 ```
 东亭南馆逢迎地，几醉红裙。凄怨临分。四叠阳关忍泪闻。 
 谁怜今夜篷窗雨，何处渔村。酒冷灯昏。不许愁人不断魂。
 ```
----
+
 ## 青玉案·凌波不过横塘路
 ### 宋代：贺铸
 ```
@@ -352,21 +403,21 @@
 碧云冉冉蘅皋暮，彩笔新题断肠句。
 试问闲愁都几许？一川烟草，满城风絮，梅子黄时雨。(版本二)
 ```
----
+
 ## 卜算子·咏梅
 ### 宋代：陆游
 ```
 驿外断桥边，寂寞开无主。已是黄昏独自愁，更著风和雨。 
 无意苦争春，一任群芳妒。零落成泥碾作尘，只有香如故。
 ```
----
+
 ## 诉衷情·当年万里觅封侯
 ### 宋代：陆游
 ```
 当年万里觅封侯，匹马戍梁州。关河梦断何处？尘暗旧貂裘。
 胡未灭，鬓先秋，泪空流。此生谁料，心在天山，身老沧洲。
 ```
----
+
 ## 钗头凤·红酥手
 ### 宋代：陆游
 ```
@@ -375,7 +426,7 @@
 春如旧，人空瘦，泪痕红浥鲛绡透。
 桃花落，闲池阁。山盟虽在，锦书难托。莫、莫、莫！
 ```
----
+
 ## 钗头凤·世情薄
 ### 宋代：唐婉
 ```
@@ -384,7 +435,7 @@
 人成各，今非昨，病魂常似秋千索。
 角声寒，夜阑珊。怕人寻问，咽泪装欢。瞒，瞒，瞒！(装欢 通：妆)
 ```
----
+
 ## 苏幕遮·怀旧
 ### 宋代：范仲淹
 ```
@@ -393,14 +444,14 @@
 黯乡魂，追旅思。夜夜除非，好梦留人睡。
 明月楼高休独倚。酒入愁肠，化作相思泪。(留人睡 一作：留人醉)
 ```
----
+
 ## 丑奴儿·书博山道中壁
 ### 宋代：辛弃疾
 ```
 少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。 
 而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。
 ```
----
+
 ## 清平乐·村居
 ### 宋代：辛弃疾
 ```
@@ -409,7 +460,7 @@
 大儿锄豆溪东，中儿正织鸡笼。
 最喜小儿亡赖，溪头卧剥莲蓬。(亡 通：无)
 ```
----
+
 ##  青玉案·元夕
 ### 宋代：辛弃疾
 ```
@@ -418,7 +469,7 @@
 蛾儿雪柳黄金缕。笑语盈盈暗香去。
 众里寻他千百度。蓦然回首，那人却在，灯火阑珊处。
 ```
----
+
 ## 破阵子·为陈同甫赋壮词以寄之
 ### 宋代：辛弃疾
 ```
@@ -427,7 +478,7 @@
 马作的卢飞快，弓如霹雳弦惊。
 了却君王天下事，赢得生前身后名。可怜白发生！
 ```
----
+
 ## 菩萨蛮·书江西造口壁
 ### 宋代：辛弃疾
 ```
@@ -436,7 +487,7 @@
 青山遮不住，毕竟东流去。
 江晚正愁余，山深闻鹧鸪。 (愁余 一作：愁予)
 ```
----
+
 ## 西江月·夜行黄沙道中
 ### 宋代：辛弃疾
 ```
@@ -445,7 +496,7 @@
 七八个星天外，两三点雨山前。
 旧时茅店社林边，路转溪桥忽见。(溪桥 一作：溪头)
 ```
----
+
 ## 南乡子·登京口北固亭有怀
 ### 宋代：辛弃疾
 ```
@@ -454,7 +505,7 @@
 年少万兜鍪，坐断东南战未休。
 天下英雄谁敌手？曹刘。生子当如孙仲谋。
 ```
----
+
 ## 永遇乐·京口北固亭怀古
 ### 宋代：辛弃疾
 ```
@@ -468,7 +519,7 @@
 可堪回首，佛狸祠下，一片神鸦社鼓。
 凭谁问，廉颇老矣，尚能饭否？
 ```
----
+
 ## 水龙吟·登建康赏心亭
 ### 宋代：辛弃疾
 ```
@@ -482,7 +533,7 @@
 可惜流年，忧愁风雨，树犹如此！
 倩何人唤取，红巾翠袖，揾英雄泪！
 ```
----
+
 ## 满江红·写怀
 ### 宋代：岳飞
 ```
@@ -496,21 +547,21 @@
 壮志饥餐胡虏肉，笑谈渴饮匈奴血。
 待从头、收拾旧山河，朝天阙。(壮志 一作：壮士；兰山缺 一作：兰山阙)
 ```
----
+
 ## 采桑子·时光只解催人老
 ### 宋代：晏殊
 ```
 时光只解催人老，不信多情，长恨离亭，泪滴春衫酒易醒。
 梧桐昨夜西风急，淡月胧明，好梦频惊，何处高楼雁一声？
 ```
----
+
 ## 浣溪沙·一曲新词酒一杯
 ### 宋代：晏殊
 ```
 一曲新词酒一杯，去年天气旧亭台。夕阳西下几时回？
 无可奈何花落去，似曾相识燕归来。小园香径独徘徊。
 ```
----
+
 ## 蝶恋花·槛菊愁烟兰泣露
 ### 宋代：晏殊
 ```
@@ -519,7 +570,7 @@
 昨夜西风凋碧树，独上高楼，望尽天涯路。
 欲寄彩笺兼尺素，山长水阔知何处？
 ```
----
+
 ## 破阵子·春景
 ### 宋代：晏殊
 ```
@@ -528,14 +579,14 @@
 巧笑东邻女伴，采桑径里逢迎。
 疑怪昨宵春梦好，元是今朝斗草赢。笑从双脸生。
 ```
----
+
 ## 浣溪沙·一向年光有限身
 ### 宋代：晏殊
 ```
 一向年光有限身，等闲离别易销魂，酒筵歌席莫辞频。
 满目山河空念远，落花风雨更伤春，不如怜取眼前人。
 ```
----
+
 ## 玉楼春·春恨
 ### 宋代：晏殊
 ```
@@ -544,7 +595,7 @@
 无情不似多情苦，一寸还成千万缕。
 天涯地角有穷时，只有相思无尽处。
 ```
----
+
 ## 清平乐·红笺小字
 ### 宋代：晏殊
 ```
@@ -553,14 +604,14 @@
 斜阳独倚西楼。遥山恰对帘钩。
 人面不知何处，绿波依旧东流。
 ```
----
+
 ## 采桑子·时光只解催人老
 ### 宋代：晏殊
 ```
 时光只解催人老，不信多情，长恨离亭，泪滴春衫酒易醒。
 梧桐昨夜西风急，淡月胧明，好梦频惊，何处高楼雁一声？
 ```
----
+
 ## 踏莎行·小径红稀
 ### 宋代：晏殊
 ```
@@ -569,7 +620,7 @@
 翠叶藏莺，朱帘隔燕。炉香静逐游丝转。
 一场愁梦酒醒时，斜阳却照深深院。
 ```
----
+
 ## 卜算子·答施
 ### 宋代：乐婉
 ```
@@ -578,7 +629,7 @@
 要见无因见，拚了终难拚。
 若是前生未有缘，待重结、来生愿。
 ```
----
+
 ## 山园小梅二首
 ### 宋代：林逋
 ```
@@ -592,7 +643,7 @@
 澄鲜只共邻僧惜，冷落犹嫌俗客看。
 忆着江南旧行路，酒旗斜拂堕吟鞍。
 ```
----
+
 ## 临江仙·梦后楼台高锁
 ### 宋代：晏几道
 ```
@@ -601,14 +652,16 @@
 记得小蘋初见，两重心字罗衣。
 琵琶弦上说相思。当时明月在，曾照彩云归。(蘋 通：苹)
 ```
----
+
 ## 蝶恋花·笑艳秋莲生绿浦
 ### 宋代：晏几道
 ```
-笑艳秋莲生绿浦。红脸青腰，旧识凌波女。照影弄妆娇欲语。西风岂是繁花主。 
-可恨良辰天不与。才过斜阳，又是黄昏雨。朝落暮开空自许。竟无人解知心苦。
+笑艳秋莲生绿浦。红脸青腰，旧识凌波女。
+照影弄妆娇欲语。西风岂是繁花主。 
+可恨良辰天不与。才过斜阳，又是黄昏雨。
+朝落暮开空自许。竟无人解知心苦。
 ```
----
+
 ## 鹧鸪天·彩袖殷勤捧玉钟
 ### 宋代：晏几道
 ```
@@ -617,14 +670,23 @@
 从别后，忆相逢，几回魂梦与君同。
 今宵剩把银釭照，犹恐相逢是梦中。
 ```
----
+
+## 临江仙·斗草阶前初见
+### 宋代：晏几道
+```
+斗草阶前初见，穿针楼上曾逢。
+罗裙香露玉钗风。靓妆眉沁绿，羞脸粉生红。 
+流水便随春远，行云终与谁同。
+酒醒长恨锦屏空。相寻梦里路，飞雨落花中。
+```
+
 ## 采桑子
 ### 宋代：晏几道
 ```
 白莲池上当时月，今夜重圆。曲水兰船。忆伴飞琼看月眠。 
 黄花绿酒分携后，泪湿吟笺。旧事年年。时节南湖又采莲。
 ```
----
+
 ## 秋蕊香
 ### 宋代：晏几道
 ```
@@ -633,7 +695,7 @@
 红尘自古长安道。故人多。
 相思不比相逢好。此别朱颜应老。
 ```
----
+
 ## 清平乐·留人不住
 ### 宋代：晏几道
 ```
@@ -642,7 +704,7 @@
 渡头杨柳青青，枝枝叶叶离情。
 此后锦书休寄，画楼云雨无凭。
 ```
----
+
 ## 山之高三章
 ### 宋代：张玉娘
 ```
@@ -660,7 +722,7 @@
 
 朝云暮雨心去来，千里相思共明月。
 ```
----
+
 ## 雨霖铃·寒蝉凄切
 ### 宋代：柳永
 ```
@@ -674,7 +736,7 @@
 此去经年，应是良辰好景虚设。
 便纵有千种风情，更与何人说？(好景 一作：美景)
 ```
----
+
 ## 蝶恋花·伫倚危楼风细细
 ### 宋代：柳永
 ```
@@ -684,7 +746,7 @@
 拟把疏狂图一醉，对酒当歌，强乐还无味。
 衣带渐宽终不悔，为伊消得人憔悴。
 ```
----
+
 ## 望海潮·东南形胜
 ### 宋代：柳永
 ```
@@ -698,7 +760,7 @@
 千骑拥高牙。乘醉听箫鼓，吟赏烟霞。
 异日图将好景，归去凤池夸。
 ```
----
+
 ## 忆帝京·薄衾小枕凉天气
 ### 宋代：柳永
 ```
@@ -710,7 +772,7 @@
 万种思量，多方开解，只恁寂寞厌厌地。
 系我一生心，负你千行泪。
 ```
----
+
 ## 八声甘州·对潇潇暮雨洒江天
 ### 宋代：柳永
 ```
@@ -724,7 +786,7 @@
 想佳人妆楼颙望，误几回、天际识归舟。
 争知我，倚阑杆处，正恁凝愁！(阑 一作：栏)
 ```
----
+
 ## 玉楼春·尊前拟把归期说
 ### 宋代：欧阳修
 ```
@@ -733,7 +795,7 @@
 离歌且莫翻新阕，一曲能教肠寸结。
 直须看尽洛城花，始共春风容易别。
 ```
----
+
 ## 蝶恋花·庭院深深深几许
 ### 宋代：欧阳修
 ```
@@ -742,7 +804,7 @@
 雨横风狂三月暮，门掩黄昏，无计留春住。
 泪眼问花花不语，乱红飞过秋千去。
 ```
----
+
 ## 踏莎行·候馆梅残
 ### 宋代：欧阳修
 ```
@@ -751,7 +813,7 @@
 寸寸柔肠，盈盈粉泪。楼高莫近危阑倚。
 平芜尽处是春山，行人更在春山外。
 ```
----
+
 ## 生查子·元夕
 ### 宋代：欧阳修
 ```
@@ -760,7 +822,7 @@
 今年元夜时，月与灯依旧。
 不见去年人，泪湿春衫袖。(泪湿 ：一作：满)
 ```
----
+
 ## 诉衷情·眉意
 ### 宋代：欧阳修
 ```
@@ -769,7 +831,7 @@
 思往事，惜流芳。易成伤。
 拟歌先敛，欲笑还颦，最断人肠。
 ```
----
+
 ##千秋岁·数声鶗鴂
 ### 宋代：张先
 ```
@@ -779,14 +841,14 @@
 天不老，情难绝。心似双丝网，中有千千结。
 夜过也，东窗未白凝残月。(凝残月 一作：孤灯灭)
 ```
----
+
 ## 蚕妇
 ### 宋代：张俞
 ```
 昨日入城市，归来泪满巾。
 遍身罗绮者，不是养蚕人。
 ```
----
+
 ## 唐多令·芦叶满汀洲
 ### 宋代：刘过
 > 安远楼小集，侑觞歌板之姬黄其姓者，乞词于龙洲道人，为赋此《唐多令》。同柳阜之、刘去非、石民瞻、周嘉仲、陈孟参、孟容。时八月五日也。
@@ -797,7 +859,7 @@
 黄鹤断矶头，故人今在否？旧江山浑是新愁。
 欲买桂花同载酒，终不似，少年游。(在否 一作：在不)
 ```
----
+
 ## 踏莎行·雪似梅花
 ### 宋代：吕本中
 ```
@@ -806,14 +868,14 @@
 记得去年，探梅时节。老来旧事无人说。
 为谁醉倒为谁醒？到今犹恨轻离别。
 ```
----
+
 ## 采桑子·恨君不似江楼月
 ### 宋代：吕本中
 ```
 恨君不似江楼月，南北东西，南北东西，只有相随无别离。
 恨君却似江楼月，暂满还亏，暂满还亏，待得团圆是几时？
 ```
----
+
 ## 苏幕遮·燎沉香
 ### 宋代：周邦彦
 ```
@@ -822,7 +884,7 @@
 故乡遥，何日去。家住吴门，久作长安旅。
 五月渔郎相忆否。小楫轻舟，梦入芙蓉浦。
 ```
----
+
 ## 九张机
 ### 宋代：无名氏
 ```
