--- a/poetry/宋诗.md
+++ b/poetry/宋诗.md
@@ -6,7 +6,7 @@
 春宵一刻值千金，花有清香月有阴。
 歌管楼台声细细，秋千院落夜沉沉。
 ```
----
+
 ## 陌上花三首
 ### 宋代：苏轼
 > 游九仙山，闻里中儿歌陌上花，父老云，吴越王妃每岁春必归临安，王以书遗妃曰：“陌上花开，可缓缓归矣。”吴人用其语为歌，含思宛转，听之凄然。而其词鄙野，为易之云。
@@ -21,7 +21,7 @@
 生前富贵草头露，身后风流陌上花。
 已作迟迟君去鲁，犹教缓缓妾还家。
 ```
----
+
 ## 再用前韵
 ### 宋代：苏轼
 ```
@@ -36,7 +36,7 @@
 （岭南珍禽有倒挂子，绿毛红喙，如鹦鹉而小，自东海来，非尘埃中物也。
 ）
 ```
----
+
 ## 惠崇春江晚景二首 / 惠崇春江晓景二首
 ### 宋代：苏轼
 ```
@@ -46,27 +46,41 @@
 两两归鸿欲破群，依依还似北归人。
 遥知朔漠多风雪，更待江南半月春。
 ```
----
+
+## 水龙吟·次韵章质夫杨花词
+### 宋代：苏轼
+```
+似花还似非花，也无人惜从教坠。抛家傍路，思量却是，无情有思。萦损柔肠，困酣娇眼，欲开还闭。梦随风万里，寻郎去处，又还被、莺呼起。
+不恨此花飞尽，恨西园、落红难缀。晓来雨过，遗踪何在？一池萍碎。春色三分，二分尘土，一分流水。细看来，不是杨花，点点是离人泪。
+```
+
+## 题西林壁
+### 宋代：苏轼
+```
+横看成岭侧成峰，远近高低各不同。
+不识庐山真面目，只缘身在此山中。
+```
+
 ## 饮湖上初晴后雨二首·其二
 ### 宋代：苏轼
 ```
 水光潋滟晴方好，山色空蒙雨亦奇。(蒙 通：濛)
 欲把西湖比西子，淡妆浓抹总相宜。
 ```
----
+
 ## 泊船瓜洲
 ### 宋代：王安石
 ```
 京口瓜洲一水间，钟山只隔数重山。
 春风又绿江南岸，明月何时照我还？
 ```
----
+
 ## 断句
 ### 宋代：苏麟
 ```
 近水楼台先得月，向阳花木易为春。
 ```
----
+
 ## 过零丁洋
 ### 宋代：文天祥
 ```
@@ -75,7 +89,7 @@
 惶恐滩头说惶恐，零丁洋里叹零丁。
 人生自古谁无死？留取丹心照汗青。
 ```
----
+
 ## 寄黄几复
 ### 宋代：黄庭坚
 ```
@@ -84,7 +98,7 @@
 持家但有四立壁，治病不蕲三折肱。
 想见读书头已白，隔溪猿哭瘴溪藤。(想见 一作：想得)
 ```
----
+
 ## 十一月四日风雨大作二首
 ### 宋代：陆游
 ```
@@ -94,7 +108,7 @@
 僵卧孤村不自哀，尚思为国戍轮台。
 夜阑卧听风吹雨，铁马冰河入梦来。
 ```
----
+
 ## 游山西村
 ### 宋代：陆游
 ```
@@ -103,21 +117,21 @@
 箫鼓追随春社近，衣冠简朴古风存。
 从今若许闲乘月，拄杖无时夜叩门。
 ```
----
+
 ## 示儿
 ### 宋代：陆游
 ```
 死去元知万事空，但悲不见九州同。
 王师北定中原日，家祭无忘告乃翁。
 ```
----
+
 ## 冬夜读书示子聿
 ### 宋代：陆游
 ```
 古人学问无遗力，少壮工夫老始成。
 纸上得来终觉浅，绝知此事要躬行。
 ```
----
+
 ## 秋夜将晓出篱门迎凉有感二首
 ### 宋代：陆游
 ```
@@ -127,7 +141,7 @@
 三万里河东入海，五千仞岳上摩天。
 遗民泪尽胡尘里，南望王师又一年。
 ```
----
+
 ## 书愤五首·其一
 ### 宋代：陆游
 ```
@@ -136,7 +150,7 @@
 塞上长城空自许，镜中衰鬓已先斑。
 出师一表真名世，千载谁堪伯仲间！
 ```
----
+
 ## 临安春雨初霁
 ### 宋代：陆游
 ```
@@ -145,56 +159,56 @@
 矮纸斜行闲作草，晴窗细乳戏分茶。
 素衣莫起风尘叹，犹及清明可到家。
 ```
----
+
 ## 夏日绝句
 ### 宋代：李清照
 ```
 生当作人杰，死亦为鬼雄。
 至今思项羽，不肯过江东。
 ```
----
+
 ## 雪梅·其一
 ### 宋代：卢梅坡
 ```
 梅雪争春未肯降，骚人搁笔费评章。
 梅须逊雪三分白，雪却输梅一段香。
 ```
----
+
 ## 春日
 ### 宋代：朱熹
 ```
 胜日寻芳泗水滨，无边光景一时新。
 等闲识得东风面，万紫千红总是春。
 ```
----
+
 ## 观书有感二首·其一
 ### 宋代：朱熹
 ```
 半亩方塘一鉴开，天光云影共徘徊。
 问渠那得清如许？为有源头活水来。(那 通：哪)
 ```
----
+
 ## 劝学诗 / 偶成
 ### 宋代：朱熹
 ```
 少年易老学难成，一寸光阴不可轻。
 未觉池塘春草梦，阶前梧叶已秋声。
 ```
----
+
 ## 题临安邸
 ### 宋代：林升
 ```
 山外青山楼外楼，西湖歌舞几时休？
 暖风熏得游人醉，直把杭州作汴州。
 ```
----
+
 ## 小池
 ###宋代：杨万里
 ```
 泉眼无声惜细流，树阴照水爱晴柔。
 小荷才露尖尖角，早有蜻蜓立上头。
 ```
----
+
 ## 约客
 ### 宋代：赵师秀
 ```
